--- a/Index.html
+++ b/Index.html
@@ -15,7 +15,7 @@
     <nav>
       <div class="nav-wrapper mycolor">
 
-        <div class="nav-wrapper container"><a id="logo-container" href="#" class="brand-logo">TosGo</a>
+        <div class="nav-wrapper container"><a id="logo-container" href="Index.html" class="brand-logo">TosGo</a>
           <ul class="right hide-on-med-and-down nav-ul">
             <li><a href="Index.html">Home</a></li>
             <li><a href="Travel.html">WhereToGo</a></li>
@@ -124,7 +124,7 @@
     <center>
       <footer>
         <div class="foot_logo">
-          <a href="index.html">TosGo</a>
+          <a href="Index.html">TosGo</a>
         </div>
         <h6>Know Better | Go better</h6>
         <p>&emsp;&emsp;2018 TosGo LLC All rights reserved. Terms of Use | Privacy Policy | Site Map</p>
