--- a/Kandal.html
+++ b/Kandal.html
@@ -12,58 +12,58 @@
 	<div class="navbar-fixed">
 		<nav>
 			<div class="nav-wrapper mycolor">
-				<a href="Index.html" class="brand-logo">TosGo</a>
-				<ul id="nav-mobile" class="right hide-on-med-and-down nav-ul">
-					<li><a href="Index.html">Home</a></li>
-					<li><a href="Travel.html">WhereToGo</a></li>
-					<li><a href="Career.html">Career</a></li>
-					<li><a href="About.html">AboutUs</a></li>
-				</ul>
-			</div>
-		</nav>
-	</div>
-
-	<img src="./img/cover/kandal-resort.jpg" class="responsive_img">
-	<div class="container">
-		<center>
-			<div class="title">
-				ខេត្តកណ្តាល
-			</div>
-		</center>
-		<p align="justify">
-			&emsp;&emsp;&emsp;កណ្ដាល (ការបញ្ចេញសំឡេងខ្មែរ: [kɑnn'daːl], អានថា: កន់'ដាល) គឺជាខេត្តនៃប្រទេសកម្ពុជាដែលមានទីតាំងនៅប៉ែកអាគ្នេយ៍នៃប្រទេសនេះ។ ខេត្តមានព្រំដែន ខាងកើតជាប់ខេត្តព្រៃវែង ខាងត្បូងជាប់ ខេត្តតាកែវ ខាងកើតឈៀងខាងជើងជាប់ ខេត្តកំពង់ចាម ខាងកើតឈៀងខាងត្បូងជាប់នឹង
-			វៀតណាម។ ទីរួមខេត្ត គឺក្រុងតាខ្មៅ ដែលមានចំងាយ ១១ គម ខាងត្បូងនៃ[ភ្នំពេញ]។ កណ្ដាលគឺជាខេត្តមួយក្នុងចំណោមខេត្តដែលស្ដុកស្ដម្ភជាងគេក្នុងប្រទេស។ ខេត្តកណា្តលមាន ស្រុកចំនួន ១០, ក្រុង ១, ឃុំ-សង្កាត់ ១៤​៦ ភូមិចំនួន ១០៨៧ មានប្រជាជនចំនួន ១០៧៥១២៥ នាក់ ហើយខេត្តនេះផងដែរមានផែ្ទដី
-			៣៥៦៨ សហាតិមាត្រការ៉េ។ ប្រជាជនខេត្តកណា្តលភាគច្រើនប្រកបរបរកសិកម្ម ដាំដំណាំ ក្រៅពីនេះរដូវធើ្វស្រែ ពួកគាត់មានរបរមួយទៀតគឺ របរឡើងត្នោត និងធើ្វស្រូវប្រាំង ព្រមទាំងដាំដំណាំផ្សេងៗទៀត ដើម្បីផ្គត់ផ្គង់ជីវភាពគ្រួសាររបស់ខ្លួន។
-		</p>
-		<div class="row">
-			<div class="col s6">
-				<img src="./img/gallery/Kandal/kandal-location.png" class="responsive_img">
-			</div>
-			<div class="col s6">
-				&emsp;&emsp;&emsp;ខេត្តកណ្ដាលព័ទ្ធជុំវិញរាជធានីភ្នំពេញទាំងមូល។ ខេត្តនេះក៏ជាប៉ែកមួយនៃផ្ទៃទីក្រុងមេភ្នំពេញធំជាងគេដែលមានប្រជាជនមួយលាននាក់រស់នៅក្នុង និង ព័ទ្ធជុំវិញខេត្ត។ កាលណាយើងធ្វើដំណើរចេញពីភ្នំពេញ ព្រំដែនរវាងខេត្ត-រាជធានីទាំងពីរស្ទើរតែមើលមិនដឹង។ ខេត្តនេះប្រកបដោយផ្ទៃដីសើមទំនាបមានលក្ខណៈធម្មតា
-				ដែលគ្របដណ្ដប់ដោយវាលស្រែ និង ដីដាំដំណាំកសិកម្មដទៃទៀត។ រយៈកំពស់មធ្យមរបស់ខេត្តមិនលើសពី ១០ មាត្រ លើកំរិតទឹកសមុទ្រឡើយ។ ខេត្តក៏មានលក្ខណៈពិសេសដោយសារទន្លេធំបំផុតពីរនៅក្នុងប្រទេសនេះហូរកាត់ ទន្លេទាំងពីរនោះគឺ ទន្លេបាសាក់ និង មេគង្គ។ <br> &emsp;&emsp;&emsp;ខេត្តនេះមានអាកាសធាតុក្ដៅហើយសើមតាមបែបនិវត្តន៍។
-				រដូវខ្យល់មូសុងជាធម្មតាចាប់ផ្ដើមនៅខែ ឧសភា និង មានរហូតដល់ខែ តុលា ដែលក្រៅពីនោះពេញមួយឆ្នាំគឺជារដូវប្រាំង។ រយៈពេលក្ដៅគួរសមបំផុតប្រចាំឆ្នាំចាប់ផ្ដើមនៅរវាងខែ មីនា និង ឧសភា ពេលអាកាសធាតុត្រជាក់បំផុតគឺចាប់ពី ខែ វិច្ឆិកា រហូត ខែ មីនា។ <br><br> &emsp;&emsp;&emsp;ខេត្តកណ្តាល​​ជា​ឈ្មោះខេត្ត​មួយ​ក្នុង​រចនាសម្ព័ន្ធគ្រប់គ្រង​រដ្ឋបាល​នៃ​ប្រទេស​កម្ពុជា
-				ពាក្យ​នេះ​ពុំ​ដឹង​ជា​មាន​ប្រវត្តិ​និង​ប្រភពដើម​យ៉ាងណា​ទេ​តែ​តាម​ការ​ស្រាវ​ជ្រាវ​បាន​ឱ្យ​ដឹង​ថា​ក្នុង​​ផែន​ដី​ព្រះ​បាទ​នរោត្តម (១៨៦០-១៩០៤) និង​ផែន​ដី​ព្រះបាទ​ស៊ីសុវត្ថិ (១៩០៤-១៩២៧) ព្រះរាជាណាចក្រ​កម្ពុជា​ចែក​ចេញ​ជា​ច្រើន​ខេត្ត​ក្នុង​នោះ​ពុំ​មាន​ឈ្មោះខេត្ត​កណ្តាលទេ
-				កាលនោះឈ្មោះខេត្តមួយ​ចំនួន​ជា​ឈ្មោះស្រុក​សព្វថ្ងៃ​ដូចជា​ ស្រុកល្វាឯម ស្រុកស្អាង ស្រុកកោះធំ ស្រុកកណ្តាលស្ទឹង​ ជាដើម (ឯកសារមហាបុរសខ្មែរ)។ បើតាម​កំណត់​ត្រា​ចារឹក​នៅចេតិយអង្គឌួង​និង​ចេតិយ​បុរាណ​ជាច្រើន​ទៀត​លើ​ភ្នំព្រះ​រាជទ្រព្យ​ ស្រុកពញាឮ យើងយល់ថា​ក្នុង​រាជ​ព្រះបាទ​នរោត្តម
-				ស៊ីសុវត្ថិ ភ្នំព្រះរាជទ្រព្យនេះ​ស្ថិត​ក្នុង ស្រុកសំរោងទង​ (ឈ្មោះ​ស្រុកមួយរបស់ខេត្តកំពង់ស្ពឺ
-			</div>
-			<p>
-				&emsp;សព្វថ្ងៃ) តែ​ក្រោយ​មកក្នុង​រាជ្យ​ព្រះ​បាទ​ស៊ីសុវត្ថិ-​មុនីវង្ស (១៩២៧-១៩៤១) មាន​ការ​រៀបចំ​ព្រំ​ប្រទល់​ខេត្ត​ជា​ថ្មី​ទើប​បាន​ជា​ភ្នំព្រះ​រាជទ្រព្យត្រូវ​ស្ថិត​នៅ​ក្នុង​ខេត្ត​កណ្តាល​វិញ (កំណត់ត្រា​ចារឹកចេតិយ​ព្រះ​ស៊ីសុវត្ថិ) ដូចនេះ យើង​អាច​សន្និដ្ឋាន​&emsp;បាន​ថា​ខេត្ត​កណ្តាល​កើត​មាន​ក្នុង​រចនា​សម្ព័ន្ធរដ្ឋបាល​ចាប់​តាំង​ពី​រាជ្យ​ព្រះ​បាទ​ស៊ីសុវត្ថិ​-មុនីវង្ស
-				សម័យដែល​អាណានិគម​បារាំង​គ្រប់គ្រង។
-			</p>
-
-			<img src="./img/gallery/Kandal/kandal-resort-2.jpg" class="responsive_img">
-		</div>
-		<!-- Footer -->
-		<center>
-			<footer>
-				<div class="foot_logo">
-					<a href="index.html">TosGo</a>
+				<div class="nav-wrapper container"><a id="logo-container" href="Index.html" class="brand-logo">TosGo</a>
+					<ul id="nav-mobile" class="right hide-on-med-and-down nav-ul">
+						<li><a href="Index.html">Home</a></li>
+						<li><a href="Travel.html">WhereToGo</a></li>
+						<li><a href="Career.html">Career</a></li>
+						<li><a href="About.html">AboutUs</a></li>
+					</ul>
 				</div>
-				<p class="Term_of_Use">&emsp;&emsp;2018 TosGo LLC All rights reserved. Terms of Use | Privacy Policy | Site Map</p>
-				<a href="#" class="feed_back">feedback@TosGo.com</a>
-			</footer>
-		</center>
+		</nav>
+		</div>
+
+		<img src="./img/cover/kandal-resort.jpg" class="responsive_img">
+		<div class="container">
+			<center>
+				<div class="title">
+					ខេត្តកណ្តាល
+				</div>
+			</center>
+			<p align="justify">
+				&emsp;&emsp;&emsp;កណ្ដាល (ការបញ្ចេញសំឡេងខ្មែរ: [kɑnn'daːl], អានថា: កន់'ដាល) គឺជាខេត្តនៃប្រទេសកម្ពុជាដែលមានទីតាំងនៅប៉ែកអាគ្នេយ៍នៃប្រទេសនេះ។ ខេត្តមានព្រំដែន ខាងកើតជាប់ខេត្តព្រៃវែង ខាងត្បូងជាប់ ខេត្តតាកែវ ខាងកើតឈៀងខាងជើងជាប់ ខេត្តកំពង់ចាម ខាងកើតឈៀងខាងត្បូងជាប់នឹង
+				វៀតណាម។ ទីរួមខេត្ត គឺក្រុងតាខ្មៅ ដែលមានចំងាយ ១១ គម ខាងត្បូងនៃ[ភ្នំពេញ]។ កណ្ដាលគឺជាខេត្តមួយក្នុងចំណោមខេត្តដែលស្ដុកស្ដម្ភជាងគេក្នុងប្រទេស។ ខេត្តកណា្តលមាន ស្រុកចំនួន ១០, ក្រុង ១, ឃុំ-សង្កាត់ ១៤​៦ ភូមិចំនួន ១០៨៧ មានប្រជាជនចំនួន ១០៧៥១២៥ នាក់ ហើយខេត្តនេះផងដែរមានផែ្ទដី
+				៣៥៦៨ សហាតិមាត្រការ៉េ។ ប្រជាជនខេត្តកណា្តលភាគច្រើនប្រកបរបរកសិកម្ម ដាំដំណាំ ក្រៅពីនេះរដូវធើ្វស្រែ ពួកគាត់មានរបរមួយទៀតគឺ របរឡើងត្នោត និងធើ្វស្រូវប្រាំង ព្រមទាំងដាំដំណាំផ្សេងៗទៀត ដើម្បីផ្គត់ផ្គង់ជីវភាពគ្រួសាររបស់ខ្លួន។
+			</p>
+			<div class="row">
+				<div class="col s6">
+					<img src="./img/gallery/Kandal/kandal-location.png" class="responsive_img">
+				</div>
+				<div class="col s6">
+					&emsp;&emsp;&emsp;ខេត្តកណ្ដាលព័ទ្ធជុំវិញរាជធានីភ្នំពេញទាំងមូល។ ខេត្តនេះក៏ជាប៉ែកមួយនៃផ្ទៃទីក្រុងមេភ្នំពេញធំជាងគេដែលមានប្រជាជនមួយលាននាក់រស់នៅក្នុង និង ព័ទ្ធជុំវិញខេត្ត។ កាលណាយើងធ្វើដំណើរចេញពីភ្នំពេញ ព្រំដែនរវាងខេត្ត-រាជធានីទាំងពីរស្ទើរតែមើលមិនដឹង។ ខេត្តនេះប្រកបដោយផ្ទៃដីសើមទំនាបមានលក្ខណៈធម្មតា
+					ដែលគ្របដណ្ដប់ដោយវាលស្រែ និង ដីដាំដំណាំកសិកម្មដទៃទៀត។ រយៈកំពស់មធ្យមរបស់ខេត្តមិនលើសពី ១០ មាត្រ លើកំរិតទឹកសមុទ្រឡើយ។ ខេត្តក៏មានលក្ខណៈពិសេសដោយសារទន្លេធំបំផុតពីរនៅក្នុងប្រទេសនេះហូរកាត់ ទន្លេទាំងពីរនោះគឺ ទន្លេបាសាក់ និង មេគង្គ។ <br> &emsp;&emsp;&emsp;ខេត្តនេះមានអាកាសធាតុក្ដៅហើយសើមតាមបែបនិវត្តន៍។
+					រដូវខ្យល់មូសុងជាធម្មតាចាប់ផ្ដើមនៅខែ ឧសភា និង មានរហូតដល់ខែ តុលា ដែលក្រៅពីនោះពេញមួយឆ្នាំគឺជារដូវប្រាំង។ រយៈពេលក្ដៅគួរសមបំផុតប្រចាំឆ្នាំចាប់ផ្ដើមនៅរវាងខែ មីនា និង ឧសភា ពេលអាកាសធាតុត្រជាក់បំផុតគឺចាប់ពី ខែ វិច្ឆិកា រហូត ខែ មីនា។ <br><br> &emsp;&emsp;&emsp;ខេត្តកណ្តាល​​ជា​ឈ្មោះខេត្ត​មួយ​ក្នុង​រចនាសម្ព័ន្ធគ្រប់គ្រង​រដ្ឋបាល​នៃ​ប្រទេស​កម្ពុជា
+					ពាក្យ​នេះ​ពុំ​ដឹង​ជា​មាន​ប្រវត្តិ​និង​ប្រភពដើម​យ៉ាងណា​ទេ​តែ​តាម​ការ​ស្រាវ​ជ្រាវ​បាន​ឱ្យ​ដឹង​ថា​ក្នុង​​ផែន​ដី​ព្រះ​បាទ​នរោត្តម (១៨៦០-១៩០៤) និង​ផែន​ដី​ព្រះបាទ​ស៊ីសុវត្ថិ (១៩០៤-១៩២៧) ព្រះរាជាណាចក្រ​កម្ពុជា​ចែក​ចេញ​ជា​ច្រើន​ខេត្ត​ក្នុង​នោះ​ពុំ​មាន​ឈ្មោះខេត្ត​កណ្តាលទេ
+					កាលនោះឈ្មោះខេត្តមួយ​ចំនួន​ជា​ឈ្មោះស្រុក​សព្វថ្ងៃ​ដូចជា​ ស្រុកល្វាឯម ស្រុកស្អាង ស្រុកកោះធំ ស្រុកកណ្តាលស្ទឹង​ ជាដើម (ឯកសារមហាបុរសខ្មែរ)។ បើតាម​កំណត់​ត្រា​ចារឹក​នៅចេតិយអង្គឌួង​និង​ចេតិយ​បុរាណ​ជាច្រើន​ទៀត​លើ​ភ្នំព្រះ​រាជទ្រព្យ​ ស្រុកពញាឮ យើងយល់ថា​ក្នុង​រាជ​ព្រះបាទ​នរោត្តម
+					ស៊ីសុវត្ថិ ភ្នំព្រះរាជទ្រព្យនេះ​ស្ថិត​ក្នុង ស្រុកសំរោងទង​ (ឈ្មោះ​ស្រុកមួយរបស់ខេត្តកំពង់ស្ពឺ
+				</div>
+				<p>
+					&emsp;សព្វថ្ងៃ) តែ​ក្រោយ​មកក្នុង​រាជ្យ​ព្រះ​បាទ​ស៊ីសុវត្ថិ-​មុនីវង្ស (១៩២៧-១៩៤១) មាន​ការ​រៀបចំ​ព្រំ​ប្រទល់​ខេត្ត​ជា​ថ្មី​ទើប​បាន​ជា​ភ្នំព្រះ​រាជទ្រព្យត្រូវ​ស្ថិត​នៅ​ក្នុង​ខេត្ត​កណ្តាល​វិញ (កំណត់ត្រា​ចារឹកចេតិយ​ព្រះ​ស៊ីសុវត្ថិ) ដូចនេះ យើង​អាច​សន្និដ្ឋាន​&emsp;បាន​ថា​ខេត្ត​កណ្តាល​កើត​មាន​ក្នុង​រចនា​សម្ព័ន្ធរដ្ឋបាល​ចាប់​តាំង​ពី​រាជ្យ​ព្រះ​បាទ​ស៊ីសុវត្ថិ​-មុនីវង្ស
+					សម័យដែល​អាណានិគម​បារាំង​គ្រប់គ្រង។
+				</p>
+
+				<img src="./img/gallery/Kandal/kandal-resort-2.jpg" class="responsive_img">
+			</div>
+			<!-- Footer -->
+			<center>
+				<footer>
+					<div class="foot_logo">
+						<a href="Index.html">TosGo</a>
+					</div>
+					<p class="Term_of_Use">&emsp;&emsp;2018 TosGo LLC All rights reserved. Terms of Use | Privacy Policy | Site Map</p>
+					<a href="#" class="feed_back">feedback@TosGo.com</a>
+				</footer>
+			</center>
 </body>
 
 </html>
