--- a/Kep.html
+++ b/Kep.html
@@ -13,79 +13,79 @@
 	<div class="navbar-fixed">
 		<nav>
 			<div class="nav-wrapper mycolor">
-				<a href="Index.html" class="brand-logo">TosGo</a>
-				<ul id="nav-mobile" class="right hide-on-med-and-down nav-ul">
-					<li><a href="Index.html">Home</a></li>
-					<li><a href="Travel.html">WhereToGo</a></li>
-					<li><a href="Career.html">Career</a></li>
-					<li><a href="About.html">AboutUs</a></li>
-				</ul>
-			</div>
+				<div class="nav-wrapper container"><a id="logo-container" href="Index.html" class="brand-logo">TosGo</a>
+					<ul id="nav-mobile" class="right hide-on-med-and-down nav-ul">
+						<li><a href="Index.html">Home</a></li>
+						<li><a href="Travel.html">WhereToGo</a></li>
+						<li><a href="Career.html">Career</a></li>
+						<li><a href="About.html">AboutUs</a></li>
+					</ul>
+				</div>
 		</nav>
-	</div>
+		</div>
 
-	<img src="./img/gallery/kep/banner_kep_city.jpg" class="responsive_img">
-	<div class="container">
-		<center>
-			<div class="title">
-				ខេត្តកែប
-			</div>
-			<p>
-				&emsp;&emsp;តាមរឿងនិទានតៗគ្នាទាក់ទងនឹងឈ្មោះកែប គឺដើមឡើយមានស្តេចមួយ អង្គព្រះនាម សាគររាជ ដែលមានមន្តអាគម​ ខ្លាំងពូកែបានប្រើសិល្ប៍សេកមន្ត អាគមគាថាសណ្តំមេទ័ពម្នាក់នៅអង្គរធំ ហើយបានលួចយកសេះសរបស់មេទ័ព នោះមក ជាមួយពលសេនាខ្លួនមួយចំនួន។ ពេលមេទ័ពផ្អើលឆោឡោដេញតាមចាប់ស្តេចសាគររាជ
-				និង ពលសេនាក៏បានភៀស ខ្លួនមកដល់ភូមិភាគនិរតីតំបន់ឆ្នេរសមុទ្រ។ ពេលឈប់សម្រាកនៅមាត់សមុទ្រ ទ័ពដែលដេញតាមពីក្រោយក៏ មកដល់។ ដោយមានការភិតភ័យស្តេច សាគររាជ បានឡើងបំផាយសេះ ប៉ុន្តែ សេះសនោះក៏កញ្ជ្រោលឡើង ធ្វើឱ្យព្រះអង្គធ្លាក់ពីលើសេះ ឯកែបសេះក៏ធ្លាក់មក ជាមួយនៅទីនោះដែរ។
-				ដោយទ័ពដេញតាមកាន់តែមកកៀក ព្រះអង្គក៏ភិតភ័យ ឡើងផាយសេះ រត់ភៀសខ្លួនជាបន្តទៀត ដោយទុក ចោលកែបសេះនៅទីនោះ។ តំណមកគេក៏បានហៅ ទីនោះឈ្មោះថា កែបសេះ ហើយយូរៗទៅក៏ហៅ ខ្លីមកត្រឹមពាក្យ “កែប” រហូតដល់សព្វថ្ងៃនេះ។
-			</p>
+		<img src="./img/gallery/kep/banner_kep_city.jpg" class="responsive_img">
+		<div class="container">
 			<center>
-				<font face="Khmer OS Muol Light" size="6" color="#00a680">
-					ឆ្នេរសមុទ្រកែប
-				</font>
+				<div class="title">
+					ខេត្តកែប
+				</div>
 				<p>
-					&emsp;&emsp; ខេត្ត​កែបជាខេត្ត​មួយ​ក្នុង​ចំណោម​ខេត្ត​ទាំង​៤​ដែល​ស្ថិត​នៅតាមឆ្នេរសមុទ្រភាគនិរតីនៃប្រទេសកម្ពុជា។ ខេត្តកែបស្ថិតនៅមិនប៉ុន្មានសហាតិមាត្រ​ពីព្រំដែនកម្ពុជា-វៀតណាមឡើយ។ ក្រុងកែបធ្លាប់ជាទីក្រុងឆ្នេរសមុទ្រដ៏ពេញនិយមរបស់​កម្ពុជា។ ឆ្នេរសមុទ្រនៅក្រុងកែបជាឆ្នេរព្រៃកោងកាង
-					និង គ្រួសខ្មៅៗ ។ក្រុងកែបសំបូរគ្រឿងសមុទ្រថោកៗតែឆ្ងាញ់ ជាពិសេសគឺ ក្ដាមសមុទ្រ។ ខេត្តកែបក៍មាននូវផលិតផលជាច្រើនផងដែរដូចជា ម្រេច អំបិល​​ ផ្លែ​ឈើ ធុរ៉េន ស្វាយ ដូង សាវម៉ាវ ហើយនិងមានតំបន់ទេសចរណ៏ ជាច្រើនដូចជា ឆ្នេរសមុទ្រ ភ្នំ កោះ រូងភ្នំ​ និង រមណីយដ្ឋាន ជាច្រើន
-					។ ជាពិសេសក៍មានសណ្ឋាគារសម្រាប់ ភ្ញៀវទេសចរណ៍ជាតិ និង អន្តរជាតិសម្រាប់ស្នាក់នៅទីនោះផងដែរ។
+					&emsp;&emsp;តាមរឿងនិទានតៗគ្នាទាក់ទងនឹងឈ្មោះកែប គឺដើមឡើយមានស្តេចមួយ អង្គព្រះនាម សាគររាជ ដែលមានមន្តអាគម​ ខ្លាំងពូកែបានប្រើសិល្ប៍សេកមន្ត អាគមគាថាសណ្តំមេទ័ពម្នាក់នៅអង្គរធំ ហើយបានលួចយកសេះសរបស់មេទ័ព នោះមក ជាមួយពលសេនាខ្លួនមួយចំនួន។ ពេលមេទ័ពផ្អើលឆោឡោដេញតាមចាប់ស្តេចសាគររាជ
+					និង ពលសេនាក៏បានភៀស ខ្លួនមកដល់ភូមិភាគនិរតីតំបន់ឆ្នេរសមុទ្រ។ ពេលឈប់សម្រាកនៅមាត់សមុទ្រ ទ័ពដែលដេញតាមពីក្រោយក៏ មកដល់។ ដោយមានការភិតភ័យស្តេច សាគររាជ បានឡើងបំផាយសេះ ប៉ុន្តែ សេះសនោះក៏កញ្ជ្រោលឡើង ធ្វើឱ្យព្រះអង្គធ្លាក់ពីលើសេះ ឯកែបសេះក៏ធ្លាក់មក ជាមួយនៅទីនោះដែរ។
+					ដោយទ័ពដេញតាមកាន់តែមកកៀក ព្រះអង្គក៏ភិតភ័យ ឡើងផាយសេះ រត់ភៀសខ្លួនជាបន្តទៀត ដោយទុក ចោលកែបសេះនៅទីនោះ។ តំណមកគេក៏បានហៅ ទីនោះឈ្មោះថា កែបសេះ ហើយយូរៗទៅក៏ហៅ ខ្លីមកត្រឹមពាក្យ “កែប” រហូតដល់សព្វថ្ងៃនេះ។
 				</p>
-				<img src="./img/gallery/kep/gggggg.jpg" width="50%">
-				<br><br>
-				<font face="Khmer OS Muol Light" size="6" color="#00a680">
-					កោះទន្សាយ
-				</font> <br>
-				<img src="./img/gallery/kep/kep-city-960x640.jpg" width="100%">
-				<p>
-					កោះទន្សាយតាំងនៅប្រហែល ៤,៥ សហាតិមាត្រ ភាគនិរតីនៃខេត្តកែប។ ពួកអ្នកទេសចរណ៍ត្រូវបានទាក់ទាញដោយឆ្នេរខ្សាច់សក្បុសពីរកន្លែង និងទឹកសមុទ្ររាក់ដែលសាកសមសម្រាប់ការហែលទឹកលេង។ បាតសមុទ្រមាន ផ្កាថ្មប៉ប្រះទឹកចម្រុះផ្សេងៗ សត្វ និង រុក្ខជាតិសមុទ្រដែលទាក់ទាញឱ្យមានពួកអ្នកស្រាវជ្រាវ
-					និង អ្នកបរិស្ថានវិទ្យាចូលមកសិក្សា។ ឈ្មោះកោះទន្សាយបានមកពីពាក្យថា រំសាយ។ កាលមួយនោះដើម្បីចៀសឱ្យផុតពីកងទ័ពរបស់នាយបញ្ជាការ ព្រះអង្គម្ចាស់សាគររាជមានការអស់សង្ឃឹមយ៉ាងខ្លាំងដោយសារតែពួករាជបរិវាររបស់ទ្រង់មានសភាពនឿយហត់អស់ទៅហើយ។ ព្រះអង្គបានដឹកនាំកងទ័ពដែលសេសសល់ឆ្លងកាត់សមុទ្រទៅកាន់កោះមួយនៅចំពីមុខក្រុងកែប
-					ដែលជាកន្លែងកងទ័ពបានចែកផ្លូវគ្នា។ ដោយហេតុនោះហើយ កោះនេះក៏ត្រូវគេហៅថាកោះរំសាយ កោះអម្សាយ កោះអន្សាយ និង កោះទន្សាយ ដែលយើងបានស្គាល់ដូចសព្វថ្ងៃនេះ។
-				</p>
-				<font face="Khmer OS Muol Light" size="6" color="#00a680">
-					កោះពោធិ៍
-				</font>
-				<p>
-					&emsp;&emsp;កោះពោធិ៍គឺជាកោះមួយទៀតដែលមានទេសភាពស្រស់ស្អាតដែល ត្រូវនឹងចំណូលចិត្តចំពោះភ្ញៀវដែលនិយមគោលដៅបរិស្ថានទេសចរណ៍ ហើយ វាក៏មានឆ្នេរខ្សាច់ល្អប្រកបដោយភាពស្ងប់ស្ងាត់ផងដែរ។ កោះនេះលម្អដោយឆ្នេរខ្សាច់ពណ៌ពងមាន់ ព័ទ្ធជុំវិញដោយព្រៃឈើពណ៌បៃតងស្រស់។ កោះពោធិ៍ គឺជាភូមិដ្ឋានរបស់អ្នកនេសាទប្រមាណជា
-					៥០ គ្រួសារ ដែលរស់នៅ យ៉ាងស្ងាត់ស្ងៀមលើកោះនៃភូមិសាស្ត្រខេត្តកែបនេះ។ វាក៏ដូចនឹងសហគមន៍ អ្នកនេសាទឯទៀតៗផងដែរ អ្នកភូមិកោះពោធិ៍រស់នៅដោយសេចក្តីថ្លៃថ្នូរ និង សកម្មក្នុងអាជីពជាអ្នកនេសាទរបស់ខ្លួន។ ប្រជាពលរដ្ឋនៅកោះពោធិ៍ ១០០ ភាគរយគឺជាអ្នកនេសាទ ពួកគេពុំដែលចាកចេញពីមហាសាគរទៅរកដី
-					គោកឡើយ។ ទីនោះពុំមានសាលារៀនសម្រាប់កុមារ គ្មានមន្ទីរពេទ្យ ហើយ ក៏គ្មានអគ្គិសនីប្រើប្រាស់ដែរ។ វាជាភូមិដាច់ស្រយាលដែលមានចម្ងាយប្រហែល ១០ សហាតិមាត្រពីក្រុងកែប។
-				</p>
-				<img src="./img/gallery/kep/3355462.jpg" width="50%"> <br><br>
-				<font face="Khmer OS Muol Light" size="6" color="#00a680">
-					ផ្សារសេះសរ
-				</font><br><br>
-				<img src="./img/gallery/kep/kep-cambodia-restaurant.jpg" width="48%" height="380" align="right">
-				<img src="./img/gallery/kep/kep-city-960x640.jpg" width="48%" align="left"><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-				<p>
-					&emsp;&emsp;&emsp;&emsp;ផ្សារសេះសរគឺជាផ្សារមួួយដែលមានទីតាំងស្ថិត​នៅ​ក្នុងខេត្តកែបដែលមានចំងាយពីទីរួមខេត្តកែបប្រហែល៥គីឡូ។ផ្សារបានផ្ដល់អោយប្រជាជនមានកន្លែងលក់ដូរឬទិញទំនិញនៅក្នុងទីផ្សារនោះហើយក័មានអនាម័យល្អដល់ប្រជាជនដែលបានលក់នៅទីនោះផង ដែរដើម្បីអោយប្រជាជនមានសុខភាពល្អ។ហើយនៅទីនោះមានលក់ដូចជាត្រី​​​​
-					សាច់គោ​ សាច់ជ្រូក បន្លែរ ក្ដាម បង្គារ​ មឹកដែលបានយកមកពីតំបន់ផ្សេងគ្នាហើយក័មានលក់របស់ប្រើប្រាស់ជាច្រើនផងដែរដើម្បីបំពេញតំរូវការរបស់ប្រជាជននៅក្នុងតំបន់ផងដែរ។ទីផ្សារបានជួយអោយប្រជាជនមានការរីកចំរើននឹងជីវភាពធូរធារហើយសង្គមក័រីកចំរើនទៅតាមនឹងផងដូច្នេះហើយទើបមានការបង្កើតទីផ្សារអោយបានច្រើននៅក្នុងតំបន់។
-				</p>
-			</center>
+				<center>
+					<font face="Khmer OS Muol Light" size="6" color="#00a680">
+						ឆ្នេរសមុទ្រកែប
+					</font>
+					<p>
+						&emsp;&emsp; ខេត្ត​កែបជាខេត្ត​មួយ​ក្នុង​ចំណោម​ខេត្ត​ទាំង​៤​ដែល​ស្ថិត​នៅតាមឆ្នេរសមុទ្រភាគនិរតីនៃប្រទេសកម្ពុជា។ ខេត្តកែបស្ថិតនៅមិនប៉ុន្មានសហាតិមាត្រ​ពីព្រំដែនកម្ពុជា-វៀតណាមឡើយ។ ក្រុងកែបធ្លាប់ជាទីក្រុងឆ្នេរសមុទ្រដ៏ពេញនិយមរបស់​កម្ពុជា។ ឆ្នេរសមុទ្រនៅក្រុងកែបជាឆ្នេរព្រៃកោងកាង
+						និង គ្រួសខ្មៅៗ ។ក្រុងកែបសំបូរគ្រឿងសមុទ្រថោកៗតែឆ្ងាញ់ ជាពិសេសគឺ ក្ដាមសមុទ្រ។ ខេត្តកែបក៍មាននូវផលិតផលជាច្រើនផងដែរដូចជា ម្រេច អំបិល​​ ផ្លែ​ឈើ ធុរ៉េន ស្វាយ ដូង សាវម៉ាវ ហើយនិងមានតំបន់ទេសចរណ៏ ជាច្រើនដូចជា ឆ្នេរសមុទ្រ ភ្នំ កោះ រូងភ្នំ​ និង រមណីយដ្ឋាន ជាច្រើន
+						។ ជាពិសេសក៍មានសណ្ឋាគារសម្រាប់ ភ្ញៀវទេសចរណ៍ជាតិ និង អន្តរជាតិសម្រាប់ស្នាក់នៅទីនោះផងដែរ។
+					</p>
+					<img src="./img/gallery/kep/gggggg.jpg" width="50%">
+					<br><br>
+					<font face="Khmer OS Muol Light" size="6" color="#00a680">
+						កោះទន្សាយ
+					</font> <br>
+					<img src="./img/gallery/kep/kep-city-960x640.jpg" width="100%">
+					<p>
+						កោះទន្សាយតាំងនៅប្រហែល ៤,៥ សហាតិមាត្រ ភាគនិរតីនៃខេត្តកែប។ ពួកអ្នកទេសចរណ៍ត្រូវបានទាក់ទាញដោយឆ្នេរខ្សាច់សក្បុសពីរកន្លែង និងទឹកសមុទ្ររាក់ដែលសាកសមសម្រាប់ការហែលទឹកលេង។ បាតសមុទ្រមាន ផ្កាថ្មប៉ប្រះទឹកចម្រុះផ្សេងៗ សត្វ និង រុក្ខជាតិសមុទ្រដែលទាក់ទាញឱ្យមានពួកអ្នកស្រាវជ្រាវ
+						និង អ្នកបរិស្ថានវិទ្យាចូលមកសិក្សា។ ឈ្មោះកោះទន្សាយបានមកពីពាក្យថា រំសាយ។ កាលមួយនោះដើម្បីចៀសឱ្យផុតពីកងទ័ពរបស់នាយបញ្ជាការ ព្រះអង្គម្ចាស់សាគររាជមានការអស់សង្ឃឹមយ៉ាងខ្លាំងដោយសារតែពួករាជបរិវាររបស់ទ្រង់មានសភាពនឿយហត់អស់ទៅហើយ។ ព្រះអង្គបានដឹកនាំកងទ័ពដែលសេសសល់ឆ្លងកាត់សមុទ្រទៅកាន់កោះមួយនៅចំពីមុខក្រុងកែប
+						ដែលជាកន្លែងកងទ័ពបានចែកផ្លូវគ្នា។ ដោយហេតុនោះហើយ កោះនេះក៏ត្រូវគេហៅថាកោះរំសាយ កោះអម្សាយ កោះអន្សាយ និង កោះទន្សាយ ដែលយើងបានស្គាល់ដូចសព្វថ្ងៃនេះ។
+					</p>
+					<font face="Khmer OS Muol Light" size="6" color="#00a680">
+						កោះពោធិ៍
+					</font>
+					<p>
+						&emsp;&emsp;កោះពោធិ៍គឺជាកោះមួយទៀតដែលមានទេសភាពស្រស់ស្អាតដែល ត្រូវនឹងចំណូលចិត្តចំពោះភ្ញៀវដែលនិយមគោលដៅបរិស្ថានទេសចរណ៍ ហើយ វាក៏មានឆ្នេរខ្សាច់ល្អប្រកបដោយភាពស្ងប់ស្ងាត់ផងដែរ។ កោះនេះលម្អដោយឆ្នេរខ្សាច់ពណ៌ពងមាន់ ព័ទ្ធជុំវិញដោយព្រៃឈើពណ៌បៃតងស្រស់។ កោះពោធិ៍ គឺជាភូមិដ្ឋានរបស់អ្នកនេសាទប្រមាណជា
+						៥០ គ្រួសារ ដែលរស់នៅ យ៉ាងស្ងាត់ស្ងៀមលើកោះនៃភូមិសាស្ត្រខេត្តកែបនេះ។ វាក៏ដូចនឹងសហគមន៍ អ្នកនេសាទឯទៀតៗផងដែរ អ្នកភូមិកោះពោធិ៍រស់នៅដោយសេចក្តីថ្លៃថ្នូរ និង សកម្មក្នុងអាជីពជាអ្នកនេសាទរបស់ខ្លួន។ ប្រជាពលរដ្ឋនៅកោះពោធិ៍ ១០០ ភាគរយគឺជាអ្នកនេសាទ ពួកគេពុំដែលចាកចេញពីមហាសាគរទៅរកដី
+						គោកឡើយ។ ទីនោះពុំមានសាលារៀនសម្រាប់កុមារ គ្មានមន្ទីរពេទ្យ ហើយ ក៏គ្មានអគ្គិសនីប្រើប្រាស់ដែរ។ វាជាភូមិដាច់ស្រយាលដែលមានចម្ងាយប្រហែល ១០ សហាតិមាត្រពីក្រុងកែប។
+					</p>
+					<img src="./img/gallery/kep/3355462.jpg" width="50%"> <br><br>
+					<font face="Khmer OS Muol Light" size="6" color="#00a680">
+						ផ្សារសេះសរ
+					</font><br><br>
+					<img src="./img/gallery/kep/kep-cambodia-restaurant.jpg" width="48%" height="380" align="right">
+					<img src="./img/gallery/kep/kep-city-960x640.jpg" width="48%" align="left"><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+					<p>
+						&emsp;&emsp;&emsp;&emsp;ផ្សារសេះសរគឺជាផ្សារមួួយដែលមានទីតាំងស្ថិត​នៅ​ក្នុងខេត្តកែបដែលមានចំងាយពីទីរួមខេត្តកែបប្រហែល៥គីឡូ។ផ្សារបានផ្ដល់អោយប្រជាជនមានកន្លែងលក់ដូរឬទិញទំនិញនៅក្នុងទីផ្សារនោះហើយក័មានអនាម័យល្អដល់ប្រជាជនដែលបានលក់នៅទីនោះផង ដែរដើម្បីអោយប្រជាជនមានសុខភាពល្អ។ហើយនៅទីនោះមានលក់ដូចជាត្រី​​​​
+						សាច់គោ​ សាច់ជ្រូក បន្លែរ ក្ដាម បង្គារ​ មឹកដែលបានយកមកពីតំបន់ផ្សេងគ្នាហើយក័មានលក់របស់ប្រើប្រាស់ជាច្រើនផងដែរដើម្បីបំពេញតំរូវការរបស់ប្រជាជននៅក្នុងតំបន់ផងដែរ។ទីផ្សារបានជួយអោយប្រជាជនមានការរីកចំរើននឹងជីវភាពធូរធារហើយសង្គមក័រីកចំរើនទៅតាមនឹងផងដូច្នេះហើយទើបមានការបង្កើតទីផ្សារអោយបានច្រើននៅក្នុងតំបន់។
+					</p>
+				</center>
 
-			<!-- Footer -->
-			<center>
-				<footer>
-					<div class="foot_logo">
-						<a href="index.html">TosGo</a>
-					</div>
-					<p class="Term_of_Use">&emsp;&emsp;&emsp;&emsp;2018 TosGo LLC All rights reserved. Terms of Use | Privacy Policy | Site Map</p>
-					<a href="#" class="feed_back">feedback@TosGo.com</a>
-				</footer>
-			</center>
-	</div>
+				<!-- Footer -->
+				<center>
+					<footer>
+						<div class="foot_logo">
+							<a href="Index.html">TosGo</a>
+						</div>
+						<p class="Term_of_Use">&emsp;&emsp;&emsp;&emsp;2018 TosGo LLC All rights reserved. Terms of Use | Privacy Policy | Site Map</p>
+						<a href="#" class="feed_back">feedback@TosGo.com</a>
+					</footer>
+				</center>
+		</div>
 </body>
 
 </html>
