--- a/Kompongcham.html
+++ b/Kompongcham.html
@@ -12,68 +12,68 @@
 	<div class="navbar-fixed">
 		<nav>
 			<div class="nav-wrapper mycolor">
-				<a href="Index.html" class="brand-logo">TosGo</a>
-				<ul id="nav-mobile" class="right hide-on-med-and-down nav-ul">
-					<li><a href="Index.html">Home</a></li>
-					<li><a href="Travel.html">WhereToGo</a></li>
-					<li><a href="Career.html">Career</a></li>
-					<li><a href="About.html">AboutUs</a></li>
-				</ul>
-			</div>
+				<div class="nav-wrapper container"><a id="logo-container" href="Index.html" class="brand-logo">TosGo</a>
+					<ul id="nav-mobile" class="right hide-on-med-and-down nav-ul">
+						<li><a href="Index.html">Home</a></li>
+						<li><a href="Travel.html">WhereToGo</a></li>
+						<li><a href="Career.html">Career</a></li>
+						<li><a href="About.html">AboutUs</a></li>
+					</ul>
+				</div>
 		</nav>
-	</div>
-
-	<center>
-		<img src=".\img\gallery\Kompongcham\Kampong-Cham-Province១.jpg " class="responsive_img">
-	</center>
-
-	<div class="container">
-		<div class="title">
-			<center>
-				ខេត្តកំពង់ចាម
-			</center>
 		</div>
 
-		<p>
-			&emsp;&emsp;កំពង់ចាម គឺជាខេត្ត នៃប្រទេសកម្ពុជា ដែលស្ថិតនៅវាលទំនាប កណ្ដាលនៃទន្លេមេគង្គ។ វាមានព្រំប្រទល់ជាប់នឹង ខេត្តកំពង់ឆ្នាំង នៅខាងលិចកំពង់ធំ និង ក្រចេះ នៅខាងជើង ត្បូងឃ្មុំ នៅខាងកើត និង ព្រៃវែង និង កណ្ដាលនៅខាងត្បូង។ កំពង់ចាម ជាផ្លូវការត្រូវបានបែងចែក
-			ទៅជាពីរខេត្តនៅថ្ងៃទី ៣១ ធ្នូ ២០១៣ ។ ផ្ទៃដីទាំងអស់នៅខាងលិច នៃទន្លេមេគង្គនៅតែ ជាកំពង់ចាមដដែល គ្រាដែលផ្ទៃដី នៅខាងកើតទន្លេបានក្លាយជា ខេត្តត្បូងឃ្មុំ។ មុនការបែងចែកនេះ កំពង់ចាមបាន លាតសន្ធឹងទៅខាងកើត ដល់ព្រំដែនអន្តរជាតិជាមួយ វៀតណាមធ្លាប់ជា ខេត្តធំទី១១ នៅកម្ពុជា
-			និងមានប្រជាជន ១ ៦៨០ ៦៩៤ នាក់ ដែលបានចាត់ទុកថាជាខេត្ត ដែលមានប្រជាជនច្រើនបំផុត ទីពីរក្នុងប្រទេស។ ទីរួមខេត្ត និង ក្រុងធំបំផុត របស់ខេត្តនេះ គឺក្រុងកំពង់ចាម។ ខេត្តកំពង់ចាមគឺជារាជធានីនៃខេត្តដែលមានឈ្មោះដូចគ្នានិងជាទីក្រុងធំលំដាប់ទីបីនៅក្នុងប្រទេសកម្ពុជា។ ជាមួយនឹងទីតាំងទន្លេមេគង្គរបស់ខ្លួនដែលមានចំងាយជិត
-			123 គ។ ម។ និងប្រទេសវៀតណាមខេត្តកំពង់ចាមតែងតែជាមជ្ឈមណ្ឌលពាណិជ្ជកម្មនិងដឹកជញ្ជូនដ៏សំខាន់មួយ។ ផ្លូវហាយវ៉េពីរាជធានីភ្នំពេញស្ថិតនៅក្នុងស្ថានភាពល្អបំផុត - អ្នកអាចធ្វើដំណើរបានក្នុងរយៈពេលត្រឹមតែពីរម៉ោងតាមផ្លូវថ្នល់ឬតាមទូកបាញ់ដែលជាមធ្យោបាយដឹកជញ្ជូនសំខាន់រវាងទីក្រុងនានានៅលើទន្លេមេគង្គ។
-			វិធីណាក៏ដោយវាល្អណាស់ដោយមានទេសភាពជនបទឬតំបន់ទន្លេដែលអាស្រ័យលើផ្លូវដែលអ្នកទៅ។ ទីក្រុងនេះមានភាពស្រស់ស្អាតនិងមានមន្តស្នេហ៍ជាមួយនឹងទស្សនីយភាពតាមដងទន្លេនាព្រឹកព្រលឹមនិងមហាវិថីមហាវិថីធំទូលាយក្បែរទន្លេ។ មានកន្លែងទាក់ទាញជាច្រើនដែលនៅជិតនិងទីតាំងរបស់វានៅតាមផ្លូវតាមទូកឬផ្លូវទៅកាន់ខេត្តក្រចេះមណ្ឌលគិរីរតនគិរីនិងស្ទឹងត្រែង។
-			វាជាចំណុចលោតដ៏ស្រស់ស្អាត។ ខេត្តកំពង់ចាមគឺជាកន្លែងលាយចាស់និងថ្មីដោយប្រាសាទថ្មីត្រូវបានសាងសង់នៅនិងជុំវិញប្រាសាទបុរាណនិងទូកសាឡាងធំ ៗ នាំយកមនុស្សនិងទំនិញទៅម្ខាងទៀតនៃទន្លេមេគង្គនៅជាប់នឹងការស្ថាបនាស្ពានដំបូងដែលមិនធ្លាប់មាន បានសាងសង់ឡើងនៅទីនេះ។ ដោយសារតែមានវិនិយោគទុនបរទេសតិចតួចហើយមិនមានទេសចរណ៍ធំ
-			ៗ (ស្ទើរតែគ្រប់ជនបរទេសដែលមកទីនេះគឺជាអ្នកដំណើរ) ទីក្រុងនេះមានជីវភាពក្រីក្រតិចតួចដោយមានអាគារទំនើប ៗ មួយចំនួនប៉ុន្តែមិនមានសំណង់ស្ថាបត្យកម្មបារាំងពីសម័យអាណានិគមទេ។ វាស្រដៀងទៅនឹងទីក្រុងជាច្រើនទៀតនៅកម្ពុជាដែលមានភាពកខ្វក់ដោយមានសំរាមជារឿងធម្មតា។ ប្រជាជននៅខេត្តកំពង់ចាមមានភាពរួសរាយរាក់ទាក់និងបើកទូលាយដើម្បីទាក់ទាញភ្ញៀវទេសចរ។
-			ប្រសិនបើគម្រោងនាពេលថ្មីៗនេះកំពុងកែលម្អស្ថានភាពនៅទីនេះ (ទាក់ទងទៅនឹងទីក្រុងនានានៃប្រទេសកម្ពុជា) សូមចាំថាទាំងសម្តេចហ៊ុនសែននិងអតីតអភិបាលរាជធានីភ្នំពេញជាសុផារ៉ាមានដើមកំណើតមកពីខេត្តនេះ។
-		</p>
-		<font size="5" face="Khmer OS Muol Light" color="#00a680">
-			&emsp;--> ស្ពានឬស្សីកោះប៉ែន
-		</font>
-
-		<img src=".\img\gallery\Kompongcham\29425488_1864490663575698_8352891258124894208_n.jpg " class="responsive_img" hspace="10" vspace="10">
 		<center>
-			<img src=".\img\gallery\Kompongchang\Capture.PNG " width="30%" height="40%" hspace="10" vspace="10">
-			<img src=".\img\gallery\Kompongcham\biking.jpg" width="30%" height="40%" hspace="10" vspace="10">
-		</center> <br>
-		<font size="5" face="Khmer OS Muol Light" color="#00a680">
-			&emsp; --> ប្រាសាទនគរបាជ័យ
-		</font>
-		<center>
-			<img src=".\img\gallery\Kompongcham\Nokor-Bachey-Temple.jpg " class="responsive_img" hspace="10" vspace="10">
-			<img src=".\img\gallery\Kompongcham\cover2.jpg " width="​​30%" height="40%" hspace="10" vspace="10">
-			<img src=".\img\gallery\Kompongcham\5abf9cf1b4c0e.jpg " width="​​30%" height="40%" hspace="10" vspace="10">
+			<img src=".\img\gallery\Kompongcham\Kampong-Cham-Province១.jpg " class="responsive_img">
 		</center>
 
+		<div class="container">
+			<div class="title">
+				<center>
+					ខេត្តកំពង់ចាម
+				</center>
+			</div>
 
-		<!-- Footer -->
-		<center>
-			<footer>
-				<div class="foot_logo">
-					<a href="index.html">TosGo</a>
-				</div>
-				<p class="Term_of_Use">&emsp;&emsp;&emsp;&emsp;2018 TosGo LLC All rights reserved. Terms of Use | Privacy Policy | Site Map</p>
-				<a href="#" class="feed_back">feedback@TosGo.com</a>
-			</footer>
-		</center>
-	</div>
+			<p>
+				&emsp;&emsp;កំពង់ចាម គឺជាខេត្ត នៃប្រទេសកម្ពុជា ដែលស្ថិតនៅវាលទំនាប កណ្ដាលនៃទន្លេមេគង្គ។ វាមានព្រំប្រទល់ជាប់នឹង ខេត្តកំពង់ឆ្នាំង នៅខាងលិចកំពង់ធំ និង ក្រចេះ នៅខាងជើង ត្បូងឃ្មុំ នៅខាងកើត និង ព្រៃវែង និង កណ្ដាលនៅខាងត្បូង។ កំពង់ចាម ជាផ្លូវការត្រូវបានបែងចែក
+				ទៅជាពីរខេត្តនៅថ្ងៃទី ៣១ ធ្នូ ២០១៣ ។ ផ្ទៃដីទាំងអស់នៅខាងលិច នៃទន្លេមេគង្គនៅតែ ជាកំពង់ចាមដដែល គ្រាដែលផ្ទៃដី នៅខាងកើតទន្លេបានក្លាយជា ខេត្តត្បូងឃ្មុំ។ មុនការបែងចែកនេះ កំពង់ចាមបាន លាតសន្ធឹងទៅខាងកើត ដល់ព្រំដែនអន្តរជាតិជាមួយ វៀតណាមធ្លាប់ជា ខេត្តធំទី១១ នៅកម្ពុជា
+				និងមានប្រជាជន ១ ៦៨០ ៦៩៤ នាក់ ដែលបានចាត់ទុកថាជាខេត្ត ដែលមានប្រជាជនច្រើនបំផុត ទីពីរក្នុងប្រទេស។ ទីរួមខេត្ត និង ក្រុងធំបំផុត របស់ខេត្តនេះ គឺក្រុងកំពង់ចាម។ ខេត្តកំពង់ចាមគឺជារាជធានីនៃខេត្តដែលមានឈ្មោះដូចគ្នានិងជាទីក្រុងធំលំដាប់ទីបីនៅក្នុងប្រទេសកម្ពុជា។
+				ជាមួយនឹងទីតាំងទន្លេមេគង្គរបស់ខ្លួនដែលមានចំងាយជិត 123 គ។ ម។ និងប្រទេសវៀតណាមខេត្តកំពង់ចាមតែងតែជាមជ្ឈមណ្ឌលពាណិជ្ជកម្មនិងដឹកជញ្ជូនដ៏សំខាន់មួយ។ ផ្លូវហាយវ៉េពីរាជធានីភ្នំពេញស្ថិតនៅក្នុងស្ថានភាពល្អបំផុត - អ្នកអាចធ្វើដំណើរបានក្នុងរយៈពេលត្រឹមតែពីរម៉ោងតាមផ្លូវថ្នល់ឬតាមទូកបាញ់ដែលជាមធ្យោបាយដឹកជញ្ជូនសំខាន់រវាងទីក្រុងនានានៅលើទន្លេមេគង្គ។
+				វិធីណាក៏ដោយវាល្អណាស់ដោយមានទេសភាពជនបទឬតំបន់ទន្លេដែលអាស្រ័យលើផ្លូវដែលអ្នកទៅ។ ទីក្រុងនេះមានភាពស្រស់ស្អាតនិងមានមន្តស្នេហ៍ជាមួយនឹងទស្សនីយភាពតាមដងទន្លេនាព្រឹកព្រលឹមនិងមហាវិថីមហាវិថីធំទូលាយក្បែរទន្លេ។ មានកន្លែងទាក់ទាញជាច្រើនដែលនៅជិតនិងទីតាំងរបស់វានៅតាមផ្លូវតាមទូកឬផ្លូវទៅកាន់ខេត្តក្រចេះមណ្ឌលគិរីរតនគិរីនិងស្ទឹងត្រែង។
+				វាជាចំណុចលោតដ៏ស្រស់ស្អាត។ ខេត្តកំពង់ចាមគឺជាកន្លែងលាយចាស់និងថ្មីដោយប្រាសាទថ្មីត្រូវបានសាងសង់នៅនិងជុំវិញប្រាសាទបុរាណនិងទូកសាឡាងធំ ៗ នាំយកមនុស្សនិងទំនិញទៅម្ខាងទៀតនៃទន្លេមេគង្គនៅជាប់នឹងការស្ថាបនាស្ពានដំបូងដែលមិនធ្លាប់មាន បានសាងសង់ឡើងនៅទីនេះ។ ដោយសារតែមានវិនិយោគទុនបរទេសតិចតួចហើយមិនមានទេសចរណ៍ធំ
+				ៗ (ស្ទើរតែគ្រប់ជនបរទេសដែលមកទីនេះគឺជាអ្នកដំណើរ) ទីក្រុងនេះមានជីវភាពក្រីក្រតិចតួចដោយមានអាគារទំនើប ៗ មួយចំនួនប៉ុន្តែមិនមានសំណង់ស្ថាបត្យកម្មបារាំងពីសម័យអាណានិគមទេ។ វាស្រដៀងទៅនឹងទីក្រុងជាច្រើនទៀតនៅកម្ពុជាដែលមានភាពកខ្វក់ដោយមានសំរាមជារឿងធម្មតា។ ប្រជាជននៅខេត្តកំពង់ចាមមានភាពរួសរាយរាក់ទាក់និងបើកទូលាយដើម្បីទាក់ទាញភ្ញៀវទេសចរ។
+				ប្រសិនបើគម្រោងនាពេលថ្មីៗនេះកំពុងកែលម្អស្ថានភាពនៅទីនេះ (ទាក់ទងទៅនឹងទីក្រុងនានានៃប្រទេសកម្ពុជា) សូមចាំថាទាំងសម្តេចហ៊ុនសែននិងអតីតអភិបាលរាជធានីភ្នំពេញជាសុផារ៉ាមានដើមកំណើតមកពីខេត្តនេះ។
+			</p>
+			<font size="5" face="Khmer OS Muol Light" color="#00a680">
+				&emsp;--> ស្ពានឬស្សីកោះប៉ែន
+			</font>
+
+			<img src=".\img\gallery\Kompongcham\29425488_1864490663575698_8352891258124894208_n.jpg " class="responsive_img" hspace="10" vspace="10">
+			<center>
+				<img src=".\img\gallery\Kompongchang\Capture.PNG " width="30%" height="40%" hspace="10" vspace="10">
+				<img src=".\img\gallery\Kompongcham\biking.jpg" width="30%" height="40%" hspace="10" vspace="10">
+			</center> <br>
+			<font size="5" face="Khmer OS Muol Light" color="#00a680">
+				&emsp; --> ប្រាសាទនគរបាជ័យ
+			</font>
+			<center>
+				<img src=".\img\gallery\Kompongcham\Nokor-Bachey-Temple.jpg " class="responsive_img" hspace="10" vspace="10">
+				<img src=".\img\gallery\Kompongcham\cover2.jpg " width="​​30%" height="40%" hspace="10" vspace="10">
+				<img src=".\img\gallery\Kompongcham\5abf9cf1b4c0e.jpg " width="​​30%" height="40%" hspace="10" vspace="10">
+			</center>
+
+
+			<!-- Footer -->
+			<center>
+				<footer>
+					<div class="foot_logo">
+						<a href="Index.html">TosGo</a>
+					</div>
+					<p class="Term_of_Use">&emsp;&emsp;&emsp;&emsp;2018 TosGo LLC All rights reserved. Terms of Use | Privacy Policy | Site Map</p>
+					<a href="#" class="feed_back">feedback@TosGo.com</a>
+				</footer>
+			</center>
+		</div>
 </body>
 
 </html>
