--- a/Pailen.html
+++ b/Pailen.html
@@ -12,82 +12,82 @@
 	<div class="navbar-fixed">
 		<nav>
 			<div class="nav-wrapper mycolor">
-				<a href="Index.html" class="brand-logo">TosGo</a>
-				<ul id="nav-mobile" class="right hide-on-med-and-down nav-ul">
-					<li><a href="Index.html">Home</a></li>
-					<li><a href="Travel.html">WhereToGo</a></li>
-					<li><a href="Career.html">Career</a></li>
-					<li><a href="About.html">AboutUs</a></li>
-				</ul>
-			</div>
+				<div class="nav-wrapper container"><a id="logo-container" href="Index.html" class="brand-logo">TosGo</a>
+					<ul id="nav-mobile" class="right hide-on-med-and-down nav-ul">
+						<li><a href="Index.html">Home</a></li>
+						<li><a href="Travel.html">WhereToGo</a></li>
+						<li><a href="Career.html">Career</a></li>
+						<li><a href="About.html">AboutUs</a></li>
+					</ul>
+				</div>
 		</nav>
-	</div>
+		</div>
 
-	<img src="./img/cover/Pailen.jpg" width="100%">
-	<div class="container">
-		<div class="row">
-			<center>
-				<div class="title">
-					ខេត្តប៉ៃលិន
-				</div>
-			</center>
-			<p align="justify">&emsp;&emsp;ប៉ៃលិន​ ជា​ខេត្ត​មួយ​ស្ថិត​នៅ​ជ្រុង​ខាង​ជើង​នៃ​ជួរ​ភ្នំ​ក្រវាញ​ ​ភាគ​ខាង​លិច​នៃ​ព្រះរាជាណាចក្រ​កម្ពុជា​ដែល​​មាន​ព្រំ​​ដែន​​ជាប់​ប្រទេស​ថៃ​។ ដោយសារ​តែ​ខេត្ត​នេះ​មាន​ចម្ងាយ​ឆ្ងាយ​ពី​រាជ​ធានី​ភ្នំពេញ ​និង​មិន​សូវ​ជា​ល្បី​ខាង​តំបន់​កម្សាន្ត​ផង​នោះ​
-				ទើប​បាន​ជា​ប្រជាជន​ទូទៅ​មិន​សូវ​ទៅ​លេង​នៅ​ខេត្ត​ប៉ៃលិន​ឡើយ។ យ៉ាងណាមិញ ក្នុង​ខេត្ត​ប៉ៃលិន​ ​​ក៏​​មាន​កន្លែង​ដើរ​លេង​ច្រើន​ណាស់​ដែរ​ ​​ធានា​ថា​ពេល​ទៅ​ដល់​ហើយ​នឹង​ស្ងើចសរសើរ​មិន​ខាន៖
-			</p> <br>
-			<font face="Khmer OS Muol Light" size="5" color="#00a680"> ១ ភ្នំយ៉ាត </font>
-			<p align="justify">&emsp;&emsp;អ្នក​ធ្វើ​ដំណើរ​ស្ទើរ​គ្រប់​គ្នា​ ដែល​បាន​ឆ្លងកាត់​ខេត្ត​ប៉ៃលិន រមែង​សំចត​នៅ​ភ្នំ​យ៉ាត ដើម្បី​ចុះ​ទៅ​បួង​សួង​​រូប​សំណាក​យាយ​ យ៉ាត​ដែល​​នៅ​លើ​ភ្នំ​នេះ សុំសេចក្ដី​សុខសប្បាយ​ហើយ​ជាពិសេស​នោះ​ គឺ​គេ​តែងតែ​ចូល​ទៅ​បួងសួង សុំ​រក​ស៊ី​មាន​បាន ​​សុំ​កូន
-				សុំ​លក់​ដី-ធ្លី​ជា​ដើម ​ហើយ​តែងតែ​សម្រេច​ដូច​ក្ដី​ប្រាថ្នា។</p>
-			<img src="./img/gallery/Pailen/yey-yat.jpg" width="100%" height="50%"> <br><br>
-			<font face="Khmer OS Muol Light" size="5" color="#00a680">២ កន្លែងលក់ត្បូង</font>
-			<p align="justify">&emsp;&emsp;នៅ​ពេល​ធ្វើ​ដំណើរ​មក​ដល់​ភ្នំ​យ៉ាត​ហើយ ​ហួស​តែ​បន្តិច​ប៉ុណ្ណោះ ​អ្នក​ទាំង​អស់​គ្នា​នឹង​បាន​ឃើញ​កន្លែង​លក់​ត្បូង​ជា​ច្រើន ដែល​មួយ​កន្លែង​ៗ​សុទ្ធ​តែ​មាន​ត្បូង​គ្រប់​ប្រភេទ ​អាច​ឱ្យ​ប្រិយមិត្ត​រើស​បាន​តាម​តម្រូវ​ការ។ ដោយ​ត្បូង​ទាំង​នេះ សុទ្ធ​តែ​ធ្វើ​ឡើង​ដោយ​ដៃ​កូន​ខ្មែរ​សុទ្ធ​សាធ។</p>
-			<!-- Diamond img -->
-			<div class="row" align="left">
-				<div class="col s6">
-					<img src="./img/gallery/Pailen/diamond.jpg" width="99%">
-				</div>
-				<div class="col s6" align="right">
-					<img src="./img/gallery/Pailen/color-diamond.jpg" width="99%">
-				</div>
-			</div> <br>
-			<font face="Khmer OS Muol Light" size="5" color="#00a680">៣ ភ្នំខៀវ និង​ ទឹកធ្លាក់៣២ជាន់</font>
-			<p align="justify">&emsp;&emsp;ទឹក​ជ្រោះ​ភ្នំ​ខៀវ ​ជា​រមណីយដ្ឋាន​មួយ​បែប​ធម្មជាតិ ​ដែល​ស្ថិត​នៅ​លើ​ភ្នំ​ខៀវ​ផ្ទាល់​តែ​ម្ដង។ ​អ្នក​ទៅ​លេង​នៅ​ប៉ៃលិន​ភាគ​ច្រើន​មិន​ដែល​រំលង​ទឹក​ជ្រោះ​នេះ​ឡើយ ​ព្រោះ​វា​មាន​ទេសភាព​ស្អាត​ និង​មាន​ដល់​ទៅ​៧​ជាន់​ឯ​ណោះ។ អ្វី​ដែល​កាន់​តែ​ល្អ​សម្រាប់​ភ្ញៀវ​ទេសចរ​​នោះ
-				គឺ​អ្នក​ដំណើរ​ទាំង​អស់​អាច​បើក​ឡាន​ឡើង​ដល់​កន្លែង​ទឹក​ធ្លាក់​តែ​ម្ដង ​ដែល​នេះ​ជា​ការ​ងាយ​ស្រួល​មួយ​សម្រាប់​អ្នក​រាល់​គ្នា ​ស្រប​ពេល​នៅ​លើ​នោះ ​មាន​កន្លែង​លក់​របស់របរ​ញ៉ាំ​មិន​ខ្វះ​នោះ​ទេ។ ភ្នំ​ក្បាល​ដំរី​ មាន​ទឹក​ធ្លាក់៣២ជាន់​ ស្ថិត​នៅ​ក្នុង​ភូមិ​​ថ្មី
-				ឃុំ​ទួល​ល្វា ស្រុក​ប៉ៃលិន ខេត្ត​ប៉ៃលិន ដែល​មាន​សម្រស់​ស្រស់​ផូរផង់​លាក់​កំបាំង​ខ្លួន​កណ្ដាល​ព្រៃ​ ប្រៀប​ដូច​ត្បូង​មិន​ទាន់​ច្នៃ។ ​ប្រិយមិត្ត​ដែល​ចង់​ទៅ​លេង​កន្លែង​នេះ ត្រូវ​ស្វែង​រក​អ្នក​នាំ​ផ្លូវ​ម្នាក់ ទើប​អាច​ងាយ​ស្រួល​ធ្វើ​ដំណើរ​ឡើង។ ​ទឹក​ធ្លាក់​នេះ
-				មាន​ទេសភាព​តាម​ដង​ផ្លូវ​ស្អាត​មែនទែន ​ដែល​កម្រ​នឹង​បាន​ឃើញ ​ ខណៈ​​អ្នក​ចូល​ចិត្ត​ដើរ​កម្សាន្ត​មើល​ព្រៃ​ព្រឹក្សា​ពិត​ជា​លាន់​មាត់​ថា Wow ​ជា​មិន​ខាន។
-			</p>
-			<div class="row" align="left">
-				<div class="col s6">
-					<img src="./img/gallery/Pailen/waterfall.jpg" width="99%">
-				</div>
-				<div class="col s6" align="right">
-					<img src="./img/gallery/Pailen/waterfall2.jpg" width="99%">
-				</div>
-			</div><br>
-			<font face="Khmer OS Muol Light" size="5" color="#00a680">៥ ចម្ការផ្លែឈើ</font>
-			<p align="justify">&emsp;&emsp;ប៉ៃលិន​ជា​ខេត្ត​សំបូរ​ផ្លែ​ឈើ​មិន​ចាញ់​ខេត្ត​នានា​នោះ​ទេ ជា​ពិសេស​គឺ​ដំណាំ​ហូប​ផ្លែ​តែ​ម្ដង។ តាង៉ែន ​ឬ​មៀន​ប៉ៃលិន ​គឺ​ជា​ដំណាំ​នាំ​មុខ​គេ ​ដោយ​ប្រិយមិត្ត​ទៅ​ដល់​កន្លែង​ណា​ក៏​ឃើញ​ដើម​តាង៉ែន​នេះ​ដែរ។ ប្រសិន​បើ​អ្នក​ទាំង​អស់​គ្នា ​បាន​ទៅ​ដល់​នៅ​ខែ​ដែល​ប្រមូល​ផល
-				នោះ​ពិត​ជា​បាន​ឃើញ​ទេសភាព​មួយ​យ៉ាង​អស្ចារ្យ​បំផុត។
-			</p> <br>
+		<img src="./img/cover/Pailen.jpg" width="100%">
+		<div class="container">
 			<div class="row">
-				<div class="col s6" align="left">
-					<img src="./img/gallery/Pailen/fruit.jpg" width="99%">
-				</div>
-				<div class="col s6" align="right">
-					<img src="./img/gallery/Pailen/view.jpg" width="99%">
+				<center>
+					<div class="title">
+						ខេត្តប៉ៃលិន
+					</div>
+				</center>
+				<p align="justify">&emsp;&emsp;ប៉ៃលិន​ ជា​ខេត្ត​មួយ​ស្ថិត​នៅ​ជ្រុង​ខាង​ជើង​នៃ​ជួរ​ភ្នំ​ក្រវាញ​ ​ភាគ​ខាង​លិច​នៃ​ព្រះរាជាណាចក្រ​កម្ពុជា​ដែល​​មាន​ព្រំ​​ដែន​​ជាប់​ប្រទេស​ថៃ​។ ដោយសារ​តែ​ខេត្ត​នេះ​មាន​ចម្ងាយ​ឆ្ងាយ​ពី​រាជ​ធានី​ភ្នំពេញ ​និង​មិន​សូវ​ជា​ល្បី​ខាង​តំបន់​កម្សាន្ត​ផង​នោះ​
+					ទើប​បាន​ជា​ប្រជាជន​ទូទៅ​មិន​សូវ​ទៅ​លេង​នៅ​ខេត្ត​ប៉ៃលិន​ឡើយ។ យ៉ាងណាមិញ ក្នុង​ខេត្ត​ប៉ៃលិន​ ​​ក៏​​មាន​កន្លែង​ដើរ​លេង​ច្រើន​ណាស់​ដែរ​ ​​ធានា​ថា​ពេល​ទៅ​ដល់​ហើយ​នឹង​ស្ងើចសរសើរ​មិន​ខាន៖
+				</p> <br>
+				<font face="Khmer OS Muol Light" size="5" color="#00a680"> ១ ភ្នំយ៉ាត </font>
+				<p align="justify">&emsp;&emsp;អ្នក​ធ្វើ​ដំណើរ​ស្ទើរ​គ្រប់​គ្នា​ ដែល​បាន​ឆ្លងកាត់​ខេត្ត​ប៉ៃលិន រមែង​សំចត​នៅ​ភ្នំ​យ៉ាត ដើម្បី​ចុះ​ទៅ​បួង​សួង​​រូប​សំណាក​យាយ​ យ៉ាត​ដែល​​នៅ​លើ​ភ្នំ​នេះ សុំសេចក្ដី​សុខសប្បាយ​ហើយ​ជាពិសេស​នោះ​ គឺ​គេ​តែងតែ​ចូល​ទៅ​បួងសួង សុំ​រក​ស៊ី​មាន​បាន ​​សុំ​កូន
+					សុំ​លក់​ដី-ធ្លី​ជា​ដើម ​ហើយ​តែងតែ​សម្រេច​ដូច​ក្ដី​ប្រាថ្នា។</p>
+				<img src="./img/gallery/Pailen/yey-yat.jpg" width="100%" height="50%"> <br><br>
+				<font face="Khmer OS Muol Light" size="5" color="#00a680">២ កន្លែងលក់ត្បូង</font>
+				<p align="justify">&emsp;&emsp;នៅ​ពេល​ធ្វើ​ដំណើរ​មក​ដល់​ភ្នំ​យ៉ាត​ហើយ ​ហួស​តែ​បន្តិច​ប៉ុណ្ណោះ ​អ្នក​ទាំង​អស់​គ្នា​នឹង​បាន​ឃើញ​កន្លែង​លក់​ត្បូង​ជា​ច្រើន ដែល​មួយ​កន្លែង​ៗ​សុទ្ធ​តែ​មាន​ត្បូង​គ្រប់​ប្រភេទ ​អាច​ឱ្យ​ប្រិយមិត្ត​រើស​បាន​តាម​តម្រូវ​ការ។ ដោយ​ត្បូង​ទាំង​នេះ សុទ្ធ​តែ​ធ្វើ​ឡើង​ដោយ​ដៃ​កូន​ខ្មែរ​សុទ្ធ​សាធ។</p>
+				<!-- Diamond img -->
+				<div class="row" align="left">
+					<div class="col s6">
+						<img src="./img/gallery/Pailen/diamond.jpg" width="99%">
+					</div>
+					<div class="col s6" align="right">
+						<img src="./img/gallery/Pailen/color-diamond.jpg" width="99%">
+					</div>
+				</div> <br>
+				<font face="Khmer OS Muol Light" size="5" color="#00a680">៣ ភ្នំខៀវ និង​ ទឹកធ្លាក់៣២ជាន់</font>
+				<p align="justify">&emsp;&emsp;ទឹក​ជ្រោះ​ភ្នំ​ខៀវ ​ជា​រមណីយដ្ឋាន​មួយ​បែប​ធម្មជាតិ ​ដែល​ស្ថិត​នៅ​លើ​ភ្នំ​ខៀវ​ផ្ទាល់​តែ​ម្ដង។ ​អ្នក​ទៅ​លេង​នៅ​ប៉ៃលិន​ភាគ​ច្រើន​មិន​ដែល​រំលង​ទឹក​ជ្រោះ​នេះ​ឡើយ ​ព្រោះ​វា​មាន​ទេសភាព​ស្អាត​ និង​មាន​ដល់​ទៅ​៧​ជាន់​ឯ​ណោះ។ អ្វី​ដែល​កាន់​តែ​ល្អ​សម្រាប់​ភ្ញៀវ​ទេសចរ​​នោះ
+					គឺ​អ្នក​ដំណើរ​ទាំង​អស់​អាច​បើក​ឡាន​ឡើង​ដល់​កន្លែង​ទឹក​ធ្លាក់​តែ​ម្ដង ​ដែល​នេះ​ជា​ការ​ងាយ​ស្រួល​មួយ​សម្រាប់​អ្នក​រាល់​គ្នា ​ស្រប​ពេល​នៅ​លើ​នោះ ​មាន​កន្លែង​លក់​របស់របរ​ញ៉ាំ​មិន​ខ្វះ​នោះ​ទេ។ ភ្នំ​ក្បាល​ដំរី​ មាន​ទឹក​ធ្លាក់៣២ជាន់​ ស្ថិត​នៅ​ក្នុង​ភូមិ​​ថ្មី
+					ឃុំ​ទួល​ល្វា ស្រុក​ប៉ៃលិន ខេត្ត​ប៉ៃលិន ដែល​មាន​សម្រស់​ស្រស់​ផូរផង់​លាក់​កំបាំង​ខ្លួន​កណ្ដាល​ព្រៃ​ ប្រៀប​ដូច​ត្បូង​មិន​ទាន់​ច្នៃ។ ​ប្រិយមិត្ត​ដែល​ចង់​ទៅ​លេង​កន្លែង​នេះ ត្រូវ​ស្វែង​រក​អ្នក​នាំ​ផ្លូវ​ម្នាក់ ទើប​អាច​ងាយ​ស្រួល​ធ្វើ​ដំណើរ​ឡើង។ ​ទឹក​ធ្លាក់​នេះ
+					មាន​ទេសភាព​តាម​ដង​ផ្លូវ​ស្អាត​មែនទែន ​ដែល​កម្រ​នឹង​បាន​ឃើញ ​ ខណៈ​​អ្នក​ចូល​ចិត្ត​ដើរ​កម្សាន្ត​មើល​ព្រៃ​ព្រឹក្សា​ពិត​ជា​លាន់​មាត់​ថា Wow ​ជា​មិន​ខាន។
+				</p>
+				<div class="row" align="left">
+					<div class="col s6">
+						<img src="./img/gallery/Pailen/waterfall.jpg" width="99%">
+					</div>
+					<div class="col s6" align="right">
+						<img src="./img/gallery/Pailen/waterfall2.jpg" width="99%">
+					</div>
+				</div><br>
+				<font face="Khmer OS Muol Light" size="5" color="#00a680">៥ ចម្ការផ្លែឈើ</font>
+				<p align="justify">&emsp;&emsp;ប៉ៃលិន​ជា​ខេត្ត​សំបូរ​ផ្លែ​ឈើ​មិន​ចាញ់​ខេត្ត​នានា​នោះ​ទេ ជា​ពិសេស​គឺ​ដំណាំ​ហូប​ផ្លែ​តែ​ម្ដង។ តាង៉ែន ​ឬ​មៀន​ប៉ៃលិន ​គឺ​ជា​ដំណាំ​នាំ​មុខ​គេ ​ដោយ​ប្រិយមិត្ត​ទៅ​ដល់​កន្លែង​ណា​ក៏​ឃើញ​ដើម​តាង៉ែន​នេះ​ដែរ។ ប្រសិន​បើ​អ្នក​ទាំង​អស់​គ្នា ​បាន​ទៅ​ដល់​នៅ​ខែ​ដែល​ប្រមូល​ផល
+					នោះ​ពិត​ជា​បាន​ឃើញ​ទេសភាព​មួយ​យ៉ាង​អស្ចារ្យ​បំផុត។
+				</p> <br>
+				<div class="row">
+					<div class="col s6" align="left">
+						<img src="./img/gallery/Pailen/fruit.jpg" width="99%">
+					</div>
+					<div class="col s6" align="right">
+						<img src="./img/gallery/Pailen/view.jpg" width="99%">
+					</div>
 				</div>
 			</div>
+			<br>
+			<!-- Footer -->
+			<center>
+				<footer>
+					<div class="foot_logo">
+						<a href="Index.html">TosGo</a>
+					</div>
+					<p class="Term_of_Use">&emsp;&emsp;&emsp;&emsp;2018 TosGo LLC All rights reserved. Terms of Use | Privacy Policy | Site Map</p>
+					<a href="#" class="feed_back">feedback@TosGo.com</a>
+				</footer>
+			</center>
 		</div>
-		<br>
-		<!-- Footer -->
-		<center>
-			<footer>
-				<div class="foot_logo">
-					<a href="index.html">TosGo</a>
-				</div>
-				<p class="Term_of_Use">&emsp;&emsp;&emsp;&emsp;2018 TosGo LLC All rights reserved. Terms of Use | Privacy Policy | Site Map</p>
-				<a href="#" class="feed_back">feedback@TosGo.com</a>
-			</footer>
-		</center>
-	</div>
 </body>
 
 </html>
