--- a/Phnompenh.html
+++ b/Phnompenh.html
@@ -12,72 +12,72 @@
 	<div class="navbar-fixed">
 		<nav>
 			<div class="nav-wrapper mycolor">
-				<a href="Index.html" class="brand-logo">TosGo</a>
-				<ul id="nav-mobile" class="right hide-on-med-and-down nav-ul">
-					<li><a href="Index.html">Home</a></li>
-					<li><a href="Travel.html">WhereToGo</a></li>
-					<li><a href="Career.html">Career</a></li>
-					<li><a href="About.html">AboutUs</a></li>
-				</ul>
-			</div>
+				<div class="nav-wrapper container"><a id="logo-container" href="Index.html" class="brand-logo">TosGo</a>
+					<ul id="nav-mobile" class="right hide-on-med-and-down nav-ul">
+						<li><a href="Index.html">Home</a></li>
+						<li><a href="Travel.html">WhereToGo</a></li>
+						<li><a href="Career.html">Career</a></li>
+						<li><a href="About.html">AboutUs</a></li>
+					</ul>
+				</div>
 		</nav>
-	</div>
-
-	<img src="./img/gallery/PP/morning-pp.jpg" width="100%" height="auto">
-	<div class="container">
-		<center>
-			<div class="title">
-				រាជធានីភ្នំពេញ
-			</div>
-		</center>
-		<div class="row">
-			<div class="col s4">
-				<p align="justify">
-					&emsp;&emsp;&emsp;ភ្នំពេញ (/ pənɔːmpɛn / or / nɒmpɛn /) [2] [3] ភាសាខ្មែរ: ភ្នំពេញ phnum pɨñ, ការបញ្ចេញសំឡេងខ្មែរ: [pʰnumpɨɲ]) ដែលពីមុនត្រូវបានគេស្គាល់ថាជាក្រុងចតុមុខឬក្រុងចតុមុខសឺមុងគុល។&emsp;[4]គឺជារាជធានីនិងជាទីក្រុងមានប្រជាជនច្រើនបំផុតនៅក្នុងប្រទេសកម្ពុជា។
-					ភ្នំពេញជារាជធានីជាតិតាំងពីសម័យអាណានិគមនិយមរបស់ប្រទេសកម្ពុជាហើយបានរីកចម្រើនក្លាយទៅជាមជ្ឈមណ្ឌលសេដ្ឋកិច្ច, ឧស្សាហកម្មនិងវប្បធម៌របស់ប្រទេស។ ត្រូវបានគេស្គាល់ថាជា "គុជខ្យងនៃអាស៊ី" វាត្រូវបានគេចាត់ទុកថាជាទីក្រុងមួយក្នុងចំណោមទីក្រុងដែលត្រូវបានសាងសង់ឡើងនៅបារាំងដ៏ល្អឥតខ្ចោះបំផុតនៅឥណ្ឌូចិននាទសវត្សរ៍ឆ្នាំ
-					1920 ។
-				</p>
-			</div>
-			<div class="col s8">
-				<img src="./img/gallery/PP/night-pp.jpg" width="100%" height="430">
-			</div>
 		</div>
-		<div class="row">
-			<div class="col s12">
-				<img src="./img/gallery/PP/Phnompenh_skyline.jpg" width="100%" height="auto">
-			</div>
-		</div>
-		<p align="justify"> &emsp;&emsp;រាជធានីភ្នំពេញស្ថិតនៅក្នុងតំបន់ភាគកណ្តាលនៃប្រទេសកម្ពុជាហើយមានព័ទ្ធជុំវិញដោយខេត្តកណ្តាល។ទីក្រុងនេះស្ថិតនៅលើច្រាំងទន្លេទន្លេសាបទន្លេមេគង្គនិងទន្លេបាសាក់។ ទន្លេទាំងនេះផ្តល់នូវប្រភពទឹកសាបនិងធនធានធម្មជាតិផ្សេងៗទៀតដល់ទីក្រុង។ រាជធានីភ្នំពេញនិងតំបន់ជុំវិញនោះមានតំបន់ទឹកជំនន់ធម្មតាសម្រាប់ប្រទេសកម្ពុជា។
-			ទោះបីជារាជធានីភ ្នំពេញស្ថិតនៅ 11.89 ម៉ែត្រ (39 ហ្វីត) ពីលើទន្លេក៏ដោយទឹកជំនន់នៅរដូវមូសុងគឺជាបញ្ហាហើយជួនកាលទន្លេនេះពោរពេញទៅដោយច្រាំង។ ទីក្រុងនេះមានទីតាំងស្ថិតនៅ 11.55 ° 104.91667 ° E (11 ° 33 'ខាងជើង 104 ° 55' ខាងកើត) [19] គ្របដណ្តប់លើផ្ទៃដីចំនួន 678,46
-			គីឡូម៉ែត្រការ៉េ (262 ម៉ាយម៉ាយ) ជាមួយនឹងចំនួន 11,401 ហិកតា (28172 ហិចតា) នៅក្នុង ក្រុងនិង 26,106 ហិកតា (64,509 ហិចតា) នៃផ្លូវថ្នល់។ ដីកសិកម្មនៅក្នុងក្រុងនេះមានចំនួន 34.685 គីឡូម៉ែត្រការ៉េ (13 គីឡូម៉ែត្រការ៉េ) និងមានផ្ទៃដីចំនួន 1.476 គីឡូម៉ែត្រក្រឡា
-			(365 ហិចតា) ស្ថិតនៅក្រោមប្រព័ន្ធធារាសាស្រ្ត។ <br><br>
-		</p>
 
-		<div class="row">
-			<div class="col s6">
-				<img src="./img/gallery/PP/Phnom_Penh_sunset.jpg" width="100%" height="auto">
+		<img src="./img/gallery/PP/morning-pp.jpg" width="100%" height="auto">
+		<div class="container">
+			<center>
+				<div class="title">
+					រាជធានីភ្នំពេញ
+				</div>
+			</center>
+			<div class="row">
+				<div class="col s4">
+					<p align="justify">
+						&emsp;&emsp;&emsp;ភ្នំពេញ (/ pənɔːmpɛn / or / nɒmpɛn /) [2] [3] ភាសាខ្មែរ: ភ្នំពេញ phnum pɨñ, ការបញ្ចេញសំឡេងខ្មែរ: [pʰnumpɨɲ]) ដែលពីមុនត្រូវបានគេស្គាល់ថាជាក្រុងចតុមុខឬក្រុងចតុមុខសឺមុងគុល។&emsp;[4]គឺជារាជធានីនិងជាទីក្រុងមានប្រជាជនច្រើនបំផុតនៅក្នុងប្រទេសកម្ពុជា។
+						ភ្នំពេញជារាជធានីជាតិតាំងពីសម័យអាណានិគមនិយមរបស់ប្រទេសកម្ពុជាហើយបានរីកចម្រើនក្លាយទៅជាមជ្ឈមណ្ឌលសេដ្ឋកិច្ច, ឧស្សាហកម្មនិងវប្បធម៌របស់ប្រទេស។ ត្រូវបានគេស្គាល់ថាជា "គុជខ្យងនៃអាស៊ី" វាត្រូវបានគេចាត់ទុកថាជាទីក្រុងមួយក្នុងចំណោមទីក្រុងដែលត្រូវបានសាងសង់ឡើងនៅបារាំងដ៏ល្អឥតខ្ចោះបំផុតនៅឥណ្ឌូចិននាទសវត្សរ៍ឆ្នាំ
+						1920 ។
+					</p>
+				</div>
+				<div class="col s8">
+					<img src="./img/gallery/PP/night-pp.jpg" width="100%" height="430">
+				</div>
 			</div>
-			<div class="col s6">
-				<img src="./img/gallery/PP/night-pp2.jpg" width="100%" height="auto">
+			<div class="row">
+				<div class="col s12">
+					<img src="./img/gallery/PP/Phnompenh_skyline.jpg" width="100%" height="auto">
+				</div>
 			</div>
-		</div>
-		<p align="justify"> &emsp;&emsp;&emsp;ភ្នំពេញ (/ pənɔːmpɛn / or / nɒmpɛn /) [2] [3] ភាសាខ្មែរ: ភ្នំពេញ phnum pɨñ, ការបញ្ចេញសំឡេងខ្មែរ: [pʰnumpɨɲ]) ដែលពីមុនត្រូវបានគេស្គាល់ថាជាក្រុងចតុមុខឬក្រុងចតុមុខសឺមុងគុល។ 4] គឺជារាជធានីនិងជាទីក្រុងមានប្រជាជនច្រើនបំផុតនៅក្នុងប្រទេសកម្ពុជា។
-			ភ្នំពេញជារាជធានីជាតិតាំងពីសម័យអាណានិគមនិយមរបស់ប្រទេសកម្ពុជាហើយបានរីកចម្រើនក្លាយទៅជាមជ្ឈមណ្ឌលសេដ្ឋកិច្ច, ឧស្សាហកម្មនិងវប្បធម៌របស់ប្រទេស។ ត្រូវបានគេស្គាល់ថាជា "គុជខ្យងនៃអាស៊ី" វាត្រូវបានគេចាត់ទុកថាជាទីក្រុងមួយក្នុងចំណោមទីក្រុងដែលត្រូវបានសាងសង់ឡើងនៅបារាំងដ៏ល្អឥតខ្ចោះបំផុតនៅឥណ្ឌូចិននាទសវត្សរ៍ឆ្នាំ
-			1920 ។ ភ្នំពេញរួមជាមួយសៀមរាបនិងព្រះសីហនុគឺជាគោលដៅទេសចរណ៍ក្នុងស្រុកនិងអន្តរជាតិដ៏សំខាន់សម្រាប់ប្រទេសកម្ពុជា។ ទីក្រុងនេះត្រូវបានគេបង្កើតឡើងនៅឆ្នាំ 1434 ទីក្រុងនេះត្រូវបានគេកត់សម្គាល់ដោយសារស្ថាបត្យកម្មដ៏ស្រស់ស្អាតនិងប្រវត្តិសាស្រ្ត។ មានអាគារអាណានិគមបារាំងខ្លះនៅរស់រានមានជីវិតនៅតាមមហាវិថីធំ។
-			ស្ថិតនៅលើច្រាំងទន្លេទន្លេសាបមេគង្គនិងទន្លេបាសាក់តំបន់ទីរួមខេត្តភ្នំពេញគឺជាលំនៅរបស់ប្រជាពលរដ្ឋកម្ពុជាប្រមាណជាង 1,5 លាននាក់ដែលមានចំនួនជាង 14,8 លាននាក់។ [6]
-		</p>
+			<p align="justify"> &emsp;&emsp;រាជធានីភ្នំពេញស្ថិតនៅក្នុងតំបន់ភាគកណ្តាលនៃប្រទេសកម្ពុជាហើយមានព័ទ្ធជុំវិញដោយខេត្តកណ្តាល។ទីក្រុងនេះស្ថិតនៅលើច្រាំងទន្លេទន្លេសាបទន្លេមេគង្គនិងទន្លេបាសាក់។ ទន្លេទាំងនេះផ្តល់នូវប្រភពទឹកសាបនិងធនធានធម្មជាតិផ្សេងៗទៀតដល់ទីក្រុង។ រាជធានីភ្នំពេញនិងតំបន់ជុំវិញនោះមានតំបន់ទឹកជំនន់ធម្មតាសម្រាប់ប្រទេសកម្ពុជា។
+				ទោះបីជារាជធានីភ ្នំពេញស្ថិតនៅ 11.89 ម៉ែត្រ (39 ហ្វីត) ពីលើទន្លេក៏ដោយទឹកជំនន់នៅរដូវមូសុងគឺជាបញ្ហាហើយជួនកាលទន្លេនេះពោរពេញទៅដោយច្រាំង។ ទីក្រុងនេះមានទីតាំងស្ថិតនៅ 11.55 ° 104.91667 ° E (11 ° 33 'ខាងជើង 104 ° 55' ខាងកើត) [19] គ្របដណ្តប់លើផ្ទៃដីចំនួន 678,46
+				គីឡូម៉ែត្រការ៉េ (262 ម៉ាយម៉ាយ) ជាមួយនឹងចំនួន 11,401 ហិកតា (28172 ហិចតា) នៅក្នុង ក្រុងនិង 26,106 ហិកតា (64,509 ហិចតា) នៃផ្លូវថ្នល់។ ដីកសិកម្មនៅក្នុងក្រុងនេះមានចំនួន 34.685 គីឡូម៉ែត្រការ៉េ (13 គីឡូម៉ែត្រការ៉េ) និងមានផ្ទៃដីចំនួន 1.476 គីឡូម៉ែត្រក្រឡា
+				(365 ហិចតា) ស្ថិតនៅក្រោមប្រព័ន្ធធារាសាស្រ្ត។ <br><br>
+			</p>
 
-	<!-- Footer -->
-	<center>
-		<footer>
-			<div class="foot_logo">
-				<a href="index.html">TosGo</a>
+			<div class="row">
+				<div class="col s6">
+					<img src="./img/gallery/PP/Phnom_Penh_sunset.jpg" width="100%" height="auto">
+				</div>
+				<div class="col s6">
+					<img src="./img/gallery/PP/night-pp2.jpg" width="100%" height="auto">
+				</div>
 			</div>
-			<p class="Term_of_Use">&emsp;&emsp;2018 TosGo LLC All rights reserved. Terms of Use | Privacy Policy | Site Map</p>
-			<a href="#" class="feed_back">feedback@TosGo.com</a>
-		</footer>
-	</center>
-</div>
+			<p align="justify"> &emsp;&emsp;&emsp;ភ្នំពេញ (/ pənɔːmpɛn / or / nɒmpɛn /) [2] [3] ភាសាខ្មែរ: ភ្នំពេញ phnum pɨñ, ការបញ្ចេញសំឡេងខ្មែរ: [pʰnumpɨɲ]) ដែលពីមុនត្រូវបានគេស្គាល់ថាជាក្រុងចតុមុខឬក្រុងចតុមុខសឺមុងគុល។ 4] គឺជារាជធានីនិងជាទីក្រុងមានប្រជាជនច្រើនបំផុតនៅក្នុងប្រទេសកម្ពុជា។
+				ភ្នំពេញជារាជធានីជាតិតាំងពីសម័យអាណានិគមនិយមរបស់ប្រទេសកម្ពុជាហើយបានរីកចម្រើនក្លាយទៅជាមជ្ឈមណ្ឌលសេដ្ឋកិច្ច, ឧស្សាហកម្មនិងវប្បធម៌របស់ប្រទេស។ ត្រូវបានគេស្គាល់ថាជា "គុជខ្យងនៃអាស៊ី" វាត្រូវបានគេចាត់ទុកថាជាទីក្រុងមួយក្នុងចំណោមទីក្រុងដែលត្រូវបានសាងសង់ឡើងនៅបារាំងដ៏ល្អឥតខ្ចោះបំផុតនៅឥណ្ឌូចិននាទសវត្សរ៍ឆ្នាំ
+				1920 ។ ភ្នំពេញរួមជាមួយសៀមរាបនិងព្រះសីហនុគឺជាគោលដៅទេសចរណ៍ក្នុងស្រុកនិងអន្តរជាតិដ៏សំខាន់សម្រាប់ប្រទេសកម្ពុជា។ ទីក្រុងនេះត្រូវបានគេបង្កើតឡើងនៅឆ្នាំ 1434 ទីក្រុងនេះត្រូវបានគេកត់សម្គាល់ដោយសារស្ថាបត្យកម្មដ៏ស្រស់ស្អាតនិងប្រវត្តិសាស្រ្ត។ មានអាគារអាណានិគមបារាំងខ្លះនៅរស់រានមានជីវិតនៅតាមមហាវិថីធំ។
+				ស្ថិតនៅលើច្រាំងទន្លេទន្លេសាបមេគង្គនិងទន្លេបាសាក់តំបន់ទីរួមខេត្តភ្នំពេញគឺជាលំនៅរបស់ប្រជាពលរដ្ឋកម្ពុជាប្រមាណជាង 1,5 លាននាក់ដែលមានចំនួនជាង 14,8 លាននាក់។ [6]
+			</p>
+
+			<!-- Footer -->
+			<center>
+				<footer>
+					<div class="foot_logo">
+						<a href="Index.html">TosGo</a>
+					</div>
+					<p class="Term_of_Use">&emsp;&emsp;2018 TosGo LLC All rights reserved. Terms of Use | Privacy Policy | Site Map</p>
+					<a href="#" class="feed_back">feedback@TosGo.com</a>
+				</footer>
+			</center>
+		</div>
 </body>
 
 </html>
