--- a/Preas vihere.html
+++ b/Preas vihere.html
@@ -11,73 +11,73 @@
 	<div class="navbar-fixed">
 		<nav>
 			<div class="nav-wrapper mycolor">
-				<a href="Index.html" class="brand-logo">TosGo</a>
-				<ul id="nav-mobile" class="right hide-on-med-and-down nav-ul">
-					<li><a href="Index.html">Home</a></li>
-					<li><a href="Travel.html">WhereToGo</a></li>
-					<li><a href="Career.html">Career</a></li>
-					<li><a href="About.html">AboutUs</a></li>
-				</ul>
-			</div>
+				<div class="nav-wrapper container"><a id="logo-container" href="Index.html" class="brand-logo">TosGo</a>
+					<ul id="nav-mobile" class="right hide-on-med-and-down nav-ul">
+						<li><a href="Index.html">Home</a></li>
+						<li><a href="Travel.html">WhereToGo</a></li>
+						<li><a href="Career.html">Career</a></li>
+						<li><a href="About.html">AboutUs</a></li>
+					</ul>
+				</div>
 		</nav>
-	</div>
+		</div>
 
-	<img src="./img/gallery/Prehvihear/xpreah-vihear-0.jpg.pagespeed.ic.U9wJ613qeI.jpg" width="100%" height="">
-	<font face="Khmer OS Freehand" size="8" color="#1EAE98">
-		&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;ខេត្តព្រះវិហារ <br>
-	</font>
-	<img src="./img/gallery/Prehvihear/maxresdefault (1).jpg" width="" height="400" align="right" hspace="30">
+		<img src="./img/gallery/Prehvihear/xpreah-vihear-0.jpg.pagespeed.ic.U9wJ613qeI.jpg" width="100%" height="">
+		<font face="Khmer OS Freehand" size="8" color="#1EAE98">
+			&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;ខេត្តព្រះវិហារ <br>
+		</font>
+		<img src="./img/gallery/Prehvihear/maxresdefault (1).jpg" width="" height="400" align="right" hspace="30">
 
-	<font face="Khmer OS Freehand" size="4">
-		<p>
-			&emsp;&emsp;តាមរយៈការសិក្សាស្រាវជ្រាវអាចសន្មតថា សំណង់ប្រាសាទព្រះវិហារត្រូវបានចាប់ផ្តើមកសាងឡើងដំបូងនៅដើមសតវត្សទី៩ ក្នុងរជ្ជកាលព្រះបាទជ័យវរ្ម័នទី២ (៨០២-៨៥០)។ តាមរយៈសិលាចារឹកលេខ K-៥៨៣ នៅប្រាសាទបាពួន សរសេរក្នុងរជ្ជកាលព្រះបាទរាជេន្ទ្រវរ្ម័នទី២ (៨៤៤-៩៦៨) និយាយថាព្រះអម្ចាស់ឥន្រ្ទាយុទ្ធជាព្រះបុត្រារបស់ព្រះបាទជ័យវរ្ម័នទី២
-			បានទៅធ្វើតបៈនៅភ្នំលិង្គបព៌ត(ប្រាសាទវត្តភូចំប៉ាសាក់ប្រទេសឡាវ) ហើយបាននាំយកលិង្គព្រះឥសូរពីថ្មលិង្គភ្នំធម្មជាតិ (ស្វយម្ភូលិង្គ) មកតម្កល់នៅលើភ្នំព្រះវិហារក្នុងព្រះនាមអាទិទេព ព្រះស្រីសិខរីស្វរៈ ដែលមានន័យថាអាទិទេពនៃកំពូលភ្នំ។ ស្រីសិខរីស្វរៈនេះហើយដែលហៅចំពោះលិង្គព្រះឥសូរតម្កល់នៅប្រាសាទព្រះវិហារនិងជាឈ្មោះប្រាសាទព្រះវិហារសម័យបុរាណផង។
-			ប្រាសាទព្រះវិហារសាងសង់សម្រាប់ឧទ្ទិសចំពោះព្រះឥសូរ ក្នុងសាសនាព្រាហ្មណ៍។ <br> តាមការស្រាវជ្រាវពីឯកសារប្រវត្តិសាស្រ្តខ្មែរជាច្រើន បានឱ្យដឹងថា ប្រាសាទព្រះវិហារត្រូវបានស្ថាបនាឡើងពីថ្មភក់ ចាប់តាំងពីរជ្ជកាល ព្រះបាទសូរ្យវរ្ម័នទី១ ។ ព្រះបាទសូរ្យវរ្ម័នទី១
-			សោយរាជ្យ នៅពាក់កណ្តាលទីមួយនៃសតវត្សទី១១។ ទីតាំងធ្វើប្រាសាទ ដែលស្ថិតនៅលើទីខ្ពស់ជាងគេ នោះមានកំពស់ ៦២៥ម៉ែត្រ (ឯកសារបារាំង) ឬ៦១៥ម៉ែត្រ (ឯកសារអង់គ្លេស) ។ ប្រវត្តិនៃការកសាងប្រាសាទព្រះវិហារ មាននៅលើសិលាចារឹកខ្មែរនៅ ប្រាសាទបាពួន ក្នុងខេត្តសៀមរាប គឺកាលេខ ៥៨៣
-			៖ អ្នកដែលសរសេរសិលាចារឹកគឺមានឈ្មោះ ហរិ វាហៈ នៅក្នុងរជ្ជកាលព្រះបាទរាជេន្រ្ទវរ្ម័នទី១ គ្រិស្តសករាជ ៩៤៤ ដល់ ៩៦៨ ។ បានសរសេរជាភាសាសំស្រ្កឹតនិងជាភាសាខ្មែរបុរាណ ។ បានចារថា មានព្រះអង្គម្ចាស់មួយអង្គព្រះនាម ឥន្រ្ទាយុទ្ធ លោកបានយកលិង្គមួយ ឈ្មោះ ស្រីសិខ រិស្វរៈ
-			មកតាំងមកប្រតិស្ឋនៅទីនេះៗ គឺប្រាសាទព្រះវិហារនេះ។ ព្រះអង្គលោកខ្លាំងពូកែខ្លាំងណាស់ ។ លោកមានមហិទ្ធិឫទ្ធិ ទៅច្បាំងជាមួយនឹងស្តេចចាម ហើយចាប់ស្តេចចាមនោះបានទៀត ។ ចំពោះសេចក្តីសិលាចារឹកនេះ អ្នកប្រាជ្ញខាងប្រវត្តិសាស្ត្រគិតថា មិនមានសិលាចារឹកឯណាទៀត និយាយពីចម្បាំងទៅចាប់ស្តេចចាមនោះទេ
-			ក៏ប៉ុន្តែស្តេចដែលលោកចាប់បាននោះ ប្រហែលជាមិនមែនជាស្តេចចាម ដែលត្រួតប្រទេសចាមទាំងមូលនោះទេ ។ ប្រហែលជាស្តេចអង្គតូចមួយ ដែលត្រួតនៅនគរមួយ ដែលមានព្រំប្រទល់នៅជាប់នឹងប្រទេសខ្មែរ។ ប្រាសាទព្រះវិហារ ត្រូវបានបារាំងប្រគល់ទៅឱ្យប្រទេសថៃកាន់កាប់នៅឆ្នាំ១៩៥៤ ហើយត្រូវបានប្រគល់ឱ្យព្រះរាជាណាចក្រកម្ពុជាវិញតាមសាលក្រមចុះថ្ងៃទី១៥
-			ខែមិថុនា ឆ្នាំ១៩៦២ នៅតុលាការអន្តរជាតិនៅក្រុងឡាអេ។
-		</p>
-	</font>
-	<img src="./img/gallery/Prehvihear/a-picture-really-is-worth.jpg" width="" height="400" align="left" hspace="30">
-	<font face="Khmer OS Freehand" size="6" color="#1EAE98">
-		&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;ប្រាសាទ​កោះកេរ្តិ៍
-	</font>
-	<font face="Khmer OS Freehand" size="4">
-		<P>
-			សព្វថៃ្ងនេះ យ៉ាងហោចណាស់ក្នុងមួយថៃ្ង មានភ្ញៀវទេសចរណ៍បរទេស ពី២០ ទៅ៤០នាក់ ដែលបានទៅទស្សនាតំបន់ប្រវត្តិសាស្រ្តកោះកេរ្តិ៍ នៅឃុំស្រយង់ ស្រុកគូលែន ខេត្តព្រះវិហារ បន្ទាប់ពីក្រុមហ៊ុនខាំសូមេធបានវិនិយោគទុនធ្វើផ្លូវល្អស្អាតរួចមក។ កំណើនភ្ញៀវទេសចរណ៍ ទៅកាន់តំបន់ប្រាសាទកោះកេរ្តិ៍ខាងលើនេះ
-			មិនបាននិយាយពីភ្ញៀវទេសចរណ៍ក្នុងស្រុកផងទេ។ លោកខេង សុមេធ នាយកក្រុមហ៊ុនខាំសូមេធ ដែលទទួលសិទ្ធិពីរាជរដ្ឋាភិបាលកម្ពុជាធ្វើការអភិវឌ្ឍនៅតំបន់ប្រាសាទកោះកេរ្តិ៍ ខេត្តព្រះវិហារ នោះបាននិយាយថា ផ្លូវប្រវែង ១០៥គីឡូម៉ែត្រចេញពីរង្វង់មូល ភ្នំគូលែនទៅដល់ ប្រាសាទកោះកេរ្តិ៍
-			គឺបានធ្វើរួចរាល់ហើយ។ តាមរយៈផ្លូវដ៏ស្អាតនោះ ធ្វើឲ្យចំនួនភ្ញៀវទេសចរណ៍បរទេស និងភ្ញៀវទេសចរណ៍ក្នុងស្រុក មានការកើនឡើងជាលំដាប់ លោកបាននិយាយថា ទោះបីជាផ្លូវនោះល្អហើយក្តី ក៏ក្រុមហ៊ុននៅតែកែសម្រួលជារៀងរាល់ថៃ្ង ដើម្បីឲ្យបានកាន់តែប្រសើរឡើងសម្រាប់ការធ្វើដំណើររបស់ភ្ញៀវទេសចរណ៍
-			បានប្រកបដោយសុវត្ថិភាព ក៏ដូចជាសម្រាប់ប្រជាពលរដ្ឋនៅក្នុងតំបន់មានភាពងាយស្រួលក្នុងការធ្វើដំណើរឆ្លងកាត់ ពីតំបន់មួយទៅតំបន់មួយផងដែរ។ <br> ប្រាសាទកោះកេរ្តិ៍បានកសាងឡើងក្នុងរជ្ជកាលព្រះបាទជ័យវរ័្មនទី20 ឧទ្ទិសថ្វាយព្រះឥសូរតាមបែបព្រហ្មញ្ញសាសនា។ ប្រាសាទនេះពីដើមឈ្មោះឆកគគីរ
-			ឬផៃ្ទដីគោកគគីរ សព្វថៃ្ងហៅថា អតីតរាជធានីកោះកេរ្ត៍ មានទំហំផៃ្ទដី១៦X១៦គីឡូម៉ែត្រ រួមមាន៩៨ប្រាសាទ។ ប្រាសាទនេះមាន៧ជាន់ មានកំពស់ ៣៥ម៉ែត្រ ដែលកសាងឡើងតាំងពីសម័យបុរាណ ទុកសំរាប់ជាការគោរពបូជាតាមលទ្ធិព្រហ្មញ្ញសាសនា។ </P>
-		<p>
-	</font>
-	<font face="Khmer OS Freehand" size="6" color="#1EAE98">
-		&emsp;&emsp;ភ្នំត្បែង<br>
-	</font>
-	<img src="./img/gallery/Prehvihear/20157860_1399144563488125_4929780740817470438_o-1024x683.jpg" width="500" height="400" align="left" hspace="30">
-	<img src="./img/gallery/Prehvihear/20604573_2025594484326897_6411473224789460691_n.jpg" width="500" height="400" align="center" hspace="35">
-	<img src="./img/gallery/Prehvihear/20638430_1257221587733035_3002975009876109523_n.jpg" width="500" height="400" align="right" hspace="20">
-	<font face="Khmer OS Freehand" size="4">
-		<p>
-			&emsp;&emsp;លោកជឿជាក់ថា ដំណើរ​កំសាន្ត​ផ្លូវ​ការ​ទី១​របស់​លោក​ទៅ​កាន់​ភ្នំ​ត្បែង​នឹង​ទទួល​បាន​ជោគ​ជ័យព្រោះថាអ្នកធ្វើដំណើរទាំងអស់នឹងភ្ញាក់ផ្អើលជាមួយនឹងសម្រស់ធម្មជាតិ តាំងពីជើងភ្នំ រហូតដល់កន្លែងកំសាន្តនានា ហើយលោកជឿជាក់ថា អ្នកបោះតង់ទាំងអស់នឹងនិយាយ​ពាក្យមួយថាអស្ចារ្យ។
-			ហេតុអ្វីបានជាភ្នំត្បែងគឺជាកន្លែងទាក់ទាញសម្រាប់ការធ្វើដំណើរកំសាន្ត? គ្រប់ដណ្តប់លើផ្ទៃដីធម្មជាតិប្រមាណជាង​២ម៉ឺន៥ពាន់ហិកតា តំបន់ភ្នំត្បែង ​មាន​សម្រស់​ធម្មជាតិ​​ស្អាតដាច់គេ មានទឹកធ្លាក់បីតង់តាម៉ា ទឹកធ្លាក់តាំងយូរ ឬចាក់អង្រែ រូងប្រជៀវភ្នំត្បែង និង​ទី​តាំងសក្ការៈថ្មីបីដុំ។
-			ប៉ុន្តែមុននឹងឡើងដល់ទីតាំងដ៏ស្រស់ស្អាតទាំងនេះ អ្នកធ្វើ​ដំណើរ​ត្រូវ​ឆ្លង​កាត់ផ្លូវជម្រេលភ្នំ ដែលអមសងខាងដោយចំការចេកដាក់កន្ទុយភ្នែក ហើយ​អ្វីដែល​សំខាន់​នោះ​​​គឺការឡើងភ្នំដែលមានកម្ពស់ជាង៤០០ម៉ែត្រដែលមានកាំជណ្តើរ១ពាន់៨រយ​កាំ។ សូមបញ្ជាក់ថា រាជរដ្ឋាភិបាលកម្ពុជាតាមរយៈសំណើររបស់ក្រសួងបរិស្ថាន
-			បានដាក់បញ្ចូល​តំ​បន់ភ្នំត្បែងចូលជាសម្បត្តិបេតិកភណ្ឌធម្មជាតិកាលពីថ្ងៃទី១៣ ខែកញ្ញា ឆ្នាំ២០១៦។ តំបន់បេតិកភណ្ឌភ្នំត្បែងគ្រប់ដណ្តប់ចំនួន៥ស្រុក គឺស្រុក គូលេន សង្គមថ្មី ត្បែងមានជ័យ ក្រុងព្រះវិហារ និងរវៀង៕
-		</p>
-	</font>
+		<font face="Khmer OS Freehand" size="4">
+			<p>
+				&emsp;&emsp;តាមរយៈការសិក្សាស្រាវជ្រាវអាចសន្មតថា សំណង់ប្រាសាទព្រះវិហារត្រូវបានចាប់ផ្តើមកសាងឡើងដំបូងនៅដើមសតវត្សទី៩ ក្នុងរជ្ជកាលព្រះបាទជ័យវរ្ម័នទី២ (៨០២-៨៥០)។ តាមរយៈសិលាចារឹកលេខ K-៥៨៣ នៅប្រាសាទបាពួន សរសេរក្នុងរជ្ជកាលព្រះបាទរាជេន្ទ្រវរ្ម័នទី២ (៨៤៤-៩៦៨) និយាយថាព្រះអម្ចាស់ឥន្រ្ទាយុទ្ធជាព្រះបុត្រារបស់ព្រះបាទជ័យវរ្ម័នទី២
+				បានទៅធ្វើតបៈនៅភ្នំលិង្គបព៌ត(ប្រាសាទវត្តភូចំប៉ាសាក់ប្រទេសឡាវ) ហើយបាននាំយកលិង្គព្រះឥសូរពីថ្មលិង្គភ្នំធម្មជាតិ (ស្វយម្ភូលិង្គ) មកតម្កល់នៅលើភ្នំព្រះវិហារក្នុងព្រះនាមអាទិទេព ព្រះស្រីសិខរីស្វរៈ ដែលមានន័យថាអាទិទេពនៃកំពូលភ្នំ។ ស្រីសិខរីស្វរៈនេះហើយដែលហៅចំពោះលិង្គព្រះឥសូរតម្កល់នៅប្រាសាទព្រះវិហារនិងជាឈ្មោះប្រាសាទព្រះវិហារសម័យបុរាណផង។
+				ប្រាសាទព្រះវិហារសាងសង់សម្រាប់ឧទ្ទិសចំពោះព្រះឥសូរ ក្នុងសាសនាព្រាហ្មណ៍។ <br> តាមការស្រាវជ្រាវពីឯកសារប្រវត្តិសាស្រ្តខ្មែរជាច្រើន បានឱ្យដឹងថា ប្រាសាទព្រះវិហារត្រូវបានស្ថាបនាឡើងពីថ្មភក់ ចាប់តាំងពីរជ្ជកាល ព្រះបាទសូរ្យវរ្ម័នទី១ ។ ព្រះបាទសូរ្យវរ្ម័នទី១
+				សោយរាជ្យ នៅពាក់កណ្តាលទីមួយនៃសតវត្សទី១១។ ទីតាំងធ្វើប្រាសាទ ដែលស្ថិតនៅលើទីខ្ពស់ជាងគេ នោះមានកំពស់ ៦២៥ម៉ែត្រ (ឯកសារបារាំង) ឬ៦១៥ម៉ែត្រ (ឯកសារអង់គ្លេស) ។ ប្រវត្តិនៃការកសាងប្រាសាទព្រះវិហារ មាននៅលើសិលាចារឹកខ្មែរនៅ ប្រាសាទបាពួន ក្នុងខេត្តសៀមរាប គឺកាលេខ ៥៨៣
+				៖ អ្នកដែលសរសេរសិលាចារឹកគឺមានឈ្មោះ ហរិ វាហៈ នៅក្នុងរជ្ជកាលព្រះបាទរាជេន្រ្ទវរ្ម័នទី១ គ្រិស្តសករាជ ៩៤៤ ដល់ ៩៦៨ ។ បានសរសេរជាភាសាសំស្រ្កឹតនិងជាភាសាខ្មែរបុរាណ ។ បានចារថា មានព្រះអង្គម្ចាស់មួយអង្គព្រះនាម ឥន្រ្ទាយុទ្ធ លោកបានយកលិង្គមួយ ឈ្មោះ ស្រីសិខ រិស្វរៈ
+				មកតាំងមកប្រតិស្ឋនៅទីនេះៗ គឺប្រាសាទព្រះវិហារនេះ។ ព្រះអង្គលោកខ្លាំងពូកែខ្លាំងណាស់ ។ លោកមានមហិទ្ធិឫទ្ធិ ទៅច្បាំងជាមួយនឹងស្តេចចាម ហើយចាប់ស្តេចចាមនោះបានទៀត ។ ចំពោះសេចក្តីសិលាចារឹកនេះ អ្នកប្រាជ្ញខាងប្រវត្តិសាស្ត្រគិតថា មិនមានសិលាចារឹកឯណាទៀត និយាយពីចម្បាំងទៅចាប់ស្តេចចាមនោះទេ
+				ក៏ប៉ុន្តែស្តេចដែលលោកចាប់បាននោះ ប្រហែលជាមិនមែនជាស្តេចចាម ដែលត្រួតប្រទេសចាមទាំងមូលនោះទេ ។ ប្រហែលជាស្តេចអង្គតូចមួយ ដែលត្រួតនៅនគរមួយ ដែលមានព្រំប្រទល់នៅជាប់នឹងប្រទេសខ្មែរ។ ប្រាសាទព្រះវិហារ ត្រូវបានបារាំងប្រគល់ទៅឱ្យប្រទេសថៃកាន់កាប់នៅឆ្នាំ១៩៥៤ ហើយត្រូវបានប្រគល់ឱ្យព្រះរាជាណាចក្រកម្ពុជាវិញតាមសាលក្រមចុះថ្ងៃទី១៥
+				ខែមិថុនា ឆ្នាំ១៩៦២ នៅតុលាការអន្តរជាតិនៅក្រុងឡាអេ។
+			</p>
+		</font>
+		<img src="./img/gallery/Prehvihear/a-picture-really-is-worth.jpg" width="" height="400" align="left" hspace="30">
+		<font face="Khmer OS Freehand" size="6" color="#1EAE98">
+			&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;ប្រាសាទ​កោះកេរ្តិ៍
+		</font>
+		<font face="Khmer OS Freehand" size="4">
+			<P>
+				សព្វថៃ្ងនេះ យ៉ាងហោចណាស់ក្នុងមួយថៃ្ង មានភ្ញៀវទេសចរណ៍បរទេស ពី២០ ទៅ៤០នាក់ ដែលបានទៅទស្សនាតំបន់ប្រវត្តិសាស្រ្តកោះកេរ្តិ៍ នៅឃុំស្រយង់ ស្រុកគូលែន ខេត្តព្រះវិហារ បន្ទាប់ពីក្រុមហ៊ុនខាំសូមេធបានវិនិយោគទុនធ្វើផ្លូវល្អស្អាតរួចមក។ កំណើនភ្ញៀវទេសចរណ៍ ទៅកាន់តំបន់ប្រាសាទកោះកេរ្តិ៍ខាងលើនេះ
+				មិនបាននិយាយពីភ្ញៀវទេសចរណ៍ក្នុងស្រុកផងទេ។ លោកខេង សុមេធ នាយកក្រុមហ៊ុនខាំសូមេធ ដែលទទួលសិទ្ធិពីរាជរដ្ឋាភិបាលកម្ពុជាធ្វើការអភិវឌ្ឍនៅតំបន់ប្រាសាទកោះកេរ្តិ៍ ខេត្តព្រះវិហារ នោះបាននិយាយថា ផ្លូវប្រវែង ១០៥គីឡូម៉ែត្រចេញពីរង្វង់មូល ភ្នំគូលែនទៅដល់ ប្រាសាទកោះកេរ្តិ៍
+				គឺបានធ្វើរួចរាល់ហើយ។ តាមរយៈផ្លូវដ៏ស្អាតនោះ ធ្វើឲ្យចំនួនភ្ញៀវទេសចរណ៍បរទេស និងភ្ញៀវទេសចរណ៍ក្នុងស្រុក មានការកើនឡើងជាលំដាប់ លោកបាននិយាយថា ទោះបីជាផ្លូវនោះល្អហើយក្តី ក៏ក្រុមហ៊ុននៅតែកែសម្រួលជារៀងរាល់ថៃ្ង ដើម្បីឲ្យបានកាន់តែប្រសើរឡើងសម្រាប់ការធ្វើដំណើររបស់ភ្ញៀវទេសចរណ៍
+				បានប្រកបដោយសុវត្ថិភាព ក៏ដូចជាសម្រាប់ប្រជាពលរដ្ឋនៅក្នុងតំបន់មានភាពងាយស្រួលក្នុងការធ្វើដំណើរឆ្លងកាត់ ពីតំបន់មួយទៅតំបន់មួយផងដែរ។ <br> ប្រាសាទកោះកេរ្តិ៍បានកសាងឡើងក្នុងរជ្ជកាលព្រះបាទជ័យវរ័្មនទី20 ឧទ្ទិសថ្វាយព្រះឥសូរតាមបែបព្រហ្មញ្ញសាសនា។ ប្រាសាទនេះពីដើមឈ្មោះឆកគគីរ
+				ឬផៃ្ទដីគោកគគីរ សព្វថៃ្ងហៅថា អតីតរាជធានីកោះកេរ្ត៍ មានទំហំផៃ្ទដី១៦X១៦គីឡូម៉ែត្រ រួមមាន៩៨ប្រាសាទ។ ប្រាសាទនេះមាន៧ជាន់ មានកំពស់ ៣៥ម៉ែត្រ ដែលកសាងឡើងតាំងពីសម័យបុរាណ ទុកសំរាប់ជាការគោរពបូជាតាមលទ្ធិព្រហ្មញ្ញសាសនា។ </P>
+			<p>
+		</font>
+		<font face="Khmer OS Freehand" size="6" color="#1EAE98">
+			&emsp;&emsp;ភ្នំត្បែង<br>
+		</font>
+		<img src="./img/gallery/Prehvihear/20157860_1399144563488125_4929780740817470438_o-1024x683.jpg" width="500" height="400" align="left" hspace="30">
+		<img src="./img/gallery/Prehvihear/20604573_2025594484326897_6411473224789460691_n.jpg" width="500" height="400" align="center" hspace="35">
+		<img src="./img/gallery/Prehvihear/20638430_1257221587733035_3002975009876109523_n.jpg" width="500" height="400" align="right" hspace="20">
+		<font face="Khmer OS Freehand" size="4">
+			<p>
+				&emsp;&emsp;លោកជឿជាក់ថា ដំណើរ​កំសាន្ត​ផ្លូវ​ការ​ទី១​របស់​លោក​ទៅ​កាន់​ភ្នំ​ត្បែង​នឹង​ទទួល​បាន​ជោគ​ជ័យព្រោះថាអ្នកធ្វើដំណើរទាំងអស់នឹងភ្ញាក់ផ្អើលជាមួយនឹងសម្រស់ធម្មជាតិ តាំងពីជើងភ្នំ រហូតដល់កន្លែងកំសាន្តនានា ហើយលោកជឿជាក់ថា អ្នកបោះតង់ទាំងអស់នឹងនិយាយ​ពាក្យមួយថាអស្ចារ្យ។
+				ហេតុអ្វីបានជាភ្នំត្បែងគឺជាកន្លែងទាក់ទាញសម្រាប់ការធ្វើដំណើរកំសាន្ត? គ្រប់ដណ្តប់លើផ្ទៃដីធម្មជាតិប្រមាណជាង​២ម៉ឺន៥ពាន់ហិកតា តំបន់ភ្នំត្បែង ​មាន​សម្រស់​ធម្មជាតិ​​ស្អាតដាច់គេ មានទឹកធ្លាក់បីតង់តាម៉ា ទឹកធ្លាក់តាំងយូរ ឬចាក់អង្រែ រូងប្រជៀវភ្នំត្បែង និង​ទី​តាំងសក្ការៈថ្មីបីដុំ។
+				ប៉ុន្តែមុននឹងឡើងដល់ទីតាំងដ៏ស្រស់ស្អាតទាំងនេះ អ្នកធ្វើ​ដំណើរ​ត្រូវ​ឆ្លង​កាត់ផ្លូវជម្រេលភ្នំ ដែលអមសងខាងដោយចំការចេកដាក់កន្ទុយភ្នែក ហើយ​អ្វីដែល​សំខាន់​នោះ​​​គឺការឡើងភ្នំដែលមានកម្ពស់ជាង៤០០ម៉ែត្រដែលមានកាំជណ្តើរ១ពាន់៨រយ​កាំ។ សូមបញ្ជាក់ថា រាជរដ្ឋាភិបាលកម្ពុជាតាមរយៈសំណើររបស់ក្រសួងបរិស្ថាន
+				បានដាក់បញ្ចូល​តំ​បន់ភ្នំត្បែងចូលជាសម្បត្តិបេតិកភណ្ឌធម្មជាតិកាលពីថ្ងៃទី១៣ ខែកញ្ញា ឆ្នាំ២០១៦។ តំបន់បេតិកភណ្ឌភ្នំត្បែងគ្រប់ដណ្តប់ចំនួន៥ស្រុក គឺស្រុក គូលេន សង្គមថ្មី ត្បែងមានជ័យ ក្រុងព្រះវិហារ និងរវៀង៕
+			</p>
+		</font>
 
-	<!-- Footer -->
-	<center>
-		<footer>
-			<div class="foot_logo">
-				<a href="index.html">TosGo</a>
-			</div>
-			<p>&emsp;&emsp;2018 TosGo LLC All rights reserved. Terms of Use | Privacy Policy | Site Map</p>
-			<a href="#" class="feed_back">feedback@TosGo.com</a>
-		</footer>
-	</center>
+		<!-- Footer -->
+		<center>
+			<footer>
+				<div class="foot_logo">
+					<a href="Index.html">TosGo</a>
+				</div>
+				<p>&emsp;&emsp;2018 TosGo LLC All rights reserved. Terms of Use | Privacy Policy | Site Map</p>
+				<a href="#" class="feed_back">feedback@TosGo.com</a>
+			</footer>
+		</center>
 </body>
 
 </html>
