--- a/Prey Veng.html
+++ b/Prey Veng.html
@@ -11,111 +11,111 @@
 	<div class="navbar-fixed">
 		<nav>
 			<div class="nav-wrapper mycolor">
-				<a href="Index.html" class="brand-logo">TosGo</a>
-				<ul id="nav-mobile" class="right hide-on-med-and-down nav-ul">
-					<li><a href="Index.html">Home</a></li>
-					<li><a href="Travel.html">WhereToGo</a></li>
-					<li><a href="Career.html">Career</a></li>
-					<li><a href="About.html">AboutUs</a></li>
-				</ul>
-			</div>
+				<div class="nav-wrapper container"><a id="logo-container" href="Index.html" class="brand-logo">TosGo</a>
+					<ul id="nav-mobile" class="right hide-on-med-and-down nav-ul">
+						<li><a href="Index.html">Home</a></li>
+						<li><a href="Travel.html">WhereToGo</a></li>
+						<li><a href="Career.html">Career</a></li>
+						<li><a href="About.html">AboutUs</a></li>
+					</ul>
+				</div>
 		</nav>
-	</div>
+		</div>
 
-	<img src=".\img\gallery\PreyVeng\cover.jpg" height="70%" width="100%">
+		<img src=".\img\gallery\PreyVeng\cover.jpg" height="70%" width="100%">
 
-	<div class="container">
-		<center>
-			<div class="title">
-				ខេត្តព្រៃវែង
-			</div>
-		</center>
+		<div class="container">
+			<center>
+				<div class="title">
+					ខេត្តព្រៃវែង
+				</div>
+			</center>
 
-		<p>
-			&emsp;&emsp;ខេត្ត​ព្រៃវែង​ ជាតំបន់​ទេសចរណ៍មួយ ដ៏ទាក់ទាញ បែប វប្បធម៌ និង ​ធម្មជាតិ កែឆ្នៃដែលមានតំបន់​ទេសចរណ៍​ ជាច្រើនកន្លែង​ សំរាប់​ភ្ញៀវ​ទេសចរណ៍​ជាតិ ​និង អន្តរជាតិមក​ទស្សនា ​កំសាន្ត។ ក្នុងចំណោចនោះ មានតំបន់ទេសចរណ៍មួយ មានឈ្មោះថា៖ នគរភ្នំ ជារមណីយដ្ឋានគំរូមួយ
-			ស្ថិតនៅក្នុង ស្រុកបាភ្នំ ដែលសម្បូរណ៍ទៅដោយ បរិយាកាសធម្មជាតិ មានខ្យល់បរិសុទ្ធ ព្រៃឈើ និង វាលស្រែពណ៌បៃតង ខៀវស្រងាត់ នៅជុំវិញ។ ជាពិសេស រមណីយដ្ឋាន នគរភ្នំ ជាតំបន់ ដ៏ស័ក្តសិទ្ធិមួយ ដែលប្រជាជន ភ្ញៀវជាតិនិង អន្តរជាតិ មកពីគ្រប់ទិសទី មកទស្សនា និងជួបជុំគ្នា ដើម្បីប្រារព្ធ
-			ពិធីបុណ្យឡើង អ្នកតា មេសរ មានរយៈពេល ៣ថ្ងៃ ដែលមានតំាងពីដូនតា មក ដើម្បីរលឹកគុណបុព្វ បុរស សុំសេចក្តីសុខ សុំទឹកភ្លៀង និង ការពារប្រជាជន នៅក្នុងភូមិ។ខេត្តនេះត្រូវបានបែងចែកទៅជាស្រុកចំនួន 12 ដូចជា៖ ស្រុកបាភ្នំ ស្រុកកំចាយមារ ស្រុកកំពង់ត្របែក ស្រុកកន្សែង ស្រុកមេសាង
-			​ស្រុកប៉ោចុន ស្រុកពាម ស្រុកពារាំង ស្រុកព្រះស្តេច​ ស្រុកប៉ោរាំង ស្រុកស៊ីធរកណ្តាល ស្រុកស្វាយអន្ទរ។
-		</p>
+			<p>
+				&emsp;&emsp;ខេត្ត​ព្រៃវែង​ ជាតំបន់​ទេសចរណ៍មួយ ដ៏ទាក់ទាញ បែប វប្បធម៌ និង ​ធម្មជាតិ កែឆ្នៃដែលមានតំបន់​ទេសចរណ៍​ ជាច្រើនកន្លែង​ សំរាប់​ភ្ញៀវ​ទេសចរណ៍​ជាតិ ​និង អន្តរជាតិមក​ទស្សនា ​កំសាន្ត។ ក្នុងចំណោចនោះ មានតំបន់ទេសចរណ៍មួយ មានឈ្មោះថា៖ នគរភ្នំ ជារមណីយដ្ឋានគំរូមួយ
+				ស្ថិតនៅក្នុង ស្រុកបាភ្នំ ដែលសម្បូរណ៍ទៅដោយ បរិយាកាសធម្មជាតិ មានខ្យល់បរិសុទ្ធ ព្រៃឈើ និង វាលស្រែពណ៌បៃតង ខៀវស្រងាត់ នៅជុំវិញ។ ជាពិសេស រមណីយដ្ឋាន នគរភ្នំ ជាតំបន់ ដ៏ស័ក្តសិទ្ធិមួយ ដែលប្រជាជន ភ្ញៀវជាតិនិង អន្តរជាតិ មកពីគ្រប់ទិសទី មកទស្សនា និងជួបជុំគ្នា
+				ដើម្បីប្រារព្ធ ពិធីបុណ្យឡើង អ្នកតា មេសរ មានរយៈពេល ៣ថ្ងៃ ដែលមានតំាងពីដូនតា មក ដើម្បីរលឹកគុណបុព្វ បុរស សុំសេចក្តីសុខ សុំទឹកភ្លៀង និង ការពារប្រជាជន នៅក្នុងភូមិ។ខេត្តនេះត្រូវបានបែងចែកទៅជាស្រុកចំនួន 12 ដូចជា៖ ស្រុកបាភ្នំ ស្រុកកំចាយមារ ស្រុកកំពង់ត្របែក
+				ស្រុកកន្សែង ស្រុកមេសាង ​ស្រុកប៉ោចុន ស្រុកពាម ស្រុកពារាំង ស្រុកព្រះស្តេច​ ស្រុកប៉ោរាំង ស្រុកស៊ីធរកណ្តាល ស្រុកស្វាយអន្ទរ។
+			</p>
 
-		<center>
-			<font face="Khmer OS Muol Light" size="10" color="#00a680">
-				តំបន់ទេសចរណ៍សំខាន់ៗ
+			<center>
+				<font face="Khmer OS Muol Light" size="10" color="#00a680">
+					តំបន់ទេសចរណ៍សំខាន់ៗ
+				</font>
+			</center>
+
+			<font face="Khmer OS Muol Light" size="5" color="#00a680">
+				1.រមណីយដ្ឋានបាភ្នំ
 			</font>
-		</center>
+			<br><br>
+			<p>
+				&emsp;&emsp;បាភ្នំមានទីតាំងនៅឃុំឆេះកែស្រុកបាភ្នំប្រហែល 78 គីឡូម៉ែត្រខាងកើតរាជធានីភ្នំពេញនិង 45 គីឡូម៉ែត្រខាងត្បូងក្រុងព្រៃវែង។ ភ្ញៀវដែលធ្វើដំណើរពីរាជធានីភ្នំពេញតាមបណ្តោយផ្លូវជាតិលេខ 1 គួរត្រលប់ទៅខាងឆ្វេងនៅផ្សារកំពង់សែនហើយធ្វើដំណើរប្រហែល 7 គីឡូម៉ែត្រ។
+				មានភ្នំចំនួនបួននៅបាភ្នំ - ភ្នំសំពៅភ្នំឡាំងភ្នំធំនិងភ្នំបូកគោ។ បាភ្នំធ្លាប់ជាទីក្រុងបុរាណនគរភ្នំដែលមានទីតាំងនៅជិតភ្នំទាំងនេះនៅស្រុកបាភ្នំ។ សំណល់អំបិលក្នុងទីក្រុងនៅតែមាន។ ក្នុងចំណោមវត្ថុដែលអាចមើលឃើញបានគឺប្រាសាទប្រាសានបុរាណដែលមានទីតាំងនៅមុខវត្តវិហារគុកនៅជិតជើងសំពៅក្នុងឃុំជើងភូ។
+				នៅពេលមួយទីក្រុងក៏មានវាំងនិងសាលមួយដែរប៉ុន្តែទាំងពីរត្រូវបានបំផ្លាញដោយសង្គ្រាមជាច្រើនឆ្នាំ។ ទិដ្ឋភាពពីកំពូលភ្នំបាភ្នំគឺស្អាតណាស់។ មានរូងថ្មធំមួយនៅជិតភ្នំដែលជម្រកសត្វព្រៃ។ នៅជើងភ្នំវត្តភ្នំត្រូវបានគេស្គាល់ថាជាវត្តបាភ្នំ។ ផ្លូវនៅជុំវិញភ្នំនិងស្រះធំស្ថិតនៅភាគខាងកើត។
+				ប្រជាជនរស់នៅជុំវិញភ្នំ។ ក្រុងបាភ្នំកំពុងសម្លឹងមើលការអភិវឌ្ឍវិស័យទេសចរណ៍នៅភាគខាងកើតនៃទន្លេមេគង្គពីព្រោះតំបន់នេះទាក់ទាញមនុស្សជាច្រើននៅចុងសប្តាហ៍និងក្នុងពិធីបុណ្យកម្ពុជា។
+			</p>
+			<br>
+			<img src=".\img\gallery\PreyVeng\Ba-Phnom-Resort-2_large.jpg" height="auto" width="30%" hspace="10" vspace="10">
+			<img src=".\img\gallery\PreyVeng\Ba-Phnom-Resort-1_large.jpg" height="auto" width="30%" hspace="10" vspace="10">
+			<img src=".\img\gallery\PreyVeng\Ba-Phnom-Resort-4_large.jpg" height="auto" width="30%" hspace="10" vspace="10">
+			<p>ទិដ្ឋភាពពីកំពូលភ្នំបាភ្នំគឺស្អាតណាស់។ មានរូងថ្មធំមួយនៅជិតភ្នំដែលជម្រកសត្វព្រៃ។ នៅជើងភ្នំវត្តភ្នំត្រូវបានគេស្គាល់ថាជាវត្តបាភ្នំ។ ផ្លូវនៅជុំវិញភ្នំនិងស្រះធំស្ថិតនៅភាគខាងកើត។ ប្រជាជនរស់នៅជុំវិញភ្នំ។ ក្រុងបាភ្នំកំពុងសម្លឹងមើលការអភិវឌ្ឍវិស័យទេសចរណ៍នៅភាគខាងកើតនៃទន្លេមេគង្គពីព្រោះតំបន់នេះទាក់ទាញមនុស្សជាច្រើននៅចុងសប្តាហ៍និងក្នុងពិធីបុណ្យកម្ពុជា។
+				រមណីយដ្ឋានបាភ្នំមានភ្នំបួនដែលបិទគ្នាទៅវិញទៅមកដូចជា: សំប៉ោ, សឺន, ធូមនិងប៊ុនឆរ។ បាភ្នំគឺជាអតីតរាជធានីចាស់ដែលមានឈ្មោះថាគោគនភ្នំ។ សព្វថ្ងៃនេះវានៅតែមានភ័ស្តុតាងមួយចំនួនដូចជាប្រាសាទបុរាណដែលមានឈ្មោះថាប្រាសាចាន់ដែលស្ថិតនៅខាងមុខវត្តគុកដែលបិទទ្វារដល់ភ្នំសំប៉ៅឃុំជើងភ្នំសាលប្រជុំនិងព្រះបរមរាជវាំងត្រូវបានបំផ្លិចបំផ្លាញដោយសង្រ្គាមនៅពេលនោះ។
+				បាភ្នំមានទស្សនីយភាពដ៏ស្រស់ស្អាតនៅពេលមើលពីរូងភ្នំដ៏ធំនិងធំ ៗ ដែលជាជម្រកនៃជីវិតព្រៃ។ នៅជ្រលងភ្នំមានវត្តមួយឈ្មោះបាភ្នំ? ជួរភ្នំព័ទ្ធជុំវិញនិងស្រះធំមួយនៅខាងកើតវត្ត។ នៅជុំវិញភ្នំមានលំនៅដ្ឋានរបស់ប្រជាជនក្នុងតំបន់។
+			</p> <br>
+			<img src=".\img\gallery\PreyVeng\Ba-Phnom-Resort-7_large.jpg" height="auto" width="30%" hspace="10" vspace="10">
+			<img src=".\img\gallery\PreyVeng\Ba-Phnom-Resort-5_large.jpg" height="auto" width="30%" hspace="10" vspace="10">
+			<img src=".\img\gallery\PreyVeng\Ba-Phnom-Resort-6_large.jpg" height="auto" width="30%" hspace="10" vspace="10">
 
-		<font face="Khmer OS Muol Light" size="5" color="#00a680">
-			1.រមណីយដ្ឋានបាភ្នំ
-		</font>
-		<br><br>
-		<p>
-			&emsp;&emsp;បាភ្នំមានទីតាំងនៅឃុំឆេះកែស្រុកបាភ្នំប្រហែល 78 គីឡូម៉ែត្រខាងកើតរាជធានីភ្នំពេញនិង 45 គីឡូម៉ែត្រខាងត្បូងក្រុងព្រៃវែង។ ភ្ញៀវដែលធ្វើដំណើរពីរាជធានីភ្នំពេញតាមបណ្តោយផ្លូវជាតិលេខ 1 គួរត្រលប់ទៅខាងឆ្វេងនៅផ្សារកំពង់សែនហើយធ្វើដំណើរប្រហែល 7 គីឡូម៉ែត្រ។
-			មានភ្នំចំនួនបួននៅបាភ្នំ - ភ្នំសំពៅភ្នំឡាំងភ្នំធំនិងភ្នំបូកគោ។ បាភ្នំធ្លាប់ជាទីក្រុងបុរាណនគរភ្នំដែលមានទីតាំងនៅជិតភ្នំទាំងនេះនៅស្រុកបាភ្នំ។ សំណល់អំបិលក្នុងទីក្រុងនៅតែមាន។ ក្នុងចំណោមវត្ថុដែលអាចមើលឃើញបានគឺប្រាសាទប្រាសានបុរាណដែលមានទីតាំងនៅមុខវត្តវិហារគុកនៅជិតជើងសំពៅក្នុងឃុំជើងភូ។
-			នៅពេលមួយទីក្រុងក៏មានវាំងនិងសាលមួយដែរប៉ុន្តែទាំងពីរត្រូវបានបំផ្លាញដោយសង្គ្រាមជាច្រើនឆ្នាំ។ ទិដ្ឋភាពពីកំពូលភ្នំបាភ្នំគឺស្អាតណាស់។ មានរូងថ្មធំមួយនៅជិតភ្នំដែលជម្រកសត្វព្រៃ។ នៅជើងភ្នំវត្តភ្នំត្រូវបានគេស្គាល់ថាជាវត្តបាភ្នំ។ ផ្លូវនៅជុំវិញភ្នំនិងស្រះធំស្ថិតនៅភាគខាងកើត។
-			ប្រជាជនរស់នៅជុំវិញភ្នំ។ ក្រុងបាភ្នំកំពុងសម្លឹងមើលការអភិវឌ្ឍវិស័យទេសចរណ៍នៅភាគខាងកើតនៃទន្លេមេគង្គពីព្រោះតំបន់នេះទាក់ទាញមនុស្សជាច្រើននៅចុងសប្តាហ៍និងក្នុងពិធីបុណ្យកម្ពុជា។
-		</p>
-		<br>
-		<img src=".\img\gallery\PreyVeng\Ba-Phnom-Resort-2_large.jpg" height="auto" width="30%" hspace="10" vspace="10">
-		<img src=".\img\gallery\PreyVeng\Ba-Phnom-Resort-1_large.jpg" height="auto" width="30%" hspace="10" vspace="10">
-		<img src=".\img\gallery\PreyVeng\Ba-Phnom-Resort-4_large.jpg" height="auto" width="30%" hspace="10" vspace="10">
-		<p>ទិដ្ឋភាពពីកំពូលភ្នំបាភ្នំគឺស្អាតណាស់។ មានរូងថ្មធំមួយនៅជិតភ្នំដែលជម្រកសត្វព្រៃ។ នៅជើងភ្នំវត្តភ្នំត្រូវបានគេស្គាល់ថាជាវត្តបាភ្នំ។ ផ្លូវនៅជុំវិញភ្នំនិងស្រះធំស្ថិតនៅភាគខាងកើត។ ប្រជាជនរស់នៅជុំវិញភ្នំ។ ក្រុងបាភ្នំកំពុងសម្លឹងមើលការអភិវឌ្ឍវិស័យទេសចរណ៍នៅភាគខាងកើតនៃទន្លេមេគង្គពីព្រោះតំបន់នេះទាក់ទាញមនុស្សជាច្រើននៅចុងសប្តាហ៍និងក្នុងពិធីបុណ្យកម្ពុជា។
-			រមណីយដ្ឋានបាភ្នំមានភ្នំបួនដែលបិទគ្នាទៅវិញទៅមកដូចជា: សំប៉ោ, សឺន, ធូមនិងប៊ុនឆរ។ បាភ្នំគឺជាអតីតរាជធានីចាស់ដែលមានឈ្មោះថាគោគនភ្នំ។ សព្វថ្ងៃនេះវានៅតែមានភ័ស្តុតាងមួយចំនួនដូចជាប្រាសាទបុរាណដែលមានឈ្មោះថាប្រាសាចាន់ដែលស្ថិតនៅខាងមុខវត្តគុកដែលបិទទ្វារដល់ភ្នំសំប៉ៅឃុំជើងភ្នំសាលប្រជុំនិងព្រះបរមរាជវាំងត្រូវបានបំផ្លិចបំផ្លាញដោយសង្រ្គាមនៅពេលនោះ។
-			បាភ្នំមានទស្សនីយភាពដ៏ស្រស់ស្អាតនៅពេលមើលពីរូងភ្នំដ៏ធំនិងធំ ៗ ដែលជាជម្រកនៃជីវិតព្រៃ។ នៅជ្រលងភ្នំមានវត្តមួយឈ្មោះបាភ្នំ? ជួរភ្នំព័ទ្ធជុំវិញនិងស្រះធំមួយនៅខាងកើតវត្ត។ នៅជុំវិញភ្នំមានលំនៅដ្ឋានរបស់ប្រជាជនក្នុងតំបន់។
-		</p> <br>
-		<img src=".\img\gallery\PreyVeng\Ba-Phnom-Resort-7_large.jpg" height="auto" width="30%" hspace="10" vspace="10">
-		<img src=".\img\gallery\PreyVeng\Ba-Phnom-Resort-5_large.jpg" height="auto" width="30%" hspace="10" vspace="10">
-		<img src=".\img\gallery\PreyVeng\Ba-Phnom-Resort-6_large.jpg" height="auto" width="30%" hspace="10" vspace="10">
+			<font face="Khmer OS Muol Light" size="5" color="#00a680">
+				2.រមណីយដ្ឋានបារាយណ៍អណ្តែត
+			</font>
+			<br><br>
+			<p>
+				&emsp;&emsp;បារាយណ៍អណ្តែតស្ថិតនៅភូមិបារាយណ៍ឃុំបារាយណ៍ស្រុកព្រៃវែងចម្ងាយ 3 គីឡូម៉ែត្រខាងលិចក្រុងព្រៃវែង។ រមណីយដ្ឋានបារាយណ៍អណ្តែត គឺជាតំបន់ទេសចរណ៍ធម្មជាតិ ដ៏ស្រស់ស្អាត ពោរពេញទៅទេសភាពដ៏ស្រស់ត្រកាល ដែល​មាន​ទីតាំង​នៅ​ភូមិ​បារាយណ៍ ឃុំ​បារាយណ៍ ស្រុក​ព្រៃវែង
+				ចម្ងាយ​បី​គីឡូម៉ែត្រ នៅ​ខាងលិច​ទី​រួម​ខេត្ត​ព្រៃវែង​។ រមណីដ្ឋាន​នេះ មាន​ភ្នំ​នៅ​កណ្តាលវាល មាន​ដើមឈើ​ធំៗ​ព័ទ្ធជុំវិញ ហើយ​អ្នកភូមិ​មានជំនឿថា បារាយណ៍​អណ្តែត គឺជា​កន្លែង​ស័ក្តិសិទ្ធិ ដែល​យើង​អាច​ធ្វើ​ការស្បថ និង​បួងសួង​ផ្សេងៗ​បាន​ទៀត​ផង​។ ភ្លេងពិណពាទ្យ
+				ជាធម្មតា​ត្រូវបាន​គេ​ប្រគុំ​ថ្វាយ​អ្នកតា​រៀង​រាល់​ថ្ងៃសីល ថ្ងៃបុណ្យ ឬ​ថ្ងៃ​អាទិត្យ​ដើម្បី​សុំ​ទឹកភ្លៀង និង​សេចក្តីសុខ​៕
+			</p>
+			<br>
+			<center>
+				<img src=".\img\gallery\PreyVeng\baray2.jpg" height="auto" width="30%" hspace="10" vspace="10">
+				<img src=".\img\gallery\PreyVeng\baray4.jpg" height="auto" width="30%" hspace="10" vspace="10">
+			</center>
 
-		<font face="Khmer OS Muol Light" size="5" color="#00a680">
-			2.រមណីយដ្ឋានបារាយណ៍អណ្តែត
-		</font>
-		<br><br>
-		<p>
-			&emsp;&emsp;បារាយណ៍អណ្តែតស្ថិតនៅភូមិបារាយណ៍ឃុំបារាយណ៍ស្រុកព្រៃវែងចម្ងាយ 3 គីឡូម៉ែត្រខាងលិចក្រុងព្រៃវែង។ រមណីយដ្ឋានបារាយណ៍អណ្តែត គឺជាតំបន់ទេសចរណ៍ធម្មជាតិ ដ៏ស្រស់ស្អាត ពោរពេញទៅទេសភាពដ៏ស្រស់ត្រកាល ដែល​មាន​ទីតាំង​នៅ​ភូមិ​បារាយណ៍ ឃុំ​បារាយណ៍ ស្រុក​ព្រៃវែង
-			ចម្ងាយ​បី​គីឡូម៉ែត្រ នៅ​ខាងលិច​ទី​រួម​ខេត្ត​ព្រៃវែង​។ រមណីដ្ឋាន​នេះ មាន​ភ្នំ​នៅ​កណ្តាលវាល មាន​ដើមឈើ​ធំៗ​ព័ទ្ធជុំវិញ ហើយ​អ្នកភូមិ​មានជំនឿថា បារាយណ៍​អណ្តែត គឺជា​កន្លែង​ស័ក្តិសិទ្ធិ ដែល​យើង​អាច​ធ្វើ​ការស្បថ និង​បួងសួង​ផ្សេងៗ​បាន​ទៀត​ផង​។ ភ្លេងពិណពាទ្យ
-			ជាធម្មតា​ត្រូវបាន​គេ​ប្រគុំ​ថ្វាយ​អ្នកតា​រៀង​រាល់​ថ្ងៃសីល ថ្ងៃបុណ្យ ឬ​ថ្ងៃ​អាទិត្យ​ដើម្បី​សុំ​ទឹកភ្លៀង និង​សេចក្តីសុខ​៕
-		</p>
-		<br>
-		<center>
-			<img src=".\img\gallery\PreyVeng\baray2.jpg" height="auto" width="30%" hspace="10" vspace="10">
-			<img src=".\img\gallery\PreyVeng\baray4.jpg" height="auto" width="30%" hspace="10" vspace="10">
-		</center>
+			<font face="Khmer OS Muol Light" size="5" color="#00a680">
+				2.បឹងស្នេហ៍
+			</font>
+			<br><br>
+			<p>
+				&emsp;&emsp;តំបន់​បឹង​ស្នេហ៍ ស្ថិត​នៅ​ក្នុង​ស្រុក​បាភ្នំ ខេត្ត​ព្រៃវែង បាន​ក្លាយ​ជា​ជម្រក​សត្វ​ស្លាប​កម្រ​ជា​ច្រើន​ប្រភេទ ដែល​កំពុង​ទាក់ទាញ​ភ្ញៀវ​ទេសចរ​ជា​បណ្តើៗ នៅ​ពេល​បច្ចុប្បន្ន ក្រោយ​ពី​អង្គការ​សង្គម​ស៊ីវិល និង​អាជ្ញាធរ​ចាប់​ដៃ​គ្នា អភិរក្ស​ព្រៃ​លិច​ទឹក​នៅ​តំបន់​នោះ។
+				ប្រជា​សហគមន៍​នៅ​តំបន់​បឹង​ស្នេហ៍ លើក​ឡើង​ថា ពួកគាត់​ត្រូវ​ការ​អ្នក​ជំនាញ​ផ្នែក​ទេសចរណ៍ ដើម្បី​ណែនាំ​ពី​ការ​ត្រៀម​ខ្លួន​បម្រើ​វិស័យ​ទេសចរ​ដែល​អាច​រីកចម្រើន​នៅ​ពេល​ខាង​មុខ។ បឹង​ស្នេហ៍ ស្ថិត​ក្នុង​ឃុំ​ធាយ ស្រុក​បាភ្នំ មាន​ចម្ងាយ​ប្រមាណ ១៥​គីឡូម៉ែត្រ​ពី​ខេត្ត​ព្រៃវែង
+				ដែល​ឋិត​គម្រោង​អភិរក្ស​របស់​អង្គការ​នារី​អភិវឌ្ឍន៍​សេដ្ឋកិច្ច និង​អនាម័យ ឬ​ហៅ​ថា អង្គការ Women និង​មន្ត្រី​ជំនាញ​ពាក់ព័ន្ធ​ក្នុង​ខេត្ត។ នៅ​កណ្ដាល​បឹង​ស្នេហ៍ គឺ​មាន​ផ្ទៃដី​ព្រៃ​លិច​ទឹក​ប្រមាណ ១០០​ហិកតារ​ដែល​អ្នក​ភូមិ​ហៅ​ថា ទួលព័ន្ធតាឡី។ នៅ​ពេល​ល្ងាច
+				ហ្វូង​សត្វ​ស្លាប​កម្រ​ជា​ច្រើន​ប្រភេទ បាន​ហោះ​ហើរ​ស្រែក​ចេចចាច​ព្រោងព្រាត​រំលេច​ដោយ​ពណ៌​ចម្រុះ​យ៉ាង​ស្រស់​ស្អាត​នៅ​លើ​ដែនអាកាស។ រី​ឯ​សត្វ​ស្លាប​កម្រ​ខ្លះ​ទៀត បាន​បណ្ដែត​ខ្លួន​ប្រចឹក​គ្នា​លេង​លើ​ផ្ទៃ​ទឹក បន្ទាប់ពី​ស្វែងរក​ចំណី​នៅ​ភូមិសាស្ត្រ​ផ្សេងៗ
+				ហើយ​វិល​មក​រក​ទ្រនំ​ដ៏​សុខសាន្ត​នៅ​ទួលព័ន្ធតាឡី ដែនដី​តំបន់​បឹង​ស្នេហ៍។
+			</p>
+			<br>
+			<img src=".\img\gallery\PreyVeng\boeng3.jpg" height="auto" width="30%" hspace="10" vspace="10">
+			<img src=".\img\gallery\PreyVeng\boung 1.jpg" height="auto" width="30%" hspace="10" vspace="10">
+			<img src=".\img\gallery\PreyVeng\boeng2.jpg" height="auto" width="30%" hspace="10" vspace="10">
 
-		<font face="Khmer OS Muol Light" size="5" color="#00a680">
-			2.បឹងស្នេហ៍
-		</font>
-		<br><br>
-		<p>
-			&emsp;&emsp;តំបន់​បឹង​ស្នេហ៍ ស្ថិត​នៅ​ក្នុង​ស្រុក​បាភ្នំ ខេត្ត​ព្រៃវែង បាន​ក្លាយ​ជា​ជម្រក​សត្វ​ស្លាប​កម្រ​ជា​ច្រើន​ប្រភេទ ដែល​កំពុង​ទាក់ទាញ​ភ្ញៀវ​ទេសចរ​ជា​បណ្តើៗ នៅ​ពេល​បច្ចុប្បន្ន ក្រោយ​ពី​អង្គការ​សង្គម​ស៊ីវិល និង​អាជ្ញាធរ​ចាប់​ដៃ​គ្នា អភិរក្ស​ព្រៃ​លិច​ទឹក​នៅ​តំបន់​នោះ។
-			ប្រជា​សហគមន៍​នៅ​តំបន់​បឹង​ស្នេហ៍ លើក​ឡើង​ថា ពួកគាត់​ត្រូវ​ការ​អ្នក​ជំនាញ​ផ្នែក​ទេសចរណ៍ ដើម្បី​ណែនាំ​ពី​ការ​ត្រៀម​ខ្លួន​បម្រើ​វិស័យ​ទេសចរ​ដែល​អាច​រីកចម្រើន​នៅ​ពេល​ខាង​មុខ។ បឹង​ស្នេហ៍ ស្ថិត​ក្នុង​ឃុំ​ធាយ ស្រុក​បាភ្នំ មាន​ចម្ងាយ​ប្រមាណ ១៥​គីឡូម៉ែត្រ​ពី​ខេត្ត​ព្រៃវែង
-			ដែល​ឋិត​គម្រោង​អភិរក្ស​របស់​អង្គការ​នារី​អភិវឌ្ឍន៍​សេដ្ឋកិច្ច និង​អនាម័យ ឬ​ហៅ​ថា អង្គការ Women និង​មន្ត្រី​ជំនាញ​ពាក់ព័ន្ធ​ក្នុង​ខេត្ត។ នៅ​កណ្ដាល​បឹង​ស្នេហ៍ គឺ​មាន​ផ្ទៃដី​ព្រៃ​លិច​ទឹក​ប្រមាណ ១០០​ហិកតារ​ដែល​អ្នក​ភូមិ​ហៅ​ថា ទួលព័ន្ធតាឡី។ នៅ​ពេល​ល្ងាច
-			ហ្វូង​សត្វ​ស្លាប​កម្រ​ជា​ច្រើន​ប្រភេទ បាន​ហោះ​ហើរ​ស្រែក​ចេចចាច​ព្រោងព្រាត​រំលេច​ដោយ​ពណ៌​ចម្រុះ​យ៉ាង​ស្រស់​ស្អាត​នៅ​លើ​ដែនអាកាស។ រី​ឯ​សត្វ​ស្លាប​កម្រ​ខ្លះ​ទៀត បាន​បណ្ដែត​ខ្លួន​ប្រចឹក​គ្នា​លេង​លើ​ផ្ទៃ​ទឹក បន្ទាប់ពី​ស្វែងរក​ចំណី​នៅ​ភូមិសាស្ត្រ​ផ្សេងៗ
-			ហើយ​វិល​មក​រក​ទ្រនំ​ដ៏​សុខសាន្ត​នៅ​ទួលព័ន្ធតាឡី ដែនដី​តំបន់​បឹង​ស្នេហ៍។
-		</p>
-		<br>
-		<img src=".\img\gallery\PreyVeng\boeng3.jpg" height="auto" width="30%" hspace="10" vspace="10">
-		<img src=".\img\gallery\PreyVeng\boung 1.jpg" height="auto" width="30%" hspace="10" vspace="10">
-		<img src=".\img\gallery\PreyVeng\boeng2.jpg" height="auto" width="30%" hspace="10" vspace="10">
-
-		<h3 align="center">
+			<h3 align="center">
 <font face="Khmer OS Muol Light" size="5" color="#00a680" >
 ស្ពានអ្នកលឿង
 </font>
 </h3>
-		<img src=".\img\gallery\PreyVeng\neakleoung.jpg" height="70%" width="100%">
-		<br><br>
+			<img src=".\img\gallery\PreyVeng\neakleoung.jpg" height="70%" width="100%">
+			<br><br>
 
-		<!-- Footer -->
-		<center>
-			<footer>
-				<div class="foot_logo">
-					<a href="index.html">TosGo</a>
-				</div>
-				<p class="Term_of_Use">&emsp;&emsp;&emsp;&emsp;2018 TosGo LLC All rights reserved. Terms of Use | Privacy Policy | Site Map</p>
-				<a href="#" class="feed_back">feedback@TosGo.com</a>
-			</footer>
-		</center>
-	</div>
+			<!-- Footer -->
+			<center>
+				<footer>
+					<div class="foot_logo">
+						<a href="Index.html">TosGo</a>
+					</div>
+					<p class="Term_of_Use">&emsp;&emsp;&emsp;&emsp;2018 TosGo LLC All rights reserved. Terms of Use | Privacy Policy | Site Map</p>
+					<a href="#" class="feed_back">feedback@TosGo.com</a>
+				</footer>
+			</center>
+		</div>
 </body>
 
 </html>
