--- a/Stengtrang.html
+++ b/Stengtrang.html
@@ -11,85 +11,85 @@
 	<div class="navbar-fixed">
 		<nav>
 			<div class="nav-wrapper mycolor">
-				<a href="Index.html" class="brand-logo">TosGo</a>
-				<ul id="nav-mobile" class="right hide-on-med-and-down nav-ul">
-					<li><a href="Index.html">Home</a></li>
-					<li><a href="Travel.html">WhereToGo</a></li>
-					<li><a href="Career.html">Career</a></li>
-					<li><a href="About.html">AboutUs</a></li>
-				</ul>
-			</div>
-		</nav>
-	</div>
-
-	<img src=".\img\gallery\stengtrang\Stung-Treng-icon.jpg " width="100%" height="70%" align="center">
-
-	<div class="container">
-		<center>
-			<div class="title">
-				ខេត្តស្ទឹងត្រែង
-			</div>
-		</center>
-		<font face="Khmer OS Muol Light" size="5" color="#00a680">
-			-> បុរីអូរស្វាយខេត្តស្ទឹងត្រែង
-		</font>
-		<br>
-		<p>
-			&emsp;&emsp;បុរីអូរស្វាយ គឺជាតំបន់ អេកូទេសចរណ៍ធម្មជាតិមួយ ក្នុងចំណោម តំបន់ទេសចរណ៍ មួយចំនួនទៀត នៅតាមបណ្តោយ ​ដង​​ទន្លេមេគង្គ ភូមិភាគឦសាន នៃប្រទេសកម្ពុជា។ បុរីអូរស្វាយ ស្ថិតនៅក្នុង ភូមិអូរស្វាយ ឃុំអូរស្វាយ ស្រុកថាឡាបរិវ៉ាត់ ខេត្តស្ទឹងត្រែង ដែលសម្បូរទៅ ដោយធនធាន​
-			ធម្មជាតិពិតៗប្លែកៗ គួរជាទីទាក់ទាញអារម្មណ៍ ធ្វើឱ្យអ្នកទេសចរជាតិនិងអន្តរជាតិទៅ ទស្សនាកម្សាន្ត សប្បាយរីករាយជាមួយនឹង ធម្មជាតិដ៏ស្រស់បំព្រង តាមដងទន្លេមេគង្គ ជាពិសេសធម្មជាតិចម្រុះ ដ៏សម្បូរបែប នៃ​ តំបន់វាលរាំសា ដែលត្រូវបានគេចាត់ទុកថា ជាតំបន់ដីសើមអន្តរជាតិ
-			ដែលមាន​ លក្ខណៈខុស ប្លែកពីតំបន់ទន្លេសាប និងខុសប្លែក ពីតំបន់ទំនាបកណ្តាល នានា នៃប្រទេសកម្ពុជា គឺ មានព្រៃលិចទឹកល្អស្អាត មានថ្មប៉ប្រះទឹក សត្វស្លាប មាន ស្តូបដែលបាន បន្សល់ទុកតាំង ពីសម័យ សង្គមរាស្ត្រនិយម គឺរូបសំណាក ក្សត្រ នរោត្តម សីហនុ និង ស្លាកសញ្ញា ៥ ឆ្នាំ
-			នៃការ អភិវឌ្ឍ ផែនការលើកទី ១ សង្គម​រាស្ត្រនិយម ព្រមទាំងមាន តំបន់ប្រវត្តិសាស្ត្រ ផ្សេងៗទៀត។ &ensp;ភ្ញៀវអាចទស្សនា កោះស្អាតៗនៅក្នុងតំបន់រាំសា នៅក្នុង ទន្លេមេគង្គ នាដែនដីឃុំអូរស្វាយ ហើយថែមទាំងអាចមុជទឹក លេងកម្សាន្ត នៅតាមកោះទាំងនោះ ដែលមានដីខ្សាច់ពណ៌ស និង
-			ទឹកថ្លាឈ្វេង នៅរដូវប្រាំង ថែមទៀតផង ។ អ្នកទេសចរ ថែមទាំងអាចគយគន់ ទិដ្ឋភាពដែលទាក់ទង នឹងការដាំ ដំណាំ របស់ប្រជាពល រដ្ឋនៅតាមកោះ ឬ ទៅមើលសត្វផ្សោត នៅតំបន់ព្រំដែនខ្មែរ-លាវ ព្រមទាំងអាច ទស្សនា​ទឹកធ្លាក់សុភ័ក្តិមិត្ត ទៀតក៏បាន ។ ភ្ញៀវទេសចរក៏ អាច រៀនសូត្រ និង ស្វែងយល់ពី
-			ទំនៀមទម្លាប់ នៃការរស់នៅរបស់ ប្រជាពលរដ្ឋ នៅក្នុងតំបន់ឃុំអូរស្វាយ នេះដែរ ដូចជា សហគមន៍ព្រៃឈើធម្មជាតិ សកម្មភាពនេសាទត្រី និង ការសង់ផ្ទះតូចៗ នៅលើកោះទាំងនោះ ។ &ensp;ចំពោះការធ្វើដំណើរទៅកាន់ទីនោះ គឺមិនពិបាកអ្វីទេ សព្វថ្ងៃនេះ ព្រោះផ្លូវល្អអាច ធ្វើដំណើរបាន ដោយរថយន្ត
-			និង ម៉ូតូ ឬ ដោយទូកក៏បាន ដែលភ្ញៀវបរទេសភាគច្រើន និយមធ្វើដំណើរ ដោយទូក តាមទន្លេមេគង្គ តំបន់រាំសា ដែលមានបង្គោល ថ្មនៅតាមបណ្តោយទន្លេ ដែលបារាំង បានបោះ សម្រាប់ចំណាំ ក្នុងការធ្វើ ចរាចរផ្លូវទឹក កាលពីជំនាន់ អាណានិគមនិយម បារាំង រួមទាំង ការទស្សនា សត្វផ្សោតថែមទៀតផង។
-		</p>
-		<br>
-		<img src=".\img\gallery\stengtrang\timthumb (8).jpg " width="33%" height="40%">
-		<img src=".\img\gallery\stengtrang\img_201432014517_1706-copy.jpg " width="32%" height="40%">
-		<img src=".\img\gallery\stengtrang\Copy-of-Irrawaddy-dolphin-swimming-at-the-surface-copy.jpg " width="33%" height="40%">
-		<br>
-		<br>
-		<font size="5" face="Khmer OS Muol Light" color="#00a680">
-			-> សណ្ឋាគារ អង្គរហូម
-		</font>
-		<br>
-		<p>
-			&emsp;&emsp;សណ្ឋាគារអង្គរហូម Angkor Home Hotel មានទីតាំង​ស្ថិន នៅចំនុច​ កណ្តាលនៃ​ខេត្តសៀមរាប ជាសណ្ឋាគារ លំដាប់ ផ្កាយ4 មានបន្ទប់ 84 បន្ទប់ ដែលតុបតែងឡើង តាមនរចនាបទខ្មែរបុរាណ មានលក្ខណៈ​ធំទូលាយ បំពាក់ដោយ​ គ្រឿងបរិក្ខាទំនើបៗ និង សេវាកម្មជាច្រើនទៀត ។លោកអ្នកនឹង
-			រីករាយក្នុងការ ហែលទឹកលេង កម្សាន្តនៅ ក្នុងអាងហែល ទឹកដ៏ធំ និង ទទួលអាហារ ក្នុងភោជនីយដ្ឋាន ដ៏ស្រស់ស្អាត ជាមួយ ម្ហូបអាហារ​ ដែលមានរស់ ជាតិឆ្ងាញ់ ក្រោយបរិយាកាល Romantic រូមទាំងសេវា​កម្មជាច្រើន​ ទៀតក្នុង សណ្ឋាគារ ។ សណ្ឋាគារ អង្គរហូម គឹជាជម្រើស ដ៏ល្អសំរាប់
-			លោកអ្នក ។
-			<br> ទំនាក់ទំនង ៖ &ensp;Khum Svay Dangkum, Siem Reap, Kingdom of Cambodia &ensp;Tel: (855-63) 96 97 97 / Fax: (855-63) 96 97 95, &emsp;Website: www.angkorhomehotel.com &ensp;
-			<br>E-mail: reservation@angkorhomehotel.com | sales@angkorhomehotel.com<br>
-		</p>
-		<img src=".\img\gallery\stengtrang\15120230.jpg " width="31%" height="40%">
-		<img src=".\img\gallery\stengtrang\5879121.jpg " width="33%" height="40%">
-		<img src=".\img\gallery\stengtrang\5878906.jpg " width="33%" height="40%">
-		<br>
-
-		<img src=".\img\gallery\stengtrang\5879039.jpg " width="31%" height="40%">
-		<img src=".\img\gallery\stengtrang\5879046.jpg " width="33%" height="40%">
-		<img src=".\img\gallery\stengtrang\5878999.jpg " width="33%" height="40%">
-		</font>
-		<br><br>
-		<font size="5" face="Khmer OS Muol Light" color="#00a680">
-			-> សំរស់សេកុងនៃខេត្តស្ទឹងត្រែង
-		</font>
-		<br><br>
-
-		<img src=".\img\gallery\stengtrang\stung_treng_201306-02.jpg " width="33%" height="40%">
-		<img src=".\img\gallery\stengtrang\3172582704954429947621000010292633608695052125454695n-510x305-02-10-2012--15-12-09.jpg " width="32%" height="40%">
-		<img src=".\img\gallery\stengtrang\SunSetSekongBridge1_large.jpg " width="33%" height="40%">
-
-		<!-- Footer -->
-		<center>
-			<footer>
-				<div class="foot_logo">
-					<a href="index.html">TosGo</a>
+				<div class="nav-wrapper container"><a id="logo-container" href="Index.html" class="brand-logo">TosGo</a>
+					<ul id="nav-mobile" class="right hide-on-med-and-down nav-ul">
+						<li><a href="Index.html">Home</a></li>
+						<li><a href="Travel.html">WhereToGo</a></li>
+						<li><a href="Career.html">Career</a></li>
+						<li><a href="About.html">AboutUs</a></li>
+					</ul>
 				</div>
-				<p class="Term_of_Use">&emsp;&emsp;&emsp;&emsp;2018 TosGo LLC All rights reserved. Terms of Use | Privacy Policy | Site Map</p>
-				<a href="#" class="feed_back">feedback@TosGo.com</a>
-			</footer>
-		</center>
-	</div>
+		</nav>
+		</div>
+
+		<img src=".\img\gallery\stengtrang\Stung-Treng-icon.jpg " width="100%" height="70%" align="center">
+
+		<div class="container">
+			<center>
+				<div class="title">
+					ខេត្តស្ទឹងត្រែង
+				</div>
+			</center>
+			<font face="Khmer OS Muol Light" size="5" color="#00a680">
+				-> បុរីអូរស្វាយខេត្តស្ទឹងត្រែង
+			</font>
+			<br>
+			<p>
+				&emsp;&emsp;បុរីអូរស្វាយ គឺជាតំបន់ អេកូទេសចរណ៍ធម្មជាតិមួយ ក្នុងចំណោម តំបន់ទេសចរណ៍ មួយចំនួនទៀត នៅតាមបណ្តោយ ​ដង​​ទន្លេមេគង្គ ភូមិភាគឦសាន នៃប្រទេសកម្ពុជា។ បុរីអូរស្វាយ ស្ថិតនៅក្នុង ភូមិអូរស្វាយ ឃុំអូរស្វាយ ស្រុកថាឡាបរិវ៉ាត់ ខេត្តស្ទឹងត្រែង ដែលសម្បូរទៅ ដោយធនធាន​
+				ធម្មជាតិពិតៗប្លែកៗ គួរជាទីទាក់ទាញអារម្មណ៍ ធ្វើឱ្យអ្នកទេសចរជាតិនិងអន្តរជាតិទៅ ទស្សនាកម្សាន្ត សប្បាយរីករាយជាមួយនឹង ធម្មជាតិដ៏ស្រស់បំព្រង តាមដងទន្លេមេគង្គ ជាពិសេសធម្មជាតិចម្រុះ ដ៏សម្បូរបែប នៃ​ តំបន់វាលរាំសា ដែលត្រូវបានគេចាត់ទុកថា ជាតំបន់ដីសើមអន្តរជាតិ
+				ដែលមាន​ លក្ខណៈខុស ប្លែកពីតំបន់ទន្លេសាប និងខុសប្លែក ពីតំបន់ទំនាបកណ្តាល នានា នៃប្រទេសកម្ពុជា គឺ មានព្រៃលិចទឹកល្អស្អាត មានថ្មប៉ប្រះទឹក សត្វស្លាប មាន ស្តូបដែលបាន បន្សល់ទុកតាំង ពីសម័យ សង្គមរាស្ត្រនិយម គឺរូបសំណាក ក្សត្រ នរោត្តម សីហនុ និង ស្លាកសញ្ញា ៥ ឆ្នាំ
+				នៃការ អភិវឌ្ឍ ផែនការលើកទី ១ សង្គម​រាស្ត្រនិយម ព្រមទាំងមាន តំបន់ប្រវត្តិសាស្ត្រ ផ្សេងៗទៀត។ &ensp;ភ្ញៀវអាចទស្សនា កោះស្អាតៗនៅក្នុងតំបន់រាំសា នៅក្នុង ទន្លេមេគង្គ នាដែនដីឃុំអូរស្វាយ ហើយថែមទាំងអាចមុជទឹក លេងកម្សាន្ត នៅតាមកោះទាំងនោះ ដែលមានដីខ្សាច់ពណ៌ស និង
+				ទឹកថ្លាឈ្វេង នៅរដូវប្រាំង ថែមទៀតផង ។ អ្នកទេសចរ ថែមទាំងអាចគយគន់ ទិដ្ឋភាពដែលទាក់ទង នឹងការដាំ ដំណាំ របស់ប្រជាពល រដ្ឋនៅតាមកោះ ឬ ទៅមើលសត្វផ្សោត នៅតំបន់ព្រំដែនខ្មែរ-លាវ ព្រមទាំងអាច ទស្សនា​ទឹកធ្លាក់សុភ័ក្តិមិត្ត ទៀតក៏បាន ។ ភ្ញៀវទេសចរក៏ អាច រៀនសូត្រ និង ស្វែងយល់ពី
+				ទំនៀមទម្លាប់ នៃការរស់នៅរបស់ ប្រជាពលរដ្ឋ នៅក្នុងតំបន់ឃុំអូរស្វាយ នេះដែរ ដូចជា សហគមន៍ព្រៃឈើធម្មជាតិ សកម្មភាពនេសាទត្រី និង ការសង់ផ្ទះតូចៗ នៅលើកោះទាំងនោះ ។ &ensp;ចំពោះការធ្វើដំណើរទៅកាន់ទីនោះ គឺមិនពិបាកអ្វីទេ សព្វថ្ងៃនេះ ព្រោះផ្លូវល្អអាច ធ្វើដំណើរបាន ដោយរថយន្ត
+				និង ម៉ូតូ ឬ ដោយទូកក៏បាន ដែលភ្ញៀវបរទេសភាគច្រើន និយមធ្វើដំណើរ ដោយទូក តាមទន្លេមេគង្គ តំបន់រាំសា ដែលមានបង្គោល ថ្មនៅតាមបណ្តោយទន្លេ ដែលបារាំង បានបោះ សម្រាប់ចំណាំ ក្នុងការធ្វើ ចរាចរផ្លូវទឹក កាលពីជំនាន់ អាណានិគមនិយម បារាំង រួមទាំង ការទស្សនា សត្វផ្សោតថែមទៀតផង។
+			</p>
+			<br>
+			<img src=".\img\gallery\stengtrang\timthumb (8).jpg " width="33%" height="40%">
+			<img src=".\img\gallery\stengtrang\img_201432014517_1706-copy.jpg " width="32%" height="40%">
+			<img src=".\img\gallery\stengtrang\Copy-of-Irrawaddy-dolphin-swimming-at-the-surface-copy.jpg " width="33%" height="40%">
+			<br>
+			<br>
+			<font size="5" face="Khmer OS Muol Light" color="#00a680">
+				-> សណ្ឋាគារ អង្គរហូម
+			</font>
+			<br>
+			<p>
+				&emsp;&emsp;សណ្ឋាគារអង្គរហូម Angkor Home Hotel មានទីតាំង​ស្ថិន នៅចំនុច​ កណ្តាលនៃ​ខេត្តសៀមរាប ជាសណ្ឋាគារ លំដាប់ ផ្កាយ4 មានបន្ទប់ 84 បន្ទប់ ដែលតុបតែងឡើង តាមនរចនាបទខ្មែរបុរាណ មានលក្ខណៈ​ធំទូលាយ បំពាក់ដោយ​ គ្រឿងបរិក្ខាទំនើបៗ និង សេវាកម្មជាច្រើនទៀត ។លោកអ្នកនឹង
+				រីករាយក្នុងការ ហែលទឹកលេង កម្សាន្តនៅ ក្នុងអាងហែល ទឹកដ៏ធំ និង ទទួលអាហារ ក្នុងភោជនីយដ្ឋាន ដ៏ស្រស់ស្អាត ជាមួយ ម្ហូបអាហារ​ ដែលមានរស់ ជាតិឆ្ងាញ់ ក្រោយបរិយាកាល Romantic រូមទាំងសេវា​កម្មជាច្រើន​ ទៀតក្នុង សណ្ឋាគារ ។ សណ្ឋាគារ អង្គរហូម គឹជាជម្រើស ដ៏ល្អសំរាប់
+				លោកអ្នក ។
+				<br> ទំនាក់ទំនង ៖ &ensp;Khum Svay Dangkum, Siem Reap, Kingdom of Cambodia &ensp;Tel: (855-63) 96 97 97 / Fax: (855-63) 96 97 95, &emsp;Website: www.angkorhomehotel.com &ensp;
+				<br>E-mail: reservation@angkorhomehotel.com | sales@angkorhomehotel.com<br>
+			</p>
+			<img src=".\img\gallery\stengtrang\15120230.jpg " width="31%" height="40%">
+			<img src=".\img\gallery\stengtrang\5879121.jpg " width="33%" height="40%">
+			<img src=".\img\gallery\stengtrang\5878906.jpg " width="33%" height="40%">
+			<br>
+
+			<img src=".\img\gallery\stengtrang\5879039.jpg " width="31%" height="40%">
+			<img src=".\img\gallery\stengtrang\5879046.jpg " width="33%" height="40%">
+			<img src=".\img\gallery\stengtrang\5878999.jpg " width="33%" height="40%">
+			</font>
+			<br><br>
+			<font size="5" face="Khmer OS Muol Light" color="#00a680">
+				-> សំរស់សេកុងនៃខេត្តស្ទឹងត្រែង
+			</font>
+			<br><br>
+
+			<img src=".\img\gallery\stengtrang\stung_treng_201306-02.jpg " width="33%" height="40%">
+			<img src=".\img\gallery\stengtrang\3172582704954429947621000010292633608695052125454695n-510x305-02-10-2012--15-12-09.jpg " width="32%" height="40%">
+			<img src=".\img\gallery\stengtrang\SunSetSekongBridge1_large.jpg " width="33%" height="40%">
+
+			<!-- Footer -->
+			<center>
+				<footer>
+					<div class="foot_logo">
+						<a href="Index.html">TosGo</a>
+					</div>
+					<p class="Term_of_Use">&emsp;&emsp;&emsp;&emsp;2018 TosGo LLC All rights reserved. Terms of Use | Privacy Policy | Site Map</p>
+					<a href="#" class="feed_back">feedback@TosGo.com</a>
+				</footer>
+			</center>
+		</div>
 </body>
 
 </html>
