--- a/About.html
+++ b/About.html
@@ -12,100 +12,100 @@
 	<div class="navbar-fixed">
 		<nav>
 			<div class="nav-wrapper mycolor">
-				<a href="Index.html" class="brand-logo">TosGo</a>
-				<ul id="nav-mobile" class="right hide-on-med-and-down nav-ul">
-					<li><a href="Index.html">Home</a></li>
-					<li><a href="Travel.html">WhereToGo</a></li>
-					<li><a href="Career.html">Career</a></li>
-					<li><a href="About.html">AboutUs</a></li>
-				</ul>
-			</div>
+				<div class="nav-wrapper container"><a id="logo-container" href="Index.html" class="brand-logo">TosGo</a>
+					<ul id="nav-mobile" class="right hide-on-med-and-down nav-ul">
+						<li><a href="Index.html">Home</a></li>
+						<li><a href="Travel.html">WhereToGo</a></li>
+						<li><a href="Career.html">Career</a></li>
+						<li><a href="About.html">AboutUs</a></li>
+					</ul>
+				</div>
 		</nav>
-	</div>
+		</div>
 
-	<div class="container">
-		<img src="./img/about/setec.png" width="100%" height="270" class="center">
-		<h3 class="center">
+		<div class="container">
+			<img src="./img/about/setec.png" width="100%" height="270" class="center">
+			<h3 class="center">
 			<b>ABOUT US</b>
 		</h3>
-		<hr color="#00a680">
-		<br>
-		<!-- Lecture -->
-		<img src="./img/about/Lecture.jpg" class="responsive_img">
-
-		<!-- Komsan -->
-		<div class="row">
+			<hr color="#00a680">
 			<br>
-			<div class="col s3">
-				<img src="./img/about/komsan.jpg" width="100%" height="320" vspace="8">
-			</div>
-			<div class="col s9">
-				<img src="./img/about/komsan_info.jpg" width="60%" height="320" class="info">
-			</div>
-		</div>
-		<br>
-		<!-- Sovandara -->
-		<div class="row">
-			<div class="col s3">
-				<img src="./img/about/sovandara1.png" width="100%" height="320" vspace="8">
-			</div>
-			<div class="col s9">
-				<img src="./img/about/sovandara_info.jpg" width="60%" height="320" class="info">
-			</div>
-		</div>
-		<br>
-		<!-- Sanda -->
-		<div class="row">
-			<div class="col s3">
-				<img src="./img/about/sanda1.png" width="100%" height="320" vspace="8">
-			</div>
-			<div class="col s9">
-				<img src="./img/about/sanda_info.jpg" width="60%" height="320" class="info">
-			</div>
-		</div>
-		<br>
-		<!-- kheang -->
-		<div class="row">
-			<div class="col s3">
-				<img src="./img/about/kheang1.png" width="100%" height="320" vspace="8">
-			</div>
-			<div class="col s9">
-				<img src="./img/about/kheang_info.jpg" width="60%" height="320" class="info">
-			</div>
-		</div>
-		<br>
-		<!-- Sokdarom -->
-		<div class="row">
-			<div class="col s3">
-				<img src="./img/about/darom1.png" width="100%" height="320" vspace="8">
-			</div>
-			<div class="col s9">
-				<img src="./img/about/darom_info.jpg" width="60%" height="320" class="info">
-			</div>
-		</div>
+			<!-- Lecture -->
+			<img src="./img/about/Lecture.jpg" class="responsive_img">
 
-		<!-- Sovannara -->
-		<div class="row">
-			<div class="col s3">
-				<img src="./img/about/sovannara.jpg" width="100%" height="320" vspace="8">
+			<!-- Komsan -->
+			<div class="row">
+				<br>
+				<div class="col s3">
+					<img src="./img/about/komsan.jpg" width="100%" height="320" vspace="8">
+				</div>
+				<div class="col s9">
+					<img src="./img/about/komsan_info.jpg" width="60%" height="320" class="info">
+				</div>
 			</div>
-			<div class="col s9">
-				<img src="./img/about/sovannara_info.jpg" width="60%" height="320" class="info">
+			<br>
+			<!-- Sovandara -->
+			<div class="row">
+				<div class="col s3">
+					<img src="./img/about/sovandara1.png" width="100%" height="320" vspace="8">
+				</div>
+				<div class="col s9">
+					<img src="./img/about/sovandara_info.jpg" width="60%" height="320" class="info">
+				</div>
+			</div>
+			<br>
+			<!-- Sanda -->
+			<div class="row">
+				<div class="col s3">
+					<img src="./img/about/sanda1.png" width="100%" height="320" vspace="8">
+				</div>
+				<div class="col s9">
+					<img src="./img/about/sanda_info.jpg" width="60%" height="320" class="info">
+				</div>
+			</div>
+			<br>
+			<!-- kheang -->
+			<div class="row">
+				<div class="col s3">
+					<img src="./img/about/kheang1.png" width="100%" height="320" vspace="8">
+				</div>
+				<div class="col s9">
+					<img src="./img/about/kheang_info.jpg" width="60%" height="320" class="info">
+				</div>
+			</div>
+			<br>
+			<!-- Sokdarom -->
+			<div class="row">
+				<div class="col s3">
+					<img src="./img/about/darom1.png" width="100%" height="320" vspace="8">
+				</div>
+				<div class="col s9">
+					<img src="./img/about/darom_info.jpg" width="60%" height="320" class="info">
+				</div>
+			</div>
+
+			<!-- Sovannara -->
+			<div class="row">
+				<div class="col s3">
+					<img src="./img/about/sovannara.jpg" width="100%" height="320" vspace="8">
+				</div>
+				<div class="col s9">
+					<img src="./img/about/sovannara_info.jpg" width="60%" height="320" class="info">
+				</div>
 			</div>
 		</div>
-	</div>
-	<br>
-	<!-- Footer -->
-	<center>
-		<footer>
-			<div class="foot_logo">
-				<a href="index.html">TosGo</a>
-			</div>
-			<h6>Know Better | Go better</h6>
-			<p class="Term_of_Use">&emsp;&emsp;&emsp;&emsp;2018 TosGo LLC All rights reserved. Terms of Use | Privacy Policy | Site Map</p>
-			<a href="#" class="feed_back">feedback@TosGo.com</a>
-		</footer>
-	</center>
+		<br>
+		<!-- Footer -->
+		<center>
+			<footer>
+				<div class="foot_logo">
+					<a href="Index.html">TosGo</a>
+				</div>
+				<h6>Know Better | Go better</h6>
+				<p class="Term_of_Use">&emsp;&emsp;&emsp;&emsp;2018 TosGo LLC All rights reserved. Terms of Use | Privacy Policy | Site Map</p>
+				<a href="#" class="feed_back">feedback@TosGo.com</a>
+			</footer>
+		</center>
 </body>
 
 </html>
