--- a/Find-a-destination.html
+++ b/Find-a-destination.html
@@ -11,35 +11,35 @@
   <div class="navbar-fixed">
     <nav>
       <div class="nav-wrapper mycolor">
-        <a href="Index.html" class="brand-logo">TosGo</a>
-        <ul id="nav-mobile" class="right hide-on-med-and-down nav-ul">
-          <li><a href="Index.html">Home</a></li>
-          <li><a href="Travel.html">WhereToGo</a></li>
-          <li><a href="Career.html">Career</a></li>
-          <li><a href="About.html">AboutUs</a></li>
-        </ul>
-      </div>
+        <div class="nav-wrapper container"><a id="logo-container" href="Index.html" class="brand-logo">TosGo</a>
+          <ul id="nav-mobile" class="right hide-on-med-and-down nav-ul">
+            <li><a href="Index.html">Home</a></li>
+            <li><a href="Travel.html">WhereToGo</a></li>
+            <li><a href="Career.html">Career</a></li>
+            <li><a href="About.html">AboutUs</a></li>
+          </ul>
+        </div>
     </nav>
-  </div>
+    </div>
 
-  <h3 class="center"><b>CAMBODIA MAP</b></h3>
-  <hr color="#00a680">
-  <br>
-  <a href="./img/gallery/map.jpg" target="_blank">
+    <h3 class="center"><b>CAMBODIA MAP</b></h3>
+    <hr color="#00a680">
+    <br>
+    <a href="./img/gallery/map.jpg" target="_blank">
       <img src="./img/gallery/map.jpg" width="100%" height="1000">
     </a> <br><br><br>
 
-  <!-- Footer -->
-  <center>
-    <footer>
-      <div class="foot_logo">
-        <a href="index.html">TosGo</a>
-      </div>
-      <h6 class="quote">Know Better | Go better</h6>
-      <p>&emsp;&emsp;2018 TosGo LLC All rights reserved. Terms of Use | Privacy Policy | Site Map</p>
-      <a href="#" class="feed_back">feedback@TosGo.com</a>
-    </footer>
-  </center>
+    <!-- Footer -->
+    <center>
+      <footer>
+        <div class="foot_logo">
+          <a href="Index.html">TosGo</a>
+        </div>
+        <h6 class="quote">Know Better | Go better</h6>
+        <p>&emsp;&emsp;2018 TosGo LLC All rights reserved. Terms of Use | Privacy Policy | Site Map</p>
+        <a href="#" class="feed_back">feedback@TosGo.com</a>
+      </footer>
+    </center>
 </body>
 
 </html>
