--- a/High-quality-prints.html
+++ b/High-quality-prints.html
@@ -11,136 +11,136 @@
   <div class="navbar-fixed">
     <nav>
       <div class="nav-wrapper mycolor">
-        <a href="Index.html" class="brand-logo">TosGo</a>
-        <ul id="nav-mobile" class="right hide-on-med-and-down nav-ul">
-          <li><a href="Index.html">Home</a></li>
-          <li><a href="Travel.html">WhereToGo</a></li>
-          <li><a href="Career.html">Career</a></li>
-          <li><a href="About.html">AboutUs</a></li>
-        </ul>
-      </div>
+        <div class="nav-wrapper container"><a id="logo-container" href="Index.html" class="brand-logo">TosGo</a>
+          <ul id="nav-mobile" class="right hide-on-med-and-down nav-ul">
+            <li><a href="Index.html">Home</a></li>
+            <li><a href="Travel.html">WhereToGo</a></li>
+            <li><a href="Career.html">Career</a></li>
+            <li><a href="About.html">AboutUs</a></li>
+          </ul>
+        </div>
     </nav>
-  </div>
+    </div>
 
-  <h3 class="center"><b>Gallery</b></h3>
-  <hr color="#00a680">
-  <br>
-  <!-- Row 1 -->
-  <center>
-    <div class="row">
-      <div class="col s2">
-        <a href="./img/cover/biggest-buddha-05_large.jpg">
+    <h3 class="center"><b>Gallery</b></h3>
+    <hr color="#00a680">
+    <br>
+    <!-- Row 1 -->
+    <center>
+      <div class="row">
+        <div class="col s2">
+          <a href="./img/cover/biggest-buddha-05_large.jpg">
             <img src="./img/cover/biggest-buddha-05_large.jpg" width="95%" height="150">
           </a>
-      </div>
-      <div class="col s2">
-        <a href="./img/cover/Bong-teay-kdey-Siem-Reap.jpg">
+        </div>
+        <div class="col s2">
+          <a href="./img/cover/Bong-teay-kdey-Siem-Reap.jpg">
             <img src="./img/cover/Bong-teay-kdey-Siem-Reap.jpg" width="95%" height="150">
           </a>
-      </div>
-      <div class="col s2">
-        <a href="./img/cover/Buddhist_monks_in_front_of_the_Angkor_Wat.jpg">
+        </div>
+        <div class="col s2">
+          <a href="./img/cover/Buddhist_monks_in_front_of_the_Angkor_Wat.jpg">
             <img src="./img/cover/Buddhist_monks_in_front_of_the_Angkor_Wat.jpg" width="95%" height="150">
           </a>
-      </div>
-      <div class="col s2">
-        <a href="./img/cover/WatPhnom_PhnomPenh_2005_2.jpg">
+        </div>
+        <div class="col s2">
+          <a href="./img/cover/WatPhnom_PhnomPenh_2005_2.jpg">
             <img src="./img/cover/WatPhnom_PhnomPenh_2005_2.jpg" width="95%" height="150">
           </a>
-      </div>
-      <div class="col s2">
-        <a href="./img/gallery/banteaymeanchey/koh-keh-02_large.jpg">
+        </div>
+        <div class="col s2">
+          <a href="./img/gallery/banteaymeanchey/koh-keh-02_large.jpg">
             <img src="./img/gallery/banteaymeanchey/koh-keh-02_large.jpg" width="95%" height="150">
           </a>
-      </div>
-      <div class="col s2">
-        <a href="./img/gallery/batdombong/4026392928_1261b05a2c_z-ae0292657585c39091cb8af4e77d3ef4a2d995f3.jpg">
+        </div>
+        <div class="col s2">
+          <a href="./img/gallery/batdombong/4026392928_1261b05a2c_z-ae0292657585c39091cb8af4e77d3ef4a2d995f3.jpg">
             <img src="./img/gallery/batdombong/4026392928_1261b05a2c_z-ae0292657585c39091cb8af4e77d3ef4a2d995f3.jpg" width="95%" height="150">
           </a>
+        </div>
       </div>
-    </div>
-  </center>
-  <!-- Row 2 -->
-  <center>
-    <div class="row">
-      <div class="col s2">
-        <a href="./img/gallery/batdombong/D12_PhnomBakheng04.jpg">
+    </center>
+    <!-- Row 2 -->
+    <center>
+      <div class="row">
+        <div class="col s2">
+          <a href="./img/gallery/batdombong/D12_PhnomBakheng04.jpg">
               <img src="./img/gallery/batdombong/D12_PhnomBakheng04.jpg" width="95%" height="150">
             </a>
-      </div>
-      <div class="col s2">
-        <a href="./img/gallery/kep/kep-city-960x640.jpg">
+        </div>
+        <div class="col s2">
+          <a href="./img/gallery/kep/kep-city-960x640.jpg">
               <img src="./img/gallery/kep/kep-city-960x640.jpg" width="95%" height="150">
             </a>
-      </div>
-      <div class="col s2">
-        <a href="./img/gallery/kep/kep-cambodia-restaurant.jpg">
+        </div>
+        <div class="col s2">
+          <a href="./img/gallery/kep/kep-cambodia-restaurant.jpg">
               <img src="./img/gallery/kep/kep-cambodia-restaurant.jpg" width="95%" height="150">
             </a>
-      </div>
-      <div class="col s2">
-        <a href="./img/gallery/kompongcham/cover.jpg">
+        </div>
+        <div class="col s2">
+          <a href="./img/gallery/kompongcham/cover.jpg">
               <img src="./img/gallery/kompongcham/cover.jpg" width="95%" height="150">
             </a>
-      </div>
-      <div class="col s2">
-        <a href="./img/gallery/kompongthom/1280px-Cliff_view_phnom_santuk_05032011133.jpg">
+        </div>
+        <div class="col s2">
+          <a href="./img/gallery/kompongthom/1280px-Cliff_view_phnom_santuk_05032011133.jpg">
               <img src="./img/gallery/kompongthom/1280px-Cliff_view_phnom_santuk_05032011133.jpg" width="95%" height="150">
             </a>
-      </div>
-      <div class="col s2">
-        <a href="./img/gallery/mondolkiri/5b28c4cd11ca9_1529398440_large.jpg">
+        </div>
+        <div class="col s2">
+          <a href="./img/gallery/mondolkiri/5b28c4cd11ca9_1529398440_large.jpg">
               <img src="./img/gallery/mondolkiri/5b28c4cd11ca9_1529398440_large.jpg" width="95%" height="150">
             </a>
+        </div>
       </div>
-    </div>
-  </center>
-  <!-- Row 3 -->
-  <center>
-    <div class="row">
-      <div class="col s2">
-        <a href="./img/gallery/mondolkiri/cambodia-waterfall-1070x732.jpg">
+    </center>
+    <!-- Row 3 -->
+    <center>
+      <div class="row">
+        <div class="col s2">
+          <a href="./img/gallery/mondolkiri/cambodia-waterfall-1070x732.jpg">
             <img src="./img/gallery/mondolkiri/cambodia-waterfall-1070x732.jpg" width="95%" height="150">
           </a>
-      </div>
-      <div class="col s2">
-        <a href="./img/gallery/mondolkiri/Cambogia-3.jpg">
+        </div>
+        <div class="col s2">
+          <a href="./img/gallery/mondolkiri/Cambogia-3.jpg">
             <img src="./img/gallery/mondolkiri/Cambogia-3.jpg" width="95%" height="150">
           </a>
-      </div>
-      <div class="col s2">
-        <a href="./img/gallery/mondolkiri/cr_de_la_harpe_africa_media_online_sipa.jpg">
+        </div>
+        <div class="col s2">
+          <a href="./img/gallery/mondolkiri/cr_de_la_harpe_africa_media_online_sipa.jpg">
             <img src="./img/gallery/mondolkiri/cr_de_la_harpe_africa_media_online_sipa.jpg" width="95%" height="150">
           </a>
-      </div>
-      <div class="col s2">
-        <a href="./img/gallery/mondolkiri/vistikh.jpg">
+        </div>
+        <div class="col s2">
+          <a href="./img/gallery/mondolkiri/vistikh.jpg">
             <img src="./img/gallery/mondolkiri/vistikh.jpg" width="95%" height="150">
           </a>
-      </div>
-      <div class="col s2">
-        <a href="./img/gallery/other/timthumb.jpg">
+        </div>
+        <div class="col s2">
+          <a href="./img/gallery/other/timthumb.jpg">
             <img src="./img/gallery/other/timthumb.jpg" width="95%" height="150">
           </a>
-      </div>
-      <div class="col s2">
-        <a href="./img/gallery/PP/Phnom_Penh_sunset.jpg">
+        </div>
+        <div class="col s2">
+          <a href="./img/gallery/PP/Phnom_Penh_sunset.jpg">
             <img src="./img/gallery/PP/Phnom_Penh_sunset.jpg" width="95%" height="150">
           </a>
+        </div>
       </div>
-    </div>
-  </center> <br>
-  <!-- Footer -->
-  <center>
-    <footer>
-      <div class="foot_logo">
-        <a href="index.html">TosGo</a>
-      </div>
-      <h6 class="quote">Know Better | Go better</h6>
-      <p>&emsp;&emsp;2018 TosGo LLC All rights reserved. Terms of Use | Privacy Policy | Site Map</p>
-      <a href="#" class="feed_back">feedback@TosGo.com</a>
-    </footer>
-  </center>
+    </center> <br>
+    <!-- Footer -->
+    <center>
+      <footer>
+        <div class="foot_logo">
+          <a href="Index.html">TosGo</a>
+        </div>
+        <h6 class="quote">Know Better | Go better</h6>
+        <p>&emsp;&emsp;2018 TosGo LLC All rights reserved. Terms of Use | Privacy Policy | Site Map</p>
+        <a href="#" class="feed_back">feedback@TosGo.com</a>
+      </footer>
+    </center>
 </body>
 
 </html>
