--- a/Kompongchang.html
+++ b/Kompongchang.html
@@ -11,57 +11,57 @@
 	<div class="navbar-fixed">
 		<nav>
 			<div class="nav-wrapper mycolor">
-				<a href="Index.html" class="brand-logo">TosGo</a>
-				<ul id="nav-mobile" class="right hide-on-med-and-down nav-ul">
-					<li><a href="Index.html">Home</a></li>
-					<li><a href="Travel.html">WhereToGo</a></li>
-					<li><a href="Career.html">Career</a></li>
-					<li><a href="About.html">AboutUs</a></li>
-				</ul>
-			</div>
+				<div class="nav-wrapper container"><a id="logo-container" href="Index.html" class="brand-logo">TosGo</a>
+					<ul id="nav-mobile" class="right hide-on-med-and-down nav-ul">
+						<li><a href="Index.html">Home</a></li>
+						<li><a href="Travel.html">WhereToGo</a></li>
+						<li><a href="Career.html">Career</a></li>
+						<li><a href="About.html">AboutUs</a></li>
+					</ul>
+				</div>
 		</nav>
-	</div>
+		</div>
 
-	<center>
-		<img src=".\img\gallery\Kompongchang\0038cdfb78d102489ef5ebccc8041b99.jpg " width="100%" height="70%">
-	</center>
+		<center>
+			<img src=".\img\gallery\Kompongchang\0038cdfb78d102489ef5ebccc8041b99.jpg " width="100%" height="70%">
+		</center>
 
-	<div class="container">
-		<div class="title">
-			<center>
-				<h3>
+		<div class="container">
+			<div class="title">
+				<center>
+					<h3>
 				ខេត្តកំពង់ឆ្នាំង
 			</h3>
+				</center>
+			</div>
+			<p> &emsp;&emsp;ខេត្តកំពង់ឆ្នាំង ស្ថិតនៅភាគកណ្ដាល ប្រទេសកម្ពុជា មានព្រំប្រទល់ ខាងជើងជាប់ខេត្តកំពង់ធំ ខាងកើតជាប់ខេត្តកំពង់ចាម ខាងត្បូងជាប់ខេត្តកំពង់ស្ពឺ និងខាងលិចជាប់ ខេត្តពោធិ៍សាត់។ ខេត្តនេះស្ថិតនៅ ចម្ងាយប្រមាណ ៩១ គ.ម. ពីរាជធានីភ្នំពេញ។ខេត្តកំពង់ឆ្នាំង
+				មានអាកាសធាតុ ក្ដៅហើយសើមដូចបណ្ដាខេត្ត ទូទាំងប្រទេសកម្ពុជា ដទៃទៀតដែរ។ រដូវវស្សា ចាប់ពីខែ ឧសភា ដល់ខែ តុលា (សីតុណ្ហភាពពី ២៧ ទៅ ៣៥អង្សា សំណើម ៩០ % ) រដូវរងារពីខែ វិច្ឆិកា ដល់ខែ មីនា (សីតុណ្ហភាពពី ១៨ ទៅ ២៨ អង្សា) និងរដូវក្ដៅពីខែ មីនា ដល់ ខែ ឧសភា (សីតុណ្ហភាពពី
+				២៨ ទៅ ៣៦ អង្សា)។វាគឺស្ថិតក្នុងវាលល្បប់ ចំកណ្ដាលប្រទេសកម្ពុជា និងត្រូវនាំមកដោយ ទន្លេសាប ដៃ នៃទន្លេមេគង្គ។ ទីក្រុងរាជធានីភ្នំពេញច្បាស់ជា លូតរហូតដល់វាព័ទ្ធជុំវិញ ដោយព្រំដែន ខេត្តកំពង់ឆ្នាំង ជាមិនខាន។
+			</p>
+			<img src=".\img\gallery\Kompongchang\maxresdefault.jpg " class="responsive_img"> <br><br>
+
+			<font face="Khmer OS Muol Light" color="#00a680" size="5">
+				&emsp;ប្រវិត្តនៃខេត្តកំពង់ឆ្នាំ
+			</font>
+			<p>
+				&emsp;&emsp;សំណល់បុរាណវត្ថុពីតំបន់នេះត្រូវបានគេដឹងថាចំណោមវត្ថុបុរាណជាច្រើនដែលគេរកឃើញនោះគឺមកពីទ្វារវត្តី អតីតនគរមួយដែលបច្ចុប្បន្នស្ថិតក្នុងប្រទេសថៃសព្វថ្ងៃ ដោយចុះកាលបរិច្ឆេទពីសតវត្សទី៦ ដល់ ទី១១។[ប្រភព?]ខេត្តកំពង់ឆ្នាំងកាលពីប៉ុន្មានសតវត្សកន្លងទៅគឺជាទីក្រុងឆ្នេរនៅតាមច្រកផ្លូវរវាង
+				ចិន និង ឥណ្ឌា ដោយសារតែការហូរនាំដីល្បប់ពីទន្លេមេគង្គ ខ្សែឆ្នេរបានកាន់តែឃ្លាតឆ្ងាយពីសមុទ្រឆ្ងាយៗទៅ។ នៅពេលដែលទន្លេសាបបានផ្លាស់ប្ដូរខ្សែទឹកហូររបស់វា ទីក្រុងនេះក៏បានបាត់បង់ប្រភពទឹកដ៏សំខាន់របស់ខ្លួន និងដូច្នេះវាក៏បានក្លាយជារហោស្ថាន ប្រជាជនក៏រើលំនៅទៅកាន់ទីក្រុងមួយដែលគេហៅថា
+				កំពង់ត្រឡាច។ ទីក្រុងមួយបានកកើតបន្តិចៗម្ដងជុំវិញទីនោះ ដែលនាំមកនូវជីវិតថ្មីដល់កំពង់ឆ្នាំង។ សារមន្ទីរមួយបង្ហាញនូវកំណត់ត្រាបុរាណវិទ្យាអំពីប្រវត្តិរបស់ទីក្រុងមួយនេះ។
+			</p>
+			<img src=".\img\gallery\Kompongchang\06-2-6.jpg" width="49%" height="49%" hspace="5" vspace="5">
+			<img src=".\img\gallery\Kompongchang\cover.jpg" width="49%" height="50%" align="right"> <br>
+
+			<!-- Footer -->
+			<center>
+				<footer>
+					<div class="foot_logo">
+						<a href="Index.html">TosGo</a>
+					</div>
+					<p class="Term_of_Use">&emsp;&emsp;&emsp;&emsp;2018 TosGo LLC All rights reserved. Terms of Use | Privacy Policy | Site Map</p>
+					<a href="#" class="feed_back">feedback@TosGo.com</a>
+				</footer>
 			</center>
 		</div>
-		<p> &emsp;&emsp;ខេត្តកំពង់ឆ្នាំង ស្ថិតនៅភាគកណ្ដាល ប្រទេសកម្ពុជា មានព្រំប្រទល់ ខាងជើងជាប់ខេត្តកំពង់ធំ ខាងកើតជាប់ខេត្តកំពង់ចាម ខាងត្បូងជាប់ខេត្តកំពង់ស្ពឺ និងខាងលិចជាប់ ខេត្តពោធិ៍សាត់។ ខេត្តនេះស្ថិតនៅ ចម្ងាយប្រមាណ ៩១ គ.ម. ពីរាជធានីភ្នំពេញ។ខេត្តកំពង់ឆ្នាំង
-			មានអាកាសធាតុ ក្ដៅហើយសើមដូចបណ្ដាខេត្ត ទូទាំងប្រទេសកម្ពុជា ដទៃទៀតដែរ។ រដូវវស្សា ចាប់ពីខែ ឧសភា ដល់ខែ តុលា (សីតុណ្ហភាពពី ២៧ ទៅ ៣៥អង្សា សំណើម ៩០ % ) រដូវរងារពីខែ វិច្ឆិកា ដល់ខែ មីនា (សីតុណ្ហភាពពី ១៨ ទៅ ២៨ អង្សា) និងរដូវក្ដៅពីខែ មីនា ដល់ ខែ ឧសភា (សីតុណ្ហភាពពី
-			២៨ ទៅ ៣៦ អង្សា)។វាគឺស្ថិតក្នុងវាលល្បប់ ចំកណ្ដាលប្រទេសកម្ពុជា និងត្រូវនាំមកដោយ ទន្លេសាប ដៃ នៃទន្លេមេគង្គ។ ទីក្រុងរាជធានីភ្នំពេញច្បាស់ជា លូតរហូតដល់វាព័ទ្ធជុំវិញ ដោយព្រំដែន ខេត្តកំពង់ឆ្នាំង ជាមិនខាន។
-		</p>
-		<img src=".\img\gallery\Kompongchang\maxresdefault.jpg " class="responsive_img"> <br><br>
-
-		<font face="Khmer OS Muol Light" color="#00a680" size="5">
-			&emsp;ប្រវិត្តនៃខេត្តកំពង់ឆ្នាំ
-		</font>
-		<p>
-			&emsp;&emsp;សំណល់បុរាណវត្ថុពីតំបន់នេះត្រូវបានគេដឹងថាចំណោមវត្ថុបុរាណជាច្រើនដែលគេរកឃើញនោះគឺមកពីទ្វារវត្តី អតីតនគរមួយដែលបច្ចុប្បន្នស្ថិតក្នុងប្រទេសថៃសព្វថ្ងៃ ដោយចុះកាលបរិច្ឆេទពីសតវត្សទី៦ ដល់ ទី១១។[ប្រភព?]ខេត្តកំពង់ឆ្នាំងកាលពីប៉ុន្មានសតវត្សកន្លងទៅគឺជាទីក្រុងឆ្នេរនៅតាមច្រកផ្លូវរវាង
-			ចិន និង ឥណ្ឌា ដោយសារតែការហូរនាំដីល្បប់ពីទន្លេមេគង្គ ខ្សែឆ្នេរបានកាន់តែឃ្លាតឆ្ងាយពីសមុទ្រឆ្ងាយៗទៅ។ នៅពេលដែលទន្លេសាបបានផ្លាស់ប្ដូរខ្សែទឹកហូររបស់វា ទីក្រុងនេះក៏បានបាត់បង់ប្រភពទឹកដ៏សំខាន់របស់ខ្លួន និងដូច្នេះវាក៏បានក្លាយជារហោស្ថាន ប្រជាជនក៏រើលំនៅទៅកាន់ទីក្រុងមួយដែលគេហៅថា
-			កំពង់ត្រឡាច។ ទីក្រុងមួយបានកកើតបន្តិចៗម្ដងជុំវិញទីនោះ ដែលនាំមកនូវជីវិតថ្មីដល់កំពង់ឆ្នាំង។ សារមន្ទីរមួយបង្ហាញនូវកំណត់ត្រាបុរាណវិទ្យាអំពីប្រវត្តិរបស់ទីក្រុងមួយនេះ។
-		</p>
-		<img src=".\img\gallery\Kompongchang\06-2-6.jpg" width="49%" height="49%" hspace="5" vspace="5">
-		<img src=".\img\gallery\Kompongchang\cover.jpg" width="49%" height="50%" align="right"> <br>
-
-		<!-- Footer -->
-		<center>
-			<footer>
-				<div class="foot_logo">
-					<a href="index.html">TosGo</a>
-				</div>
-				<p class="Term_of_Use">&emsp;&emsp;&emsp;&emsp;2018 TosGo LLC All rights reserved. Terms of Use | Privacy Policy | Site Map</p>
-				<a href="#" class="feed_back">feedback@TosGo.com</a>
-			</footer>
-		</center>
-	</div>
 </body>
 
 </html>
