--- a/Kratie.html
+++ b/Kratie.html
@@ -12,78 +12,78 @@
 	<div class="navbar-fixed">
 		<nav>
 			<div class="nav-wrapper mycolor">
-				<a href="Index.html" class="brand-logo">TosGo</a>
-				<ul id="nav-mobile" class="right hide-on-med-and-down nav-ul">
-					<li><a href="Index.html">Home</a></li>
-					<li><a href="Travel.html">WhereToGo</a></li>
-					<li><a href="Career.html">Career</a></li>
-					<li><a href="About.html">AboutUs</a></li>
-				</ul>
-			</div>
+				<div class="nav-wrapper container"><a id="logo-container" href="Index.html" class="brand-logo">TosGo</a>
+					<ul id="nav-mobile" class="right hide-on-med-and-down nav-ul">
+						<li><a href="Index.html">Home</a></li>
+						<li><a href="Travel.html">WhereToGo</a></li>
+						<li><a href="Career.html">Career</a></li>
+						<li><a href="About.html">AboutUs</a></li>
+					</ul>
+				</div>
 		</nav>
-	</div>
+		</div>
 
-	<img src="./img/gallery/Kratie/Kratie2.jpg" width="100%" height="588">
-	<div class="cotaniner">
-		<center>
-			<div class="title">
-				ខេត្តក្រចេះ
-			</div>
-		</center>
-		<img src="./img/gallery/Kratie/1524801291678.jpg" width="50%" align="right" hspace="30">
-		<p>&emsp;&emsp;ក្រចេះគឺជាខេត្តមួយក្នុងប្រទេសកម្ពុជា។ ក្រុងរបស់ខេត្តមានឈ្មោះថា ក្រចេះដែលជាទីរួមខេត្ត។ ក្រចេះគឺជាខេត្តតូចមួយតែគួរឲ្យចាប់ចិត្ត សិ្ថតនៅប៉ែកឦសាននៃ រាជធានី ភំ្នពេញ។ វាមានព្រំប្រទល់ជាប់នឹងស្ទឹងត្រែងនៅភាគខាងជើង មណ្ឌលគីរីនៅខាងកើត កំពង់ធំ និង កំពង់ចាមនៅខាងលិច
-			ហើយត្បូងឃ្មុំ និងវៀតណាមនៅខាងត្បូង។ មានផ្លូវគមនាគមន៍តភ្ជាប់ ៣ខែ្ស គឺផ្លូវជាតិលេខ៧ ចម្ងាយ ៣៤0 គីឡូម៉ែត្រ ផ្លូវលំក្រាលក្រួសក្រហម កាត់ស្រុកតំបែរ-ស្រុកឆ្លូង មួយខែ្ស និងតាមមាត់ទនេ្លមួយខែ្សទៀត មានចម្ងាយប្រហាក់ប្រហែល នឹងផ្លូវទឹកទនេ្លមេគង្គ ២២០ គីឡូម៉ែត្រ។
-			ការធ្វើដំណើរ ទោះបីតាមរថយន្តកី្ត តាមកាណូតលឿនកី្ត មិនលើសពី ៥ម៉ោងទេ ពិតជាបានមកដល់ក្រុងក្រចេះដោយសុវតិ្ថភាព។ <br> &emsp;&emsp;ខេត្តក្រចេះ សម្បូរដោយធនធានធម្មជាតិ នៅលើដី មានព្រៃព្រឹក្សា វាលស្រែ ដីមានជីជាតិ នៅក្នុងទឹកសម្បូរដោយត្រី ពិសេសមេពូជត្រីធំៗ នៅតាមអន្លង់មេគង្គ
-			ក្នុងស្រុកសំបូរ និងមានសត្វផ្សោតទឹកសាប ដែលទាក់ទាញភ្ញៀវ ទេសចរជាតិ និងអន្តរជាតិ។ ក្រៅពីនេះ នៅមានទេសភាព ដ៏ស្រស់សោភ័ណ ថៃ្ងលិចគងព្រៃកោះទ្រង់ដ៏ស្អាត គួរឱ្យចង់ទស្សនាទៀតផង។ ទាំងអស់ដែលបានបរិយាយចោះៗ ខាងលើ ធ្វើឲ្យខេត្តក្រចេះមានកំណើនភ្ញៀវទេសចរណ៍ទេ្វដងក្នុង មួយឆ្នាំៗ។
-			កត្តាទាំងនេះបាន ចង្អុលឲ្យខេត្តក្រចេះជ្រើសរើសយក វិស័យទេសចរណ៍ ជាវិស័យអាទិភាពក្នុងកិច្ចការស្តារ និងអភិវឌ្ឍសេដ្ឋកិច្ច ទោះតាមរយៈចំណូលដោយផ្ទាល់កី្ត ដោយប្រយោលកី្ត ក៏វិស័យទេសចរណ៍បានកំពុងជំរុញយ៉ាងស្វាហាប់ ដើម្បីធ្វើជាឧបករណ៍វិជ្ជមានមួយក្នុងការកាត់បន្ថយភាពក្រីក្រ
-			បង្កើនការងារសម្រាប់ប្រជាពលរដ្ឋ ជាង ២៨ ម៉ឺននាក់ នៅខេត្តក្រចេះ។ <br><br><br><br>
-			<img src="./img/gallery/Kratie/dophin-in-kratie-province.jpg" height="500" width="500" align="left" hspace="30"><br>
-			<font face="Khmer OS Muol Light" color="#00a680" size="6">
-				&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp; រមណីយដ្ឋា​ន​អន្លង់​ផ្សោត
-			</font>
-			<p>&emsp;&emsp;ក្រចេះជាខេត្តមួយដែលមានកន្លែងទេសចរណ៍កួរឲ្យទាក់ទាញភ្ញៀវទេសចរណ៍មានដូចជា រម្នីយដ្ឋានព្រែកកាំពី ដែលមានសត្វផ្សោតទឹកសាបដ៍កម្រនៅលើពីភពលោក ​ទោះបីជាកំណាត់​ផ្លូវ​ក្រាល​​កៅស៊ូ​មួយ​ខ្សែ​ ឆ្ពោះ​​ទៅ​រមណីយដ្ឋា​ន​អន្លង់​ផ្សោត ​​រមណីយដ្ឋាន​​កាំពី​ និងវត្ត​​សសរ​​មួួយ​រយ​​​​
-				មាន​លក្ខណៈ​​តូច​ចង្អៀត​​ក្តី​ ក៏ប្រជាពលរដ្ឋ​ ភ្ញៀវ​​ទេ​ស​ចរ​​ជាតិ​ និងអន្តរជាតិ​ នៅតែព្យាយាម​​ធ្វើ​​ដំណើរ​ទៅទស្សនា​កំសាន្ត​ តាម​​​មធ្យោ​បាយ ​​រៀងៗ​ខ្លួន​ដែរ​ ព្រោះ​ថា​ជាផ្លូវសំខាន់​​ហើយ​តែង​មាន​សភាព​កុះករ​ក្នុង​ពេល​​មានបុណ្យទាន​ម្តងៗ។ <br> &emsp;&emsp;នាឱកាស​បុណ្យ​ចូលឆ្នាំ​​
-				គេ​ឃើញ​​ភ្ញៀវ​ទេសចរ​ជាតិ​និងអន្តរជាតិ​​ធ្វើដំណើរលើ​កំណាត់​ផ្លូវ​ក្រាល​កៅស៊ូ​​នេះ​ឆ្ពោះ​ទៅ​កាន់​​រមណីយ​ដ្ឋាន​អន្លង់​ផ្សោត ​រមណីយ​ដ្ឋាន​​កាំពី​ និង​វត្ត​សសរ​១០០​​ វត្តភ្នំសំបុក ភ្នំសុពណ៌កាឡី សួនស្នេហ៍ថ្មបាំង ព្រមទាំងទិញ ក្រូចកោះទ្រង់ ក្រឡានថ្មគ្រែ និង
-				វត្ថុអនុស្សារីយន៍ ជាច្រើនទៀត ថ្វីដ្បិត​សភាព​​ផ្លូវ​​មាន​លក្ខណៈ​​តូច​ចង្អៀតនិង​​​ជិះ​ប្រជ្រៀត​គ្នា​យ៉ាងណា​ក៏ដោយ ក៏នៅតែមានមនុស្សជាច្រើនធ្វើដំណើរទៅលេងកំសាន្តយ៉ាងច្រើនគ្មានពេលល ទីផ្សារ។
-			</p>
-			<img src="./img/gallery/Kratie/cambodia-travels-kratie.jpg" height="400" align="right" hspace="30"> <br><br><br><br>
-			<font face="Khmer OS Muol Light" size="6" color="#00a680">
-				&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;រម្នីយដ្ឋានព្រែកកាំពី
-			</font>
-			<font face="Khmer OS Freehand" size="4">
+		<img src="./img/gallery/Kratie/Kratie2.jpg" width="100%" height="588">
+		<div class="cotaniner">
+			<center>
+				<div class="title">
+					ខេត្តក្រចេះ
+				</div>
+			</center>
+			<img src="./img/gallery/Kratie/1524801291678.jpg" width="50%" align="right" hspace="30">
+			<p>&emsp;&emsp;ក្រចេះគឺជាខេត្តមួយក្នុងប្រទេសកម្ពុជា។ ក្រុងរបស់ខេត្តមានឈ្មោះថា ក្រចេះដែលជាទីរួមខេត្ត។ ក្រចេះគឺជាខេត្តតូចមួយតែគួរឲ្យចាប់ចិត្ត សិ្ថតនៅប៉ែកឦសាននៃ រាជធានី ភំ្នពេញ។ វាមានព្រំប្រទល់ជាប់នឹងស្ទឹងត្រែងនៅភាគខាងជើង មណ្ឌលគីរីនៅខាងកើត កំពង់ធំ និង កំពង់ចាមនៅខាងលិច
+				ហើយត្បូងឃ្មុំ និងវៀតណាមនៅខាងត្បូង។ មានផ្លូវគមនាគមន៍តភ្ជាប់ ៣ខែ្ស គឺផ្លូវជាតិលេខ៧ ចម្ងាយ ៣៤0 គីឡូម៉ែត្រ ផ្លូវលំក្រាលក្រួសក្រហម កាត់ស្រុកតំបែរ-ស្រុកឆ្លូង មួយខែ្ស និងតាមមាត់ទនេ្លមួយខែ្សទៀត មានចម្ងាយប្រហាក់ប្រហែល នឹងផ្លូវទឹកទនេ្លមេគង្គ ២២០ គីឡូម៉ែត្រ។
+				ការធ្វើដំណើរ ទោះបីតាមរថយន្តកី្ត តាមកាណូតលឿនកី្ត មិនលើសពី ៥ម៉ោងទេ ពិតជាបានមកដល់ក្រុងក្រចេះដោយសុវតិ្ថភាព។ <br> &emsp;&emsp;ខេត្តក្រចេះ សម្បូរដោយធនធានធម្មជាតិ នៅលើដី មានព្រៃព្រឹក្សា វាលស្រែ ដីមានជីជាតិ នៅក្នុងទឹកសម្បូរដោយត្រី ពិសេសមេពូជត្រីធំៗ នៅតាមអន្លង់មេគង្គ
+				ក្នុងស្រុកសំបូរ និងមានសត្វផ្សោតទឹកសាប ដែលទាក់ទាញភ្ញៀវ ទេសចរជាតិ និងអន្តរជាតិ។ ក្រៅពីនេះ នៅមានទេសភាព ដ៏ស្រស់សោភ័ណ ថៃ្ងលិចគងព្រៃកោះទ្រង់ដ៏ស្អាត គួរឱ្យចង់ទស្សនាទៀតផង។ ទាំងអស់ដែលបានបរិយាយចោះៗ ខាងលើ ធ្វើឲ្យខេត្តក្រចេះមានកំណើនភ្ញៀវទេសចរណ៍ទេ្វដងក្នុង មួយឆ្នាំៗ។
+				កត្តាទាំងនេះបាន ចង្អុលឲ្យខេត្តក្រចេះជ្រើសរើសយក វិស័យទេសចរណ៍ ជាវិស័យអាទិភាពក្នុងកិច្ចការស្តារ និងអភិវឌ្ឍសេដ្ឋកិច្ច ទោះតាមរយៈចំណូលដោយផ្ទាល់កី្ត ដោយប្រយោលកី្ត ក៏វិស័យទេសចរណ៍បានកំពុងជំរុញយ៉ាងស្វាហាប់ ដើម្បីធ្វើជាឧបករណ៍វិជ្ជមានមួយក្នុងការកាត់បន្ថយភាពក្រីក្រ
+				បង្កើនការងារសម្រាប់ប្រជាពលរដ្ឋ ជាង ២៨ ម៉ឺននាក់ នៅខេត្តក្រចេះ។ <br><br><br><br>
+				<img src="./img/gallery/Kratie/dophin-in-kratie-province.jpg" height="500" width="500" align="left" hspace="30"><br>
+				<font face="Khmer OS Muol Light" color="#00a680" size="6">
+					&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp; រមណីយដ្ឋា​ន​អន្លង់​ផ្សោត
+				</font>
 				<p>&emsp;&emsp;ក្រចេះជាខេត្តមួយដែលមានកន្លែងទេសចរណ៍កួរឲ្យទាក់ទាញភ្ញៀវទេសចរណ៍មានដូចជា រម្នីយដ្ឋានព្រែកកាំពី ដែលមានសត្វផ្សោតទឹកសាបដ៍កម្រនៅលើពីភពលោក ​ទោះបីជាកំណាត់​ផ្លូវ​ក្រាល​​កៅស៊ូ​មួយ​ខ្សែ​ ឆ្ពោះ​​ទៅ​រមណីយដ្ឋា​ន​អន្លង់​ផ្សោត ​​រមណីយដ្ឋាន​​កាំពី​ និងវត្ត​​សសរ​​មួួយ​រយ​​​​
-					មាន​លក្ខណៈ​​តូច​ចង្អៀត​​ក្តី​ ក៏ប្រជាពលរដ្ឋ​ ភ្ញៀវ​​ទេ​ស​ចរ​​ជាតិ​ និងអន្តរជាតិ​ នៅតែព្យាយាម​​ធ្វើ​​ដំណើរ​ទៅទស្សនា​កំសាន្ត​ តាម​​​មធ្យោ​បាយ ​​រៀងៗ​ខ្លួន​ដែរ​ ព្រោះ​ថា​ជាផ្លូវសំខាន់​​ហើយ​តែង​មាន​សភាព​កុះករ​ក្នុង​ពេល​​មានបុណ្យទាន​ម្តងៗ។ នាឱកាស​បុណ្យ​ចូលឆ្នាំ​​
-					គេ​ឃើញ​​ភ្ញៀវ​ទេសចរ​ជាតិ​និងអន្តរជាតិ​​ធ្វើដំណើរ លើ​កំណាត់​ផ្លូវ​ក្រាល​កៅស៊ូ​​នេះ​ឆ្ពោះ​ទៅ​កាន់​​រមណីយ​ដ្ឋាន​អន្លង់​ផ្សោត ​រមណីយ​ដ្ឋាន​​កាំពី​ និង​វត្ត​សសរ​១០០​​ វត្តភ្នំសំបុក ភ្នំសុពណ៌កាឡី សួនស្នេហ៍ថ្មបាំង ព្រមទាំងទិញ ក្រូចកោះទ្រង់ ក្រឡានថ្មគ្រែ
-					និង វត្ថុអនុស្សារីយន៍ ជាច្រើនទៀត ថ្វីដ្បិត​សភាព​​ផ្លូវ​​មាន​លក្ខណៈ​​តូច​ចង្អៀតនិង​​​ជិះ​ប្រជ្រៀត​គ្នា​យ៉ាងណា​ក៏ដោយ ក៏នៅតែមានមនុស្សជាច្រើនធ្វើដំណើរទៅលេងកំសាន្តយ៉ាងច្រើន។
+					មាន​លក្ខណៈ​​តូច​ចង្អៀត​​ក្តី​ ក៏ប្រជាពលរដ្ឋ​ ភ្ញៀវ​​ទេ​ស​ចរ​​ជាតិ​ និងអន្តរជាតិ​ នៅតែព្យាយាម​​ធ្វើ​​ដំណើរ​ទៅទស្សនា​កំសាន្ត​ តាម​​​មធ្យោ​បាយ ​​រៀងៗ​ខ្លួន​ដែរ​ ព្រោះ​ថា​ជាផ្លូវសំខាន់​​ហើយ​តែង​មាន​សភាព​កុះករ​ក្នុង​ពេល​​មានបុណ្យទាន​ម្តងៗ។ <br> &emsp;&emsp;នាឱកាស​បុណ្យ​ចូលឆ្នាំ​​
+					គេ​ឃើញ​​ភ្ញៀវ​ទេសចរ​ជាតិ​និងអន្តរជាតិ​​ធ្វើដំណើរលើ​កំណាត់​ផ្លូវ​ក្រាល​កៅស៊ូ​​នេះ​ឆ្ពោះ​ទៅ​កាន់​​រមណីយ​ដ្ឋាន​អន្លង់​ផ្សោត ​រមណីយ​ដ្ឋាន​​កាំពី​ និង​វត្ត​សសរ​១០០​​ វត្តភ្នំសំបុក ភ្នំសុពណ៌កាឡី សួនស្នេហ៍ថ្មបាំង ព្រមទាំងទិញ ក្រូចកោះទ្រង់ ក្រឡានថ្មគ្រែ
+					និង វត្ថុអនុស្សារីយន៍ ជាច្រើនទៀត ថ្វីដ្បិត​សភាព​​ផ្លូវ​​មាន​លក្ខណៈ​​តូច​ចង្អៀតនិង​​​ជិះ​ប្រជ្រៀត​គ្នា​យ៉ាងណា​ក៏ដោយ ក៏នៅតែមានមនុស្សជាច្រើនធ្វើដំណើរទៅលេងកំសាន្តយ៉ាងច្រើនគ្មានពេលល ទីផ្សារ។
 				</p>
+				<img src="./img/gallery/Kratie/cambodia-travels-kratie.jpg" height="400" align="right" hspace="30"> <br><br><br><br>
+				<font face="Khmer OS Muol Light" size="6" color="#00a680">
+					&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;រម្នីយដ្ឋានព្រែកកាំពី
+				</font>
+				<font face="Khmer OS Freehand" size="4">
+					<p>&emsp;&emsp;ក្រចេះជាខេត្តមួយដែលមានកន្លែងទេសចរណ៍កួរឲ្យទាក់ទាញភ្ញៀវទេសចរណ៍មានដូចជា រម្នីយដ្ឋានព្រែកកាំពី ដែលមានសត្វផ្សោតទឹកសាបដ៍កម្រនៅលើពីភពលោក ​ទោះបីជាកំណាត់​ផ្លូវ​ក្រាល​​កៅស៊ូ​មួយ​ខ្សែ​ ឆ្ពោះ​​ទៅ​រមណីយដ្ឋា​ន​អន្លង់​ផ្សោត ​​រមណីយដ្ឋាន​​កាំពី​ និងវត្ត​​សសរ​​មួួយ​រយ​​​​
+						មាន​លក្ខណៈ​​តូច​ចង្អៀត​​ក្តី​ ក៏ប្រជាពលរដ្ឋ​ ភ្ញៀវ​​ទេ​ស​ចរ​​ជាតិ​ និងអន្តរជាតិ​ នៅតែព្យាយាម​​ធ្វើ​​ដំណើរ​ទៅទស្សនា​កំសាន្ត​ តាម​​​មធ្យោ​បាយ ​​រៀងៗ​ខ្លួន​ដែរ​ ព្រោះ​ថា​ជាផ្លូវសំខាន់​​ហើយ​តែង​មាន​សភាព​កុះករ​ក្នុង​ពេល​​មានបុណ្យទាន​ម្តងៗ។ នាឱកាស​បុណ្យ​ចូលឆ្នាំ​​
+						គេ​ឃើញ​​ភ្ញៀវ​ទេសចរ​ជាតិ​និងអន្តរជាតិ​​ធ្វើដំណើរ លើ​កំណាត់​ផ្លូវ​ក្រាល​កៅស៊ូ​​នេះ​ឆ្ពោះ​ទៅ​កាន់​​រមណីយ​ដ្ឋាន​អន្លង់​ផ្សោត ​រមណីយ​ដ្ឋាន​​កាំពី​ និង​វត្ត​សសរ​១០០​​ វត្តភ្នំសំបុក ភ្នំសុពណ៌កាឡី សួនស្នេហ៍ថ្មបាំង ព្រមទាំងទិញ ក្រូចកោះទ្រង់ ក្រឡានថ្មគ្រែ
+						និង វត្ថុអនុស្សារីយន៍ ជាច្រើនទៀត ថ្វីដ្បិត​សភាព​​ផ្លូវ​​មាន​លក្ខណៈ​​តូច​ចង្អៀតនិង​​​ជិះ​ប្រជ្រៀត​គ្នា​យ៉ាងណា​ក៏ដោយ ក៏នៅតែមានមនុស្សជាច្រើនធ្វើដំណើរទៅលេងកំសាន្តយ៉ាងច្រើន។
+					</p>
 
-				<img src="./img/gallery/Kratie/Cham_basket_weavers_Kratie.jpg" height="400" align="right" hspace="30">
-				<font face="Khmer OS Muol Light" size="6" color="#00a680">
-					&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;វត្ថុអនុស្សារីយន៍
-				</font>
-				<p>&emsp;&emsp;អ្នករស់នៅអចិន្ត្រៃយ៍នៅខេត្តក្រចេះភាគច្រើនគឺជាកសិករ រឺ អ្នកនេសាទចិញ្ចឹមពោះ។ ៧៨ % នៃពួកគាត់ជាអ្នកមានការងារក្នុងវិស័យកសិកម្ម។ សាមសិបភាគរយនៃគ្រួសារដែលនៅខេត្តក្រចេះរកបានតិចជាង ១ $ ស.រ ក្នុងមួយថ្ងៃ អត្រាភាពក្រីក្ររបស់ខេត្តគឺ ៣២ % យ៉ាងណាក៏វានៅតែទាបជាងមធ្យមភាគជាតិដែលមានកំរិត
-					៣៩ %។ ការជីករករ៉ែមាសមួយភាគមាននៅក្នុងខេត្តក្រចេះ។ ដីភាគច្រើននៅខេត្តក្រចេះមិនសូវមានជីជាតិទេ ខេត្តនេះកាលពីដំបូងដាំដំណាំឧស្សាហកម្មដែលរស់បានយូរឆ្នាំដូចជាកៅស៊ូ។ ការកាប់ព្រៃឈើខុសច្បាប់បានត្រួតពិនិត្យដោយអ្នករដ្ឋការខេត្តគឺជាបញ្ហាមួយ។ ក្រចេះមានសក្ដានុពលជាគោលដៅបរិស្ថានទេសចរណ៍
-					(អេកូទេសចរណ៍)។ ប្រព័ន្ធផ្លូវគមនាគមន៍ក្រចេះមានការអភិវឌ្ឍតិចតួច។ កាលពីឆ្នាំ ១៩៩៨ គ្រួសារជាមធ្យមមានផ្ទៃដីកសិកម្ម ០,៤៨ ហិកតា និង ៣៧ % ទៀតគ្មានដីប្រើប្រាស់ឡើយ។
-				</p>
-				<img src="./img/gallery/Kratie/300px-Kratie_sunset2.jpg" height="300" align="left" hspace="30">
-				<font face="Khmer OS Muol Light" size="6" color="#00a680">
-					&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;ថ្ងៃលិចនៅខេត្តក្រចេះ
-				</font>
-				<p>
-					&emsp;&emsp;ខេត្តនេះបានគ្របដណ្ដប់ភាគច្រើនបំផុតដោយព្រៃយ៉ាងក្រាស់។មានអាកាសធាតុខ្យល់រដូវ ដែលមានរដូវរងារចាប់ពីខែ វិច្ឆិកា ទៅដល់ មីនា រដូវក្ដៅចាប់ពីខែ មីនា ទៅដល់ ខែឧសភា និងរដូវវស្សាចាប់ពីខែ ឧសភា ដល់ តុលា។[១៧] មានទឹកជំនន់ជានិច្ចជាកាលនៅខេត្តក្រចេះ ទន្លេមេគង្គអាចមានទឹកហូរកាត់លើសលប់ខ្លាំងស្មើនឹង
-					៤ ម កំឡុងរដូវវស្សា។ក្រចេះត្រូវបានគេស្គាល់ដោយទស្សនីយភាពមាត់ទន្លេគួរឱ្យទាក់ទាញ និង ភូមិស្រុក ហើយនិងវាលស្រែដ៏ខៀវស្រងាត់។ ព្រៃឈើនៅក្រចេះប្រែទៅជាស្រឡះ និងមានកម្រាស់តិចជាងទីកន្លែងផ្សេងទៀតនៅក្នុងប្រទេសកម្ពុជា ដែលព្រៃទាំងនោះបានក្លាយជាដើមឈើរុះរោយ ជ្រុះស្លឹកកំឡុងរដូវប្រាំង។
-				</p><br>
-				<!-- Footer -->
-				<center>
-					<footer>
-						<div class="foot_logo">
-							<a href="index.html">TosGo</a>
-						</div>
-						<p class="Term_of_Use">&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&ensp;&ensp;2018 TosGo LLC All rights reserved. Terms of Use | Privacy Policy | Site Map</p>
-						<a href="#" class="feed_back">feedback@TosGo.com</a>
-					</footer>
-				</center>
-	</div>
+					<img src="./img/gallery/Kratie/Cham_basket_weavers_Kratie.jpg" height="400" align="right" hspace="30">
+					<font face="Khmer OS Muol Light" size="6" color="#00a680">
+						&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;វត្ថុអនុស្សារីយន៍
+					</font>
+					<p>&emsp;&emsp;អ្នករស់នៅអចិន្ត្រៃយ៍នៅខេត្តក្រចេះភាគច្រើនគឺជាកសិករ រឺ អ្នកនេសាទចិញ្ចឹមពោះ។ ៧៨ % នៃពួកគាត់ជាអ្នកមានការងារក្នុងវិស័យកសិកម្ម។ សាមសិបភាគរយនៃគ្រួសារដែលនៅខេត្តក្រចេះរកបានតិចជាង ១ $ ស.រ ក្នុងមួយថ្ងៃ អត្រាភាពក្រីក្ររបស់ខេត្តគឺ ៣២ % យ៉ាងណាក៏វានៅតែទាបជាងមធ្យមភាគជាតិដែលមានកំរិត
+						៣៩ %។ ការជីករករ៉ែមាសមួយភាគមាននៅក្នុងខេត្តក្រចេះ។ ដីភាគច្រើននៅខេត្តក្រចេះមិនសូវមានជីជាតិទេ ខេត្តនេះកាលពីដំបូងដាំដំណាំឧស្សាហកម្មដែលរស់បានយូរឆ្នាំដូចជាកៅស៊ូ។ ការកាប់ព្រៃឈើខុសច្បាប់បានត្រួតពិនិត្យដោយអ្នករដ្ឋការខេត្តគឺជាបញ្ហាមួយ។ ក្រចេះមានសក្ដានុពលជាគោលដៅបរិស្ថានទេសចរណ៍
+						(អេកូទេសចរណ៍)។ ប្រព័ន្ធផ្លូវគមនាគមន៍ក្រចេះមានការអភិវឌ្ឍតិចតួច។ កាលពីឆ្នាំ ១៩៩៨ គ្រួសារជាមធ្យមមានផ្ទៃដីកសិកម្ម ០,៤៨ ហិកតា និង ៣៧ % ទៀតគ្មានដីប្រើប្រាស់ឡើយ។
+					</p>
+					<img src="./img/gallery/Kratie/300px-Kratie_sunset2.jpg" height="300" align="left" hspace="30">
+					<font face="Khmer OS Muol Light" size="6" color="#00a680">
+						&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;ថ្ងៃលិចនៅខេត្តក្រចេះ
+					</font>
+					<p>
+						&emsp;&emsp;ខេត្តនេះបានគ្របដណ្ដប់ភាគច្រើនបំផុតដោយព្រៃយ៉ាងក្រាស់។មានអាកាសធាតុខ្យល់រដូវ ដែលមានរដូវរងារចាប់ពីខែ វិច្ឆិកា ទៅដល់ មីនា រដូវក្ដៅចាប់ពីខែ មីនា ទៅដល់ ខែឧសភា និងរដូវវស្សាចាប់ពីខែ ឧសភា ដល់ តុលា។[១៧] មានទឹកជំនន់ជានិច្ចជាកាលនៅខេត្តក្រចេះ ទន្លេមេគង្គអាចមានទឹកហូរកាត់លើសលប់ខ្លាំងស្មើនឹង
+						៤ ម កំឡុងរដូវវស្សា។ក្រចេះត្រូវបានគេស្គាល់ដោយទស្សនីយភាពមាត់ទន្លេគួរឱ្យទាក់ទាញ និង ភូមិស្រុក ហើយនិងវាលស្រែដ៏ខៀវស្រងាត់។ ព្រៃឈើនៅក្រចេះប្រែទៅជាស្រឡះ និងមានកម្រាស់តិចជាងទីកន្លែងផ្សេងទៀតនៅក្នុងប្រទេសកម្ពុជា ដែលព្រៃទាំងនោះបានក្លាយជាដើមឈើរុះរោយ ជ្រុះស្លឹកកំឡុងរដូវប្រាំង។
+					</p><br>
+					<!-- Footer -->
+					<center>
+						<footer>
+							<div class="foot_logo">
+								<a href="Index.html">TosGo</a>
+							</div>
+							<p class="Term_of_Use">&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&ensp;&ensp;2018 TosGo LLC All rights reserved. Terms of Use | Privacy Policy | Site Map</p>
+							<a href="#" class="feed_back">feedback@TosGo.com</a>
+						</footer>
+					</center>
+		</div>
 </body>
 
 </html>
