--- a/Tailor.html
+++ b/Tailor.html
@@ -11,32 +11,32 @@
   <div class="navbar-fixed">
     <nav>
       <div class="nav-wrapper mycolor">
-        <a href="Index.html" class="brand-logo">TosGo</a>
-        <ul id="nav-mobile" class="right hide-on-med-and-down nav-ul">
-          <li><a href="Index.html">Home</a></li>
-          <li><a href="Travel.html">WhereToGo</a></li>
-          <li><a href="Career.html">Career</a></li>
-          <li><a href="About.html">AboutUs</a></li>
-        </ul>
-      </div>
+        <div class="nav-wrapper container"><a id="logo-container" href="Index.html" class="brand-logo">TosGo</a>
+          <ul id="nav-mobile" class="right hide-on-med-and-down nav-ul">
+            <li><a href="Index.html">Home</a></li>
+            <li><a href="Travel.html">WhereToGo</a></li>
+            <li><a href="Career.html">Career</a></li>
+            <li><a href="About.html">AboutUs</a></li>
+          </ul>
+        </div>
     </nav>
-  </div>
+    </div>
 
-  <center>
+    <center>
+      <br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+      <h2>Coming Soon ...</h2>
+    </center>
     <br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-    <h2>Coming Soon ...</h2>
-  </center>
-  <br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-  <!-- Footer -->
-  <center>
-    <footer>
-      <div class="foot_logo">
-        <a href="index.html">TosGo</a>
-      </div>
-      <p>&emsp;&emsp;2018 TosGo LLC All rights reserved. Terms of Use | Privacy Policy | Site Map</p>
-      <a href="#" class="feed_back">feedback@TosGo.com</a>
-    </footer>
-  </center>
+    <!-- Footer -->
+    <center>
+      <footer>
+        <div class="foot_logo">
+          <a href="Index.html">TosGo</a>
+        </div>
+        <p>&emsp;&emsp;2018 TosGo LLC All rights reserved. Terms of Use | Privacy Policy | Site Map</p>
+        <a href="#" class="feed_back">feedback@TosGo.com</a>
+      </footer>
+    </center>
 </body>
 
 </html>
